Fixed latex tables and images of classification metrics according to number of clusters.

--- a/results/latex/contraceptive.tex
+++ b/results/latex/contraceptive.tex
@@ -1,49 +1,51 @@
 \begin{table}[ht]
     \centering
+    \caption{Ablation study results for the contraceptive dataset. Columns Clust. Sel.(1), Clf. Self.(2), Feats.\%(3) and Fusion(4) denote, respectively, the clustering evaluation metric, method for base classifier selection, percentage of features and the ensemble fusion strategy. It presents 5 different classification metrics and the average number of clusters. Numbers in parentheses indicate one standard deviation and apply to the last significant digit of each value.}
+    \label{tab:ablation_contraceptive}
     \resizebox{\textwidth}{!}{
-    \begin{tabular}{llllllllll}
+    \begin{tabular}{lccccllllll}
     \toprule
-    & \textbf{Clusters(1)} & \textbf{Clf(2)} & \textbf{\%(3)} & \textbf{Fusion(4)} & \textbf{Accuracy} & \textbf{Recall} & \textbf{Precision} & \textbf{F1-Score} & \textbf{AUC} \\ \midrule
-    0 & - & - & 100 & Voting & 0.38 $\pm$ 0.03 & 0.38 $\pm$ 0.03 & 0.46 $\pm$ 0.05 & 0.4 $\pm$ 0.04 & 0.52 $\pm$ 0.04 \\
-    1 & DBC & - & 100 & Voting & 0.41 $\pm$ 0.05 & 0.41 $\pm$ 0.05 & 0.53 $\pm$ 0.07 & 0.43 $\pm$ 0.05 & 0.6 $\pm$ 0.03 \\
-    1 & Rand & - & 100 & Voting & 0.38 $\pm$ 0.03 & 0.38 $\pm$ 0.03 & 0.53 $\pm$ 0.05 & 0.41 $\pm$ 0.03 & 0.59 $\pm$ 0.03 \\
-    1 & DBC+R & - & 100 & Voting & 0.42 $\pm$ 0.05 & 0.42 $\pm$ 0.05 & 0.54 $\pm$ 0.06 & 0.44 $\pm$ 0.05 & 0.61 $\pm$ 0.03 \\
-    2 & - & Crossval & 100 & Voting & 0.51 $\pm$ 0.03 & 0.51 $\pm$ 0.03 & 0.54 $\pm$ 0.05 & 0.52 $\pm$ 0.04 & 0.64 $\pm$ 0.03 \\
-    2 & - & PSO & 100 & Voting & 0.54 $\pm$ 0.05 & 0.54 $\pm$ 0.05 & 0.58 $\pm$ 0.08 & 0.55 $\pm$ 0.05 & 0.68 $\pm$ 0.04 \\
-    3 & - & - & 75 & Voting & 0.38 $\pm$ 0.05 & 0.38 $\pm$ 0.05 & 0.47 $\pm$ 0.09 & 0.4 $\pm$ 0.06 & 0.53 $\pm$ 0.05 \\
-    3 & - & - & 50 & Voting & 0.39 $\pm$ 0.06 & 0.39 $\pm$ 0.06 & 0.46 $\pm$ 0.1 & 0.41 $\pm$ 0.07 & 0.54 $\pm$ 0.06 \\
-    4 & - & - & 100 & Weighted & 0.41 $\pm$ 0.02 & 0.41 $\pm$ 0.02 & 0.5 $\pm$ 0.06 & 0.45 $\pm$ 0.03 & 0.5 $\pm$ 0.03 \\
-    4 & - & - & 100 & Meta & 0.46 $\pm$ 0.03 & 0.46 $\pm$ 0.03 & 0.5 $\pm$ 0.07 & 0.47 $\pm$ 0.04 & 0.64 $\pm$ 0.02 \\
-    123 & DBC & Crossval & 75 & Voting & 0.48 $\pm$ 0.03 & 0.48 $\pm$ 0.03 & 0.56 $\pm$ 0.06 & 0.51 $\pm$ 0.03 & 0.63 $\pm$ 0.02 \\
-    123 & Rand & Crossval & 75 & Voting & 0.49 $\pm$ 0.03 & 0.49 $\pm$ 0.03 & 0.55 $\pm$ 0.04 & 0.51 $\pm$ 0.03 & 0.63 $\pm$ 0.02 \\
-    123 & DBC+R & Crossval & 75 & Voting & 0.47 $\pm$ 0.03 & 0.47 $\pm$ 0.03 & 0.57 $\pm$ 0.06 & 0.5 $\pm$ 0.03 & 0.62 $\pm$ 0.02 \\
-    123 & DBC & Crossval & 50 & Voting & 0.48 $\pm$ 0.04 & 0.48 $\pm$ 0.04 & 0.58 $\pm$ 0.06 & 0.51 $\pm$ 0.04 & 0.63 $\pm$ 0.02 \\
-    123 & Rand & Crossval & 50 & Voting & 0.48 $\pm$ 0.03 & 0.48 $\pm$ 0.03 & 0.56 $\pm$ 0.05 & 0.51 $\pm$ 0.04 & 0.63 $\pm$ 0.02 \\
-    123 & DBC+R & Crossval & 50 & Voting & 0.47 $\pm$ 0.03 & 0.47 $\pm$ 0.03 & 0.59 $\pm$ 0.06 & 0.51 $\pm$ 0.03 & 0.62 $\pm$ 0.03 \\
-    124 & DBC & Crossval & 100 & Weighted & 0.52 $\pm$ 0.04 & 0.52 $\pm$ 0.04 & 0.54 $\pm$ 0.05 & 0.52 $\pm$ 0.04 & 0.64 $\pm$ 0.03 \\
-    124 & Rand & Crossval & 100 & Weighted & 0.51 $\pm$ 0.04 & 0.51 $\pm$ 0.04 & 0.53 $\pm$ 0.05 & 0.51 $\pm$ 0.04 & 0.64 $\pm$ 0.03 \\
-    124 & DBC+R & Crossval & 100 & Weighted & 0.51 $\pm$ 0.04 & 0.51 $\pm$ 0.04 & 0.53 $\pm$ 0.05 & 0.52 $\pm$ 0.04 & 0.63 $\pm$ 0.03 \\
-    124 & DBC & Crossval & 100 & Meta & 0.52 $\pm$ 0.03 & 0.52 $\pm$ 0.03 & 0.54 $\pm$ 0.04 & 0.52 $\pm$ 0.03 & 0.69 $\pm$ 0.03 \\
-    124 & Rand & Crossval & 100 & Meta & 0.51 $\pm$ 0.03 & 0.51 $\pm$ 0.03 & 0.53 $\pm$ 0.04 & 0.52 $\pm$ 0.03 & 0.69 $\pm$ 0.03 \\
-    124 & DBC+R & Crossval & 100 & Meta & 0.51 $\pm$ 0.03 & 0.51 $\pm$ 0.03 & 0.53 $\pm$ 0.04 & 0.52 $\pm$ 0.03 & 0.69 $\pm$ 0.03 \\
-    124 & DBC & PSO & 100 & Weighted & 0.51 $\pm$ 0.04 & 0.51 $\pm$ 0.04 & 0.53 $\pm$ 0.05 & 0.52 $\pm$ 0.04 & 0.65 $\pm$ 0.04 \\
-    124 & Rand & PSO & 100 & Weighted & 0.51 $\pm$ 0.04 & 0.51 $\pm$ 0.04 & 0.53 $\pm$ 0.06 & 0.51 $\pm$ 0.04 & 0.67 $\pm$ 0.04 \\
-    124 & DBC+R & PSO & 100 & Weighted & 0.52 $\pm$ 0.04 & 0.52 $\pm$ 0.04 & 0.55 $\pm$ 0.06 & 0.52 $\pm$ 0.04 & 0.66 $\pm$ 0.04 \\
-    124 & DBC & PSO & 100 & Meta & 0.54 $\pm$ 0.05 & 0.54 $\pm$ 0.05 & 0.56 $\pm$ 0.06 & 0.55 $\pm$ 0.05 & 0.71 $\pm$ 0.03 \\
-    124 & Rand & PSO & 100 & Meta & 0.54 $\pm$ 0.04 & 0.54 $\pm$ 0.04 & 0.58 $\pm$ 0.05 & 0.55 $\pm$ 0.04 & 0.71 $\pm$ 0.03 \\
-    124 & DBC+R & PSO & 100 & Meta & 0.53 $\pm$ 0.04 & 0.53 $\pm$ 0.04 & 0.56 $\pm$ 0.05 & 0.54 $\pm$ 0.04 & 0.71 $\pm$ 0.03 \\
-    1234 & DBC & Crossval & 75 & Weighted & 0.52 $\pm$ 0.03 & 0.52 $\pm$ 0.03 & 0.55 $\pm$ 0.04 & 0.53 $\pm$ 0.03 & 0.64 $\pm$ 0.02 \\
-    1234 & Rand & Crossval & 75 & Weighted & 0.51 $\pm$ 0.04 & 0.51 $\pm$ 0.04 & 0.53 $\pm$ 0.05 & 0.51 $\pm$ 0.04 & 0.63 $\pm$ 0.02 \\
-    1234 & DBC+R & Crossval & 75 & Weighted & 0.51 $\pm$ 0.04 & 0.51 $\pm$ 0.04 & 0.54 $\pm$ 0.04 & 0.52 $\pm$ 0.03 & 0.62 $\pm$ 0.03 \\
-    1234 & DBC & Crossval & 50 & Weighted & 0.52 $\pm$ 0.03 & 0.52 $\pm$ 0.03 & 0.54 $\pm$ 0.04 & 0.52 $\pm$ 0.03 & 0.64 $\pm$ 0.02 \\
-    1234 & Rand & Crossval & 50 & Weighted & 0.51 $\pm$ 0.03 & 0.51 $\pm$ 0.03 & 0.53 $\pm$ 0.04 & 0.51 $\pm$ 0.03 & 0.63 $\pm$ 0.02 \\
-    1234 & DBC+R & Crossval & 50 & Weighted & 0.51 $\pm$ 0.04 & 0.51 $\pm$ 0.04 & 0.53 $\pm$ 0.04 & 0.52 $\pm$ 0.03 & 0.63 $\pm$ 0.03 \\
-    1234 & DBC & Crossval & 75 & Meta & 0.51 $\pm$ 0.03 & 0.51 $\pm$ 0.03 & 0.53 $\pm$ 0.03 & 0.51 $\pm$ 0.03 & 0.69 $\pm$ 0.03 \\
-    1234 & Rand & Crossval & 75 & Meta & 0.52 $\pm$ 0.03 & 0.52 $\pm$ 0.03 & 0.55 $\pm$ 0.03 & 0.53 $\pm$ 0.03 & 0.69 $\pm$ 0.03 \\
-    1234 & DBC+R & Crossval & 75 & Meta & 0.5 $\pm$ 0.03 & 0.5 $\pm$ 0.03 & 0.52 $\pm$ 0.03 & 0.51 $\pm$ 0.03 & 0.69 $\pm$ 0.03 \\
-    1234 & DBC & Crossval & 50 & Meta & 0.51 $\pm$ 0.02 & 0.51 $\pm$ 0.02 & 0.53 $\pm$ 0.03 & 0.51 $\pm$ 0.02 & 0.69 $\pm$ 0.02 \\
-    1234 & Rand & Crossval & 50 & Meta & 0.51 $\pm$ 0.03 & 0.51 $\pm$ 0.03 & 0.53 $\pm$ 0.03 & 0.52 $\pm$ 0.03 & 0.69 $\pm$ 0.03 \\
-    1234 & DBC+R & Crossval & 50 & Meta & 0.51 $\pm$ 0.02 & 0.51 $\pm$ 0.02 & 0.53 $\pm$ 0.03 & 0.52 $\pm$ 0.02 & 0.69 $\pm$ 0.02 \\
+    {}          & \HBreak{Clust.\\Sel.(1)} & \HBreak{Clf.\\Sel.(2)} & \HBreak{Feats.\\\%(3)} & \HBreak{Fusion\\(4)} & \HBreak{Num.\\Clust.} & \textbf{Acc.} & \textbf{Recall} & \textbf{Prec.} & \textbf{F1}        & \textbf{AUC} \\ \midrule
+    0 & - & - & 100 & MV & 3 & 0.38(3) & 0.38(3) & 0.46(5) & 0.40(3) & 0.52(4) \\
+    1 & DBC & - & 100 & MV & 2 & 0.41(4) & 0.41(4) & 0.53(7) & 0.43(5) & 0.60(3) \\
+    1 & Rand & - & 100 & MV & 2 & 0.38(2) & 0.38(2) & 0.53(5) & 0.41(2) & 0.59(2) \\
+    1 & DBC+R & - & 100 & MV & 2 & 0.42(4) & 0.42(4) & 0.54(6) & 0.44(4) & 0.61(3) \\
+    2 & - & CV & 100 & MV & 3 & 0.51(3) & 0.51(3) & 0.54(4) & 0.52(3) & 0.64(3) \\
+    2 & - & PSO & 100 & MV & 3 & 0.54(4) & 0.54(4) & 0.58(7) & 0.55(5) & 0.68(4) \\
+    3 & - & - & 75 & MV & 3 & 0.38(4) & 0.38(4) & 0.47(8) & 0.40(5) & 0.53(5) \\
+    3 & - & - & 50 & MV & 3 & 0.39(5) & 0.39(5) & 0.46(9) & 0.41(7) & 0.54(5) \\
+    4 & - & - & 100 & WM & 3 & 0.41(2) & 0.41(2) & 0.50(5) & 0.45(3) & 0.50(2) \\
+    4 & - & - & 100 & MC & 3 & 0.46(3) & 0.46(3) & 0.50(6) & 0.47(4) & 0.64(2) \\
+    123 & DBC & CV & 75 & MV & 2 & 0.48(3) & 0.48(3) & 0.56(5) & 0.51(3) & 0.63(2) \\
+    123 & Rand & CV & 75 & MV & 2 & 0.49(3) & 0.49(3) & 0.55(4) & 0.51(3) & 0.63(1) \\
+    123 & DBC+R & CV & 75 & MV & 2 & 0.47(3) & 0.47(3) & 0.57(5) & 0.50(3) & 0.62(2) \\
+    123 & DBC & CV & 50 & MV & 2 & 0.48(3) & 0.48(3) & 0.58(5) & 0.51(3) & 0.63(2) \\
+    123 & Rand & CV & 50 & MV & 2 & 0.48(3) & 0.48(3) & 0.56(5) & 0.51(3) & 0.63(1) \\
+    123 & DBC+R & CV & 50 & MV & 2 & 0.47(3) & 0.47(3) & 0.59(6) & 0.51(2) & 0.62(2) \\
+    124 & DBC & CV & 100 & WM & 2 & 0.52(3) & 0.52(3) & 0.54(4) & 0.52(3) & 0.64(2) \\
+    124 & Rand & CV & 100 & WM & 2 & 0.51(3) & 0.51(3) & 0.53(4) & 0.51(3) & 0.64(2) \\
+    124 & DBC+R & CV & 100 & WM & 2 & 0.51(4) & 0.51(4) & 0.53(5) & 0.52(4) & 0.63(2) \\
+    124 & DBC & CV & 100 & MC & 2 & 0.52(2) & 0.52(2) & 0.54(3) & 0.52(2) & 0.69(2) \\
+    124 & Rand & CV & 100 & MC & 2 & 0.51(3) & 0.51(3) & 0.53(4) & 0.52(3) & 0.69(3) \\
+    124 & DBC+R & CV & 100 & MC & 2 & 0.51(2) & 0.51(2) & 0.53(3) & 0.52(3) & 0.69(3) \\
+    124 & DBC & PSO & 100 & WM & 2 & 0.51(4) & 0.51(4) & 0.53(4) & 0.52(4) & 0.65(3) \\
+    124 & Rand & PSO & 100 & WM & 2 & 0.51(3) & 0.51(3) & 0.53(6) & 0.51(4) & 0.67(3) \\
+    124 & DBC+R & PSO & 100 & WM & 2 & 0.52(4) & 0.52(4) & 0.55(6) & 0.52(4) & 0.66(4) \\
+    124 & DBC & PSO & 100 & MC & 2 & 0.54(4) & 0.54(4) & 0.56(6) & 0.55(5) & 0.71(2) \\
+    124 & Rand & PSO & 100 & MC & 2 & 0.54(3) & 0.54(3) & 0.58(5) & 0.55(3) & 0.71(3) \\
+    124 & DBC+R & PSO & 100 & MC & 2 & 0.53(4) & 0.53(4) & 0.56(5) & 0.54(4) & 0.71(3) \\
+    1234 & DBC & CV & 75 & WM & 2 & 0.52(3) & 0.52(3) & 0.55(4) & 0.53(3) & 0.64(2) \\
+    1234 & Rand & CV & 75 & WM & 2 & 0.51(3) & 0.51(3) & 0.53(5) & 0.51(3) & 0.63(2) \\
+    1234 & DBC+R & CV & 75 & WM & 2 & 0.51(3) & 0.51(3) & 0.54(3) & 0.52(3) & 0.62(2) \\
+    1234 & DBC & CV & 50 & WM & 2 & 0.52(3) & 0.52(3) & 0.54(3) & 0.52(3) & 0.64(2) \\
+    1234 & Rand & CV & 50 & WM & 2 & 0.51(2) & 0.51(2) & 0.53(4) & 0.51(3) & 0.63(1) \\
+    1234 & DBC+R & CV & 50 & WM & 2 & 0.51(3) & 0.51(3) & 0.53(4) & 0.52(3) & 0.63(2) \\
+    1234 & DBC & CV & 75 & MC & 2 & 0.51(2) & 0.51(2) & 0.53(3) & 0.51(2) & 0.69(2) \\
+    1234 & Rand & CV & 75 & MC & 2 & 0.52(2) & 0.52(2) & 0.55(2) & 0.53(2) & 0.69(2) \\
+    1234 & DBC+R & CV & 75 & MC & 2 & 0.50(2) & 0.50(2) & 0.52(3) & 0.51(2) & 0.69(2) \\
+    1234 & DBC & CV & 50 & MC & 2 & 0.51(2) & 0.51(2) & 0.53(2) & 0.51(2) & 0.69(2) \\
+    1234 & Rand & CV & 50 & MC & 2 & 0.51(2) & 0.51(2) & 0.53(3) & 0.52(2) & 0.69(2) \\
+    1234 & DBC+R & CV & 50 & MC & 2 & 0.51(2) & 0.51(2) & 0.53(2) & 0.52(2) & 0.69(2) \\
     \bottomrule
     \end{tabular}
     }
