--- a/results/latex/electricity.tex
+++ b/results/latex/electricity.tex
@@ -1,49 +1,51 @@
 \begin{table}[ht]
     \centering
+    \caption{Ablation study results for the electricity dataset. Columns Clust. Sel.(1), Clf. Self.(2), Feats.\%(3) and Fusion(4) denote, respectively, the clustering evaluation metric, method for base classifier selection, percentage of features and the ensemble fusion strategy. It presents 5 different classification metrics and the average number of clusters. Numbers in parentheses indicate one standard deviation and apply to the last significant digit of each value.}
+    \label{tab:ablation_electricity}
     \resizebox{\textwidth}{!}{
-    \begin{tabular}{llllllllll}
+    \begin{tabular}{lccccllllll}
     \toprule
-    & \textbf{Clusters(1)} & \textbf{Clf(2)} & \textbf{\%(3)} & \textbf{Fusion(4)} & \textbf{Accuracy} & \textbf{Recall} & \textbf{Precision} & \textbf{F1-Score} & \textbf{AUC} \\ \midrule
-    0 & - & - & 100 & Voting & 0.7 $\pm$ 0.03 & 0.79 $\pm$ 0.05 & 0.57 $\pm$ 0.09 & 0.65 $\pm$ 0.06 & 0.74 $\pm$ 0.04 \\
-    1 & DBC & - & 100 & Voting & 0.64 $\pm$ 0.08 & 0.7 $\pm$ 0.1 & 0.6 $\pm$ 0.1 & 0.62 $\pm$ 0.04 & 0.71 $\pm$ 0.04 \\
-    1 & Rand & - & 100 & Voting & 0.68 $\pm$ 0.04 & 0.68 $\pm$ 0.05 & 0.69 $\pm$ 0.05 & 0.68 $\pm$ 0.03 & 0.74 $\pm$ 0.04 \\
-    1 & DBC+R & - & 100 & Voting & 0.64 $\pm$ 0.08 & 0.7 $\pm$ 0.1 & 0.6 $\pm$ 0.1 & 0.62 $\pm$ 0.04 & 0.71 $\pm$ 0.04 \\
-    2 & - & Crossval & 100 & Voting & 0.7 $\pm$ 0.03 & 0.79 $\pm$ 0.05 & 0.57 $\pm$ 0.09 & 0.65 $\pm$ 0.06 & 0.74 $\pm$ 0.04 \\
-    2 & - & PSO & 100 & Voting & 0.73 $\pm$ 0.03 & 0.74 $\pm$ 0.04 & 0.72 $\pm$ 0.02 & 0.73 $\pm$ 0.02 & 0.76 $\pm$ 0.04 \\
-    3 & - & - & 75 & Voting & 0.7 $\pm$ 0.03 & 0.79 $\pm$ 0.06 & 0.55 $\pm$ 0.08 & 0.64 $\pm$ 0.05 & 0.74 $\pm$ 0.04 \\
-    3 & - & - & 50 & Voting & 0.7 $\pm$ 0.03 & 0.79 $\pm$ 0.06 & 0.55 $\pm$ 0.08 & 0.64 $\pm$ 0.05 & 0.74 $\pm$ 0.04 \\
-    4 & - & - & 100 & Weighted & 0.69 $\pm$ 0.04 & 0.78 $\pm$ 0.07 & 0.53 $\pm$ 0.04 & 0.63 $\pm$ 0.04 & 0.74 $\pm$ 0.04 \\
-    4 & - & - & 100 & Meta & 0.71 $\pm$ 0.04 & 0.76 $\pm$ 0.05 & 0.63 $\pm$ 0.07 & 0.69 $\pm$ 0.05 & 0.75 $\pm$ 0.04 \\
-    123 & DBC & Crossval & 75 & Voting & 0.66 $\pm$ 0.06 & 0.7 $\pm$ 0.1 & 0.6 $\pm$ 0.2 & 0.61 $\pm$ 0.08 & 0.71 $\pm$ 0.04 \\
-    123 & Rand & Crossval & 75 & Voting & 0.67 $\pm$ 0.04 & 0.69 $\pm$ 0.09 & 0.7 $\pm$ 0.1 & 0.66 $\pm$ 0.07 & 0.74 $\pm$ 0.04 \\
-    123 & DBC+R & Crossval & 75 & Voting & 0.66 $\pm$ 0.06 & 0.7 $\pm$ 0.1 & 0.6 $\pm$ 0.2 & 0.61 $\pm$ 0.08 & 0.71 $\pm$ 0.04 \\
-    123 & DBC & Crossval & 50 & Voting & 0.66 $\pm$ 0.06 & 0.7 $\pm$ 0.1 & 0.5 $\pm$ 0.2 & 0.61 $\pm$ 0.08 & 0.71 $\pm$ 0.04 \\
-    123 & Rand & Crossval & 50 & Voting & 0.67 $\pm$ 0.04 & 0.7 $\pm$ 0.08 & 0.7 $\pm$ 0.1 & 0.66 $\pm$ 0.07 & 0.74 $\pm$ 0.04 \\
-    123 & DBC+R & Crossval & 50 & Voting & 0.66 $\pm$ 0.06 & 0.7 $\pm$ 0.1 & 0.5 $\pm$ 0.2 & 0.61 $\pm$ 0.08 & 0.71 $\pm$ 0.04 \\
-    124 & DBC & Crossval & 100 & Weighted & 0.66 $\pm$ 0.05 & 0.7 $\pm$ 0.1 & 0.55 $\pm$ 0.08 & 0.62 $\pm$ 0.05 & 0.69 $\pm$ 0.07 \\
-    124 & Rand & Crossval & 100 & Weighted & 0.69 $\pm$ 0.05 & 0.79 $\pm$ 0.07 & 0.52 $\pm$ 0.08 & 0.62 $\pm$ 0.07 & 0.73 $\pm$ 0.04 \\
-    124 & DBC+R & Crossval & 100 & Weighted & 0.66 $\pm$ 0.05 & 0.7 $\pm$ 0.1 & 0.55 $\pm$ 0.08 & 0.62 $\pm$ 0.05 & 0.69 $\pm$ 0.07 \\
-    124 & DBC & Crossval & 100 & Meta & 0.69 $\pm$ 0.06 & 0.73 $\pm$ 0.09 & 0.59 $\pm$ 0.1 & 0.65 $\pm$ 0.09 & 0.74 $\pm$ 0.05 \\
-    124 & Rand & Crossval & 100 & Meta & 0.7 $\pm$ 0.04 & 0.75 $\pm$ 0.05 & 0.6 $\pm$ 0.05 & 0.67 $\pm$ 0.04 & 0.74 $\pm$ 0.04 \\
-    124 & DBC+R & Crossval & 100 & Meta & 0.69 $\pm$ 0.06 & 0.73 $\pm$ 0.09 & 0.59 $\pm$ 0.1 & 0.65 $\pm$ 0.09 & 0.74 $\pm$ 0.05 \\
-    124 & DBC & PSO & 100 & Weighted & 0.72 $\pm$ 0.02 & 0.72 $\pm$ 0.04 & 0.72 $\pm$ 0.03 & 0.72 $\pm$ 0.02 & 0.76 $\pm$ 0.02 \\
-    124 & Rand & PSO & 100 & Weighted & 0.72 $\pm$ 0.03 & 0.73 $\pm$ 0.04 & 0.71 $\pm$ 0.03 & 0.72 $\pm$ 0.03 & 0.76 $\pm$ 0.04 \\
-    124 & DBC+R & PSO & 100 & Weighted & 0.72 $\pm$ 0.02 & 0.72 $\pm$ 0.04 & 0.72 $\pm$ 0.03 & 0.72 $\pm$ 0.02 & 0.76 $\pm$ 0.02 \\
-    124 & DBC & PSO & 100 & Meta & 0.73 $\pm$ 0.06 & 0.74 $\pm$ 0.08 & 0.74 $\pm$ 0.03 & 0.74 $\pm$ 0.05 & 0.76 $\pm$ 0.06 \\
-    124 & Rand & PSO & 100 & Meta & 0.72 $\pm$ 0.02 & 0.72 $\pm$ 0.05 & 0.72 $\pm$ 0.08 & 0.72 $\pm$ 0.02 & 0.75 $\pm$ 0.03 \\
-    124 & DBC+R & PSO & 100 & Meta & 0.73 $\pm$ 0.06 & 0.74 $\pm$ 0.08 & 0.74 $\pm$ 0.03 & 0.74 $\pm$ 0.05 & 0.76 $\pm$ 0.06 \\
-    1234 & DBC & Crossval & 75 & Weighted & 0.68 $\pm$ 0.04 & 0.78 $\pm$ 0.09 & 0.5 $\pm$ 0.1 & 0.61 $\pm$ 0.07 & 0.7 $\pm$ 0.05 \\
-    1234 & Rand & Crossval & 75 & Weighted & 0.69 $\pm$ 0.04 & 0.8 $\pm$ 0.06 & 0.51 $\pm$ 0.09 & 0.62 $\pm$ 0.07 & 0.73 $\pm$ 0.05 \\
-    1234 & DBC+R & Crossval & 75 & Weighted & 0.68 $\pm$ 0.04 & 0.78 $\pm$ 0.09 & 0.5 $\pm$ 0.1 & 0.61 $\pm$ 0.07 & 0.7 $\pm$ 0.05 \\
-    1234 & DBC & Crossval & 50 & Weighted & 0.67 $\pm$ 0.04 & 0.78 $\pm$ 0.09 & 0.5 $\pm$ 0.1 & 0.6 $\pm$ 0.07 & 0.7 $\pm$ 0.05 \\
-    1234 & Rand & Crossval & 50 & Weighted & 0.7 $\pm$ 0.04 & 0.82 $\pm$ 0.06 & 0.51 $\pm$ 0.08 & 0.63 $\pm$ 0.07 & 0.73 $\pm$ 0.04 \\
-    1234 & DBC+R & Crossval & 50 & Weighted & 0.67 $\pm$ 0.04 & 0.78 $\pm$ 0.09 & 0.5 $\pm$ 0.1 & 0.6 $\pm$ 0.07 & 0.7 $\pm$ 0.05 \\
-    1234 & DBC & Crossval & 75 & Meta & 0.71 $\pm$ 0.04 & 0.77 $\pm$ 0.06 & 0.6 $\pm$ 0.05 & 0.67 $\pm$ 0.04 & 0.74 $\pm$ 0.05 \\
-    1234 & Rand & Crossval & 75 & Meta & 0.71 $\pm$ 0.04 & 0.75 $\pm$ 0.06 & 0.63 $\pm$ 0.08 & 0.68 $\pm$ 0.04 & 0.75 $\pm$ 0.04 \\
-    1234 & DBC+R & Crossval & 75 & Meta & 0.71 $\pm$ 0.04 & 0.77 $\pm$ 0.06 & 0.6 $\pm$ 0.05 & 0.67 $\pm$ 0.04 & 0.74 $\pm$ 0.05 \\
-    1234 & DBC & Crossval & 50 & Meta & 0.71 $\pm$ 0.04 & 0.78 $\pm$ 0.06 & 0.59 $\pm$ 0.05 & 0.67 $\pm$ 0.04 & 0.74 $\pm$ 0.05 \\
-    1234 & Rand & Crossval & 50 & Meta & 0.71 $\pm$ 0.04 & 0.77 $\pm$ 0.05 & 0.61 $\pm$ 0.04 & 0.68 $\pm$ 0.04 & 0.74 $\pm$ 0.04 \\
-    1234 & DBC+R & Crossval & 50 & Meta & 0.71 $\pm$ 0.04 & 0.78 $\pm$ 0.06 & 0.59 $\pm$ 0.05 & 0.67 $\pm$ 0.04 & 0.74 $\pm$ 0.05 \\
+    {}          & \HBreak{Clust.\\Sel.(1)} & \HBreak{Clf.\\Sel.(2)} & \HBreak{Feats.\\\%(3)} & \HBreak{Fusion\\(4)} & \HBreak{Num.\\Clust.} & \textbf{Acc.} & \textbf{Recall} & \textbf{Prec.} & \textbf{F1}        & \textbf{AUC} \\ \midrule
+    0 & - & - & 100 & MV & 2 & 0.70(3) & 0.79(5) & 0.57(8) & 0.65(5) & 0.74(3) \\
+    1 & DBC & - & 100 & MV & 2 & 0.64(7) & 0.7(1) & 0.6(1) & 0.62(4) & 0.71(3) \\
+    1 & Rand & - & 100 & MV & 2 & 0.68(3) & 0.68(5) & 0.69(5) & 0.68(3) & 0.74(3) \\
+    1 & DBC+R & - & 100 & MV & 2 & 0.64(7) & 0.7(1) & 0.6(1) & 0.62(4) & 0.71(3) \\
+    2 & - & CV & 100 & MV & 2 & 0.70(3) & 0.79(5) & 0.57(8) & 0.65(5) & 0.74(3) \\
+    2 & - & PSO & 100 & MV & 2 & 0.73(2) & 0.74(4) & 0.72(1) & 0.73(2) & 0.76(4) \\
+    3 & - & - & 75 & MV & 2 & 0.70(3) & 0.79(5) & 0.55(8) & 0.64(5) & 0.74(4) \\
+    3 & - & - & 50 & MV & 2 & 0.70(3) & 0.79(6) & 0.55(8) & 0.64(5) & 0.74(4) \\
+    4 & - & - & 100 & WM & 2 & 0.69(3) & 0.78(7) & 0.53(3) & 0.63(3) & 0.74(3) \\
+    4 & - & - & 100 & MC & 2 & 0.71(3) & 0.76(5) & 0.63(7) & 0.69(4) & 0.75(3) \\
+    123 & DBC & CV & 75 & MV & 2 & 0.66(5) & 0.7(1) & 0.6(1) & 0.61(8) & 0.71(4) \\
+    123 & Rand & CV & 75 & MV & 2 & 0.67(3) & 0.69(8) & 0.7(1) & 0.66(7) & 0.74(3) \\
+    123 & DBC+R & CV & 75 & MV & 2 & 0.66(5) & 0.7(1) & 0.6(1) & 0.61(8) & 0.71(4) \\
+    123 & DBC & CV & 50 & MV & 2 & 0.66(6) & 0.7(1) & 0.5(1) & 0.61(8) & 0.71(4) \\
+    123 & Rand & CV & 50 & MV & 2 & 0.67(4) & 0.70(7) & 0.7(1) & 0.66(6) & 0.74(3) \\
+    123 & DBC+R & CV & 50 & MV & 2 & 0.66(6) & 0.7(1) & 0.5(1) & 0.61(8) & 0.71(4) \\
+    124 & DBC & CV & 100 & WM & 2 & 0.66(5) & 0.7(1) & 0.55(7) & 0.62(5) & 0.69(6) \\
+    124 & Rand & CV & 100 & WM & 2 & 0.69(4) & 0.79(6) & 0.52(7) & 0.62(6) & 0.73(4) \\
+    124 & DBC+R & CV & 100 & WM & 2 & 0.66(5) & 0.7(1) & 0.55(7) & 0.62(5) & 0.69(6) \\
+    124 & DBC & CV & 100 & MC & 2 & 0.69(6) & 0.73(8) & 0.59(9) & 0.65(8) & 0.74(5) \\
+    124 & Rand & CV & 100 & MC & 2 & 0.70(3) & 0.75(5) & 0.60(4) & 0.67(3) & 0.74(4) \\
+    124 & DBC+R & CV & 100 & MC & 2 & 0.69(6) & 0.73(8) & 0.59(9) & 0.65(8) & 0.74(5) \\
+    124 & DBC & PSO & 100 & WM & 2 & 0.72(2) & 0.72(3) & 0.72(2) & 0.72(1) & 0.76(2) \\
+    124 & Rand & PSO & 100 & WM & 2 & 0.72(3) & 0.73(3) & 0.71(3) & 0.72(3) & 0.76(3) \\
+    124 & DBC+R & PSO & 100 & WM & 2 & 0.72(2) & 0.72(3) & 0.72(2) & 0.72(1) & 0.76(2) \\
+    124 & DBC & PSO & 100 & MC & 2 & 0.73(6) & 0.74(8) & 0.74(3) & 0.74(5) & 0.76(6) \\
+    124 & Rand & PSO & 100 & MC & 2 & 0.72(2) & 0.72(5) & 0.72(8) & 0.72(2) & 0.75(2) \\
+    124 & DBC+R & PSO & 100 & MC & 2 & 0.73(6) & 0.74(8) & 0.74(3) & 0.74(5) & 0.76(6) \\
+    1234 & DBC & CV & 75 & WM & 2 & 0.68(4) & 0.78(9) & 0.5(1) & 0.61(7) & 0.70(4) \\
+    1234 & Rand & CV & 75 & WM & 2 & 0.69(4) & 0.80(5) & 0.51(8) & 0.62(6) & 0.73(4) \\
+    1234 & DBC+R & CV & 75 & WM & 2 & 0.68(4) & 0.78(9) & 0.5(1) & 0.61(7) & 0.70(4) \\
+    1234 & DBC & CV & 50 & WM & 2 & 0.67(3) & 0.78(9) & 0.5(1) & 0.60(6) & 0.70(4) \\
+    1234 & Rand & CV & 50 & WM & 2 & 0.70(4) & 0.82(6) & 0.51(7) & 0.63(6) & 0.73(3) \\
+    1234 & DBC+R & CV & 50 & WM & 2 & 0.67(3) & 0.78(9) & 0.5(1) & 0.60(6) & 0.70(4) \\
+    1234 & DBC & CV & 75 & MC & 2 & 0.71(3) & 0.77(5) & 0.60(5) & 0.67(4) & 0.74(4) \\
+    1234 & Rand & CV & 75 & MC & 2 & 0.71(3) & 0.75(5) & 0.63(8) & 0.68(4) & 0.75(3) \\
+    1234 & DBC+R & CV & 75 & MC & 2 & 0.71(3) & 0.77(5) & 0.60(5) & 0.67(4) & 0.74(4) \\
+    1234 & DBC & CV & 50 & MC & 2 & 0.71(3) & 0.78(5) & 0.59(4) & 0.67(4) & 0.74(4) \\
+    1234 & Rand & CV & 50 & MC & 2 & 0.71(3) & 0.77(4) & 0.61(4) & 0.68(4) & 0.74(3) \\
+    1234 & DBC+R & CV & 50 & MC & 2 & 0.71(3) & 0.78(5) & 0.59(4) & 0.67(4) & 0.74(4) \\
     \bottomrule
     \end{tabular}
     }
