--- a/results/latex/rectangles.tex
+++ b/results/latex/rectangles.tex
@@ -1,49 +1,51 @@
 \begin{table}[ht]
     \centering
+    \caption{Ablation study results for the rectangles dataset. Columns Clust. Sel.(1), Clf. Self.(2), Feats.\%(3) and Fusion(4) denote, respectively, the clustering evaluation metric, method for base classifier selection, percentage of features and the ensemble fusion strategy. It presents 5 different classification metrics and the average number of clusters. Numbers in parentheses indicate one standard deviation and apply to the last significant digit of each value.}
+    \label{tab:ablation_rectangles}
     \resizebox{\textwidth}{!}{
-    \begin{tabular}{llllllllll}
+    \begin{tabular}{lccccllllll}
     \toprule
-    & \textbf{Clusters(1)} & \textbf{Clf(2)} & \textbf{\%(3)} & \textbf{Fusion(4)} & \textbf{Accuracy} & \textbf{Recall} & \textbf{Precision} & \textbf{F1-Score} & \textbf{AUC} \\ \midrule
-    0 & - & - & 100 & Voting & 0.7 $\pm$ 0.2 & 0.7 $\pm$ 0.1 & 0.7 $\pm$ 0.1 & 0.7 $\pm$ 0.1 & 0.7 $\pm$ 0.1 \\
-    1 & DBC & - & 100 & Voting & 0.7 $\pm$ 0.1 & 0.7 $\pm$ 0.1 & 0.7 $\pm$ 0.1 & 0.7 $\pm$ 0.1 & 0.7 $\pm$ 0.1 \\
-    1 & Rand & - & 100 & Voting & 0.7 $\pm$ 0.1 & 0.7 $\pm$ 0.1 & 0.7 $\pm$ 0.1 & 0.7 $\pm$ 0.1 & 0.7 $\pm$ 0.2 \\
-    1 & DBC+R & - & 100 & Voting & 0.7 $\pm$ 0.1 & 0.7 $\pm$ 0.1 & 0.7 $\pm$ 0.1 & 0.7 $\pm$ 0.1 & 0.7 $\pm$ 0.1 \\
-    2 & - & Crossval & 100 & Voting & 0.7 $\pm$ 0.1 & 0.7 $\pm$ 0.1 & 0.7 $\pm$ 0.1 & 0.7 $\pm$ 0.1 & 0.7 $\pm$ 0.1 \\
-    2 & - & PSO & 100 & Voting & 0.75 $\pm$ 0.04 & 0.73 $\pm$ 0.04 & 0.8 $\pm$ 0.1 & 0.76 $\pm$ 0.05 & 0.8 $\pm$ 0.04 \\
-    3 & - & - & 75 & Voting & 0.7 $\pm$ 0.2 & 0.7 $\pm$ 0.2 & 0.7 $\pm$ 0.2 & 0.7 $\pm$ 0.2 & 0.7 $\pm$ 0.2 \\
-    3 & - & - & 50 & Voting & 0.7 $\pm$ 0.2 & 0.7 $\pm$ 0.2 & 0.7 $\pm$ 0.2 & 0.7 $\pm$ 0.2 & 0.7 $\pm$ 0.2 \\
-    4 & - & - & 100 & Weighted & 0.74 $\pm$ 0.05 & 0.74 $\pm$ 0.04 & 0.7 $\pm$ 0.1 & 0.74 $\pm$ 0.06 & 0.76 $\pm$ 0.06 \\
-    4 & - & - & 100 & Meta & 0.72 $\pm$ 0.08 & 0.7 $\pm$ 0.2 & 0.6 $\pm$ 0.2 & 0.6 $\pm$ 0.2 & 0.8 $\pm$ 0.1 \\
-    123 & DBC & Crossval & 75 & Voting & 0.78 $\pm$ 0.04 & 0.78 $\pm$ 0.03 & 0.8 $\pm$ 0.1 & 0.77 $\pm$ 0.06 & 0.83 $\pm$ 0.04 \\
-    123 & Rand & Crossval & 75 & Voting & 0.77 $\pm$ 0.04 & 0.78 $\pm$ 0.05 & 0.76 $\pm$ 0.08 & 0.77 $\pm$ 0.04 & 0.82 $\pm$ 0.03 \\
-    123 & DBC+R & Crossval & 75 & Voting & 0.78 $\pm$ 0.05 & 0.79 $\pm$ 0.04 & 0.8 $\pm$ 0.1 & 0.77 $\pm$ 0.06 & 0.82 $\pm$ 0.04 \\
-    123 & DBC & Crossval & 50 & Voting & 0.78 $\pm$ 0.04 & 0.78 $\pm$ 0.04 & 0.8 $\pm$ 0.1 & 0.77 $\pm$ 0.06 & 0.83 $\pm$ 0.04 \\
-    123 & Rand & Crossval & 50 & Voting & 0.78 $\pm$ 0.04 & 0.78 $\pm$ 0.05 & 0.77 $\pm$ 0.09 & 0.77 $\pm$ 0.05 & 0.83 $\pm$ 0.03 \\
-    123 & DBC+R & Crossval & 50 & Voting & 0.77 $\pm$ 0.04 & 0.78 $\pm$ 0.04 & 0.76 $\pm$ 0.09 & 0.76 $\pm$ 0.05 & 0.82 $\pm$ 0.03 \\
-    124 & DBC & Crossval & 100 & Weighted & 0.74 $\pm$ 0.04 & 0.75 $\pm$ 0.04 & 0.74 $\pm$ 0.09 & 0.74 $\pm$ 0.05 & 0.77 $\pm$ 0.05 \\
-    124 & Rand & Crossval & 100 & Weighted & 0.74 $\pm$ 0.03 & 0.75 $\pm$ 0.03 & 0.73 $\pm$ 0.09 & 0.74 $\pm$ 0.04 & 0.76 $\pm$ 0.06 \\
-    124 & DBC+R & Crossval & 100 & Weighted & 0.74 $\pm$ 0.03 & 0.74 $\pm$ 0.03 & 0.74 $\pm$ 0.09 & 0.74 $\pm$ 0.05 & 0.76 $\pm$ 0.05 \\
-    124 & DBC & Crossval & 100 & Meta & 0.76 $\pm$ 0.04 & 0.78 $\pm$ 0.07 & 0.7 $\pm$ 0.1 & 0.74 $\pm$ 0.06 & 0.87 $\pm$ 0.03 \\
-    124 & Rand & Crossval & 100 & Meta & 0.71 $\pm$ 0.09 & 0.7 $\pm$ 0.1 & 0.7 $\pm$ 0.2 & 0.7 $\pm$ 0.1 & 0.8 $\pm$ 0.1 \\
-    124 & DBC+R & Crossval & 100 & Meta & 0.72 $\pm$ 0.09 & 0.7 $\pm$ 0.1 & 0.7 $\pm$ 0.2 & 0.7 $\pm$ 0.1 & 0.8 $\pm$ 0.1 \\
-    124 & DBC & PSO & 100 & Weighted & 0.78 $\pm$ 0.04 & 0.77 $\pm$ 0.05 & 0.8 $\pm$ 0.1 & 0.79 $\pm$ 0.05 & 0.82 $\pm$ 0.03 \\
-    124 & Rand & PSO & 100 & Weighted & 0.78 $\pm$ 0.04 & 0.78 $\pm$ 0.06 & 0.8 $\pm$ 0.08 & 0.79 $\pm$ 0.04 & 0.83 $\pm$ 0.04 \\
-    124 & DBC+R & PSO & 100 & Weighted & 0.78 $\pm$ 0.04 & 0.76 $\pm$ 0.06 & 0.8 $\pm$ 0.1 & 0.78 $\pm$ 0.05 & 0.82 $\pm$ 0.04 \\
-    124 & DBC & PSO & 100 & Meta & 0.79 $\pm$ 0.04 & 0.77 $\pm$ 0.05 & 0.85 $\pm$ 0.08 & 0.8 $\pm$ 0.03 & 0.85 $\pm$ 0.05 \\
-    124 & Rand & PSO & 100 & Meta & 0.79 $\pm$ 0.05 & 0.79 $\pm$ 0.05 & 0.8 $\pm$ 0.1 & 0.79 $\pm$ 0.06 & 0.85 $\pm$ 0.03 \\
-    124 & DBC+R & PSO & 100 & Meta & 0.8 $\pm$ 0.04 & 0.77 $\pm$ 0.05 & 0.85 $\pm$ 0.08 & 0.81 $\pm$ 0.03 & 0.85 $\pm$ 0.05 \\
-    1234 & DBC & Crossval & 75 & Weighted & 0.78 $\pm$ 0.03 & 0.78 $\pm$ 0.03 & 0.78 $\pm$ 0.05 & 0.78 $\pm$ 0.03 & 0.83 $\pm$ 0.03 \\
-    1234 & Rand & Crossval & 75 & Weighted & 0.77 $\pm$ 0.02 & 0.77 $\pm$ 0.02 & 0.77 $\pm$ 0.06 & 0.77 $\pm$ 0.03 & 0.82 $\pm$ 0.03 \\
-    1234 & DBC+R & Crossval & 75 & Weighted & 0.78 $\pm$ 0.03 & 0.78 $\pm$ 0.03 & 0.78 $\pm$ 0.05 & 0.78 $\pm$ 0.03 & 0.83 $\pm$ 0.03 \\
-    1234 & DBC & Crossval & 50 & Weighted & 0.78 $\pm$ 0.03 & 0.78 $\pm$ 0.03 & 0.78 $\pm$ 0.05 & 0.78 $\pm$ 0.03 & 0.82 $\pm$ 0.03 \\
-    1234 & Rand & Crossval & 50 & Weighted & 0.78 $\pm$ 0.03 & 0.77 $\pm$ 0.03 & 0.79 $\pm$ 0.07 & 0.78 $\pm$ 0.03 & 0.82 $\pm$ 0.03 \\
-    1234 & DBC+R & Crossval & 50 & Weighted & 0.78 $\pm$ 0.03 & 0.78 $\pm$ 0.03 & 0.78 $\pm$ 0.05 & 0.78 $\pm$ 0.03 & 0.83 $\pm$ 0.03 \\
-    1234 & DBC & Crossval & 75 & Meta & 0.76 $\pm$ 0.02 & 0.76 $\pm$ 0.03 & 0.78 $\pm$ 0.09 & 0.77 $\pm$ 0.03 & 0.86 $\pm$ 0.06 \\
-    1234 & Rand & Crossval & 75 & Meta & 0.77 $\pm$ 0.03 & 0.76 $\pm$ 0.04 & 0.8 $\pm$ 0.09 & 0.77 $\pm$ 0.04 & 0.85 $\pm$ 0.06 \\
-    1234 & DBC+R & Crossval & 75 & Meta & 0.76 $\pm$ 0.02 & 0.76 $\pm$ 0.04 & 0.8 $\pm$ 0.1 & 0.76 $\pm$ 0.04 & 0.86 $\pm$ 0.05 \\
-    1234 & DBC & Crossval & 50 & Meta & 0.76 $\pm$ 0.03 & 0.76 $\pm$ 0.04 & 0.8 $\pm$ 0.1 & 0.75 $\pm$ 0.05 & 0.86 $\pm$ 0.05 \\
-    1234 & Rand & Crossval & 50 & Meta & 0.77 $\pm$ 0.03 & 0.75 $\pm$ 0.06 & 0.81 $\pm$ 0.09 & 0.77 $\pm$ 0.04 & 0.85 $\pm$ 0.06 \\
-    1234 & DBC+R & Crossval & 50 & Meta & 0.77 $\pm$ 0.02 & 0.76 $\pm$ 0.03 & 0.79 $\pm$ 0.08 & 0.77 $\pm$ 0.03 & 0.86 $\pm$ 0.06 \\
+    {}          & \HBreak{Clust.\\Sel.(1)} & \HBreak{Clf.\\Sel.(2)} & \HBreak{Feats.\\\%(3)} & \HBreak{Fusion\\(4)} & \HBreak{Num.\\Clust.} & \textbf{Acc.} & \textbf{Recall} & \textbf{Prec.} & \textbf{F1}        & \textbf{AUC} \\ \midrule
+    0 & - & - & 100 & MV & 2 & 0.7(1) & 0.7(1) & 0.7(1) & 0.7(1) & 0.7(1) \\
+    1 & DBC & - & 100 & MV & 2 & 0.7(1) & 0.7(1) & 0.7(1) & 0.7(1) & 0.7(1) \\
+    1 & Rand & - & 100 & MV & 2 & 0.7(1) & 0.7(1) & 0.7(1) & 0.7(1) & 0.7(1) \\
+    1 & DBC+R & - & 100 & MV & 2 & 0.7(1) & 0.7(1) & 0.7(1) & 0.7(1) & 0.7(1) \\
+    2 & - & CV & 100 & MV & 2 & 0.7(1) & 0.7(1) & 0.7(1) & 0.7(1) & 0.7(1) \\
+    2 & - & PSO & 100 & MV & 2 & 0.75(3) & 0.73(4) & 0.8(1) & 0.76(4) & 0.80(4) \\
+    3 & - & - & 75 & MV & 2 & 0.7(1) & 0.7(1) & 0.7(1) & 0.7(1) & 0.7(1) \\
+    3 & - & - & 50 & MV & 2 & 0.7(1) & 0.7(1) & 0.7(1) & 0.7(1) & 0.7(1) \\
+    4 & - & - & 100 & WM & 2 & 0.74(4) & 0.74(3) & 0.7(1) & 0.74(6) & 0.76(5) \\
+    4 & - & - & 100 & MC & 2 & 0.72(8) & 0.7(2) & 0.6(2) & 0.6(2) & 0.8(1) \\
+    123 & DBC & CV & 75 & MV & 2 & 0.78(4) & 0.78(2) & 0.8(1) & 0.77(5) & 0.83(3) \\
+    123 & Rand & CV & 75 & MV & 2 & 0.77(3) & 0.78(4) & 0.76(8) & 0.77(4) & 0.82(3) \\
+    123 & DBC+R & CV & 75 & MV & 2 & 0.78(4) & 0.79(3) & 0.8(1) & 0.77(6) & 0.82(3) \\
+    123 & DBC & CV & 50 & MV & 2 & 0.78(4) & 0.78(3) & 0.8(1) & 0.77(5) & 0.83(3) \\
+    123 & Rand & CV & 50 & MV & 2 & 0.78(3) & 0.78(4) & 0.77(8) & 0.77(4) & 0.83(3) \\
+    123 & DBC+R & CV & 50 & MV & 2 & 0.77(3) & 0.78(3) & 0.76(9) & 0.76(4) & 0.82(3) \\
+    124 & DBC & CV & 100 & WM & 2 & 0.74(3) & 0.75(4) & 0.74(9) & 0.74(5) & 0.77(4) \\
+    124 & Rand & CV & 100 & WM & 2 & 0.74(3) & 0.75(3) & 0.73(8) & 0.74(4) & 0.76(5) \\
+    124 & DBC+R & CV & 100 & WM & 2 & 0.74(3) & 0.74(2) & 0.74(9) & 0.74(4) & 0.76(5) \\
+    124 & DBC & CV & 100 & MC & 2 & 0.76(3) & 0.78(6) & 0.7(1) & 0.74(5) & 0.87(3) \\
+    124 & Rand & CV & 100 & MC & 2 & 0.71(9) & 0.7(1) & 0.7(1) & 0.7(1) & 0.8(1) \\
+    124 & DBC+R & CV & 100 & MC & 2 & 0.72(9) & 0.7(1) & 0.7(1) & 0.7(1) & 0.8(1) \\
+    124 & DBC & PSO & 100 & WM & 2 & 0.78(4) & 0.77(5) & 0.8(1) & 0.79(4) & 0.82(3) \\
+    124 & Rand & PSO & 100 & WM & 2 & 0.78(3) & 0.78(6) & 0.80(8) & 0.79(4) & 0.83(4) \\
+    124 & DBC+R & PSO & 100 & WM & 2 & 0.78(4) & 0.76(5) & 0.8(1) & 0.78(4) & 0.82(3) \\
+    124 & DBC & PSO & 100 & MC & 2 & 0.79(3) & 0.77(5) & 0.85(7) & 0.80(3) & 0.85(4) \\
+    124 & Rand & PSO & 100 & MC & 2 & 0.79(4) & 0.79(4) & 0.8(1) & 0.79(5) & 0.85(3) \\
+    124 & DBC+R & PSO & 100 & MC & 2 & 0.80(3) & 0.77(5) & 0.85(7) & 0.81(3) & 0.85(4) \\
+    1234 & DBC & CV & 75 & WM & 2 & 0.78(2) & 0.78(2) & 0.78(5) & 0.78(3) & 0.83(2) \\
+    1234 & Rand & CV & 75 & WM & 2 & 0.77(2) & 0.77(2) & 0.77(5) & 0.77(2) & 0.82(3) \\
+    1234 & DBC+R & CV & 75 & WM & 2 & 0.78(2) & 0.78(2) & 0.78(5) & 0.78(3) & 0.83(3) \\
+    1234 & DBC & CV & 50 & WM & 2 & 0.78(2) & 0.78(2) & 0.78(5) & 0.78(2) & 0.82(2) \\
+    1234 & Rand & CV & 50 & WM & 2 & 0.78(2) & 0.77(2) & 0.79(6) & 0.78(3) & 0.82(2) \\
+    1234 & DBC+R & CV & 50 & WM & 2 & 0.78(2) & 0.78(2) & 0.78(5) & 0.78(3) & 0.83(3) \\
+    1234 & DBC & CV & 75 & MC & 2 & 0.76(2) & 0.76(3) & 0.78(8) & 0.77(3) & 0.86(5) \\
+    1234 & Rand & CV & 75 & MC & 2 & 0.77(2) & 0.76(4) & 0.80(8) & 0.77(3) & 0.85(5) \\
+    1234 & DBC+R & CV & 75 & MC & 2 & 0.76(2) & 0.76(3) & 0.8(1) & 0.76(4) & 0.86(4) \\
+    1234 & DBC & CV & 50 & MC & 2 & 0.76(2) & 0.76(4) & 0.8(1) & 0.75(5) & 0.86(4) \\
+    1234 & Rand & CV & 50 & MC & 2 & 0.77(3) & 0.75(5) & 0.81(9) & 0.77(3) & 0.85(5) \\
+    1234 & DBC+R & CV & 50 & MC & 2 & 0.77(2) & 0.76(3) & 0.79(8) & 0.77(3) & 0.86(5) \\
     \bottomrule
     \end{tabular}
     }
