--- a/templates/modelo_tabela_completa.tex
+++ b/templates/modelo_tabela_completa.tex
@@ -1,49 +1,51 @@
 \begin{table}[ht]
     \centering
+    \caption{Ablation study results for the [dataset-caption] dataset. Columns Clust. Sel.(1), Clf. Self.(2), Feats.\%(3) and Fusion(4) denote, respectively, the clustering evaluation metric, method for base classifier selection, percentage of features and the ensemble fusion strategy. It presents 5 different classification metrics and the average number of clusters. Numbers in parentheses indicate one standard deviation and apply to the last significant digit of each value.}
+    \label{tab:ablation_[dataset-label]}
     \resizebox{\textwidth}{!}{
-    \begin{tabular}{llllllllll}
+    \begin{tabular}{lccccllllll}
     \toprule
-    & \textbf{Clusters(1)} & \textbf{Clf(2)} & \textbf{\%(3)} & \textbf{Fusion(4)} & \textbf{Accuracy} & \textbf{Recall} & \textbf{Precision} & \textbf{F1-Score} & \textbf{AUC} \\ \midrule
-    [0_-_-_100_Voting]
-    [1_DBC_-_100_Voting]
-    [1_Rand_-_100_Voting]
-    [1_DBC+R_-_100_Voting]
-    [2_-_Crossval_100_Voting]
-    [2_-_PSO_100_Voting]
-    [3_-_-_75_Voting]
-    [3_-_-_50_Voting]
-    [4_-_-_100_Weighted]
-    [4_-_-_100_Meta]
-    [123_DBC_Crossval_75_Voting]
-    [123_Rand_Crossval_75_Voting]
-    [123_DBC+R_Crossval_75_Voting]
-    [123_DBC_Crossval_50_Voting]
-    [123_Rand_Crossval_50_Voting]
-    [123_DBC+R_Crossval_50_Voting]
-    [124_DBC_Crossval_100_Weighted]
-    [124_Rand_Crossval_100_Weighted]
-    [124_DBC+R_Crossval_100_Weighted]
-    [124_DBC_Crossval_100_Meta]
-    [124_Rand_Crossval_100_Meta]
-    [124_DBC+R_Crossval_100_Meta]
-    [124_DBC_PSO_100_Weighted]
-    [124_Rand_PSO_100_Weighted]
-    [124_DBC+R_PSO_100_Weighted]
-    [124_DBC_PSO_100_Meta]
-    [124_Rand_PSO_100_Meta]
-    [124_DBC+R_PSO_100_Meta]
-    [1234_DBC_Crossval_75_Weighted]
-    [1234_Rand_Crossval_75_Weighted]
-    [1234_DBC+R_Crossval_75_Weighted]
-    [1234_DBC_Crossval_50_Weighted]
-    [1234_Rand_Crossval_50_Weighted]
-    [1234_DBC+R_Crossval_50_Weighted]
-    [1234_DBC_Crossval_75_Meta]
-    [1234_Rand_Crossval_75_Meta]
-    [1234_DBC+R_Crossval_75_Meta]
-    [1234_DBC_Crossval_50_Meta]
-    [1234_Rand_Crossval_50_Meta]
-    [1234_DBC+R_Crossval_50_Meta]
+    {}          & \HBreak{Clust.\\Sel.(1)} & \HBreak{Clf.\\Sel.(2)} & \HBreak{Feats.\\\%(3)} & \HBreak{Fusion\\(4)} & \HBreak{Num.\\Clust.} & \textbf{Acc.} & \textbf{Recall} & \textbf{Prec.} & \textbf{F1}        & \textbf{AUC} \\ \midrule
+    [0_-_-_100_MV]
+    [1_DBC_-_100_MV]
+    [1_Rand_-_100_MV]
+    [1_DBC+R_-_100_MV]
+    [2_-_CV_100_MV]
+    [2_-_PSO_100_MV]
+    [3_-_-_75_MV]
+    [3_-_-_50_MV]
+    [4_-_-_100_WM]
+    [4_-_-_100_MC]
+    [123_DBC_CV_75_MV]
+    [123_Rand_CV_75_MV]
+    [123_DBC+R_CV_75_MV]
+    [123_DBC_CV_50_MV]
+    [123_Rand_CV_50_MV]
+    [123_DBC+R_CV_50_MV]
+    [124_DBC_CV_100_WM]
+    [124_Rand_CV_100_WM]
+    [124_DBC+R_CV_100_WM]
+    [124_DBC_CV_100_MC]
+    [124_Rand_CV_100_MC]
+    [124_DBC+R_CV_100_MC]
+    [124_DBC_PSO_100_WM]
+    [124_Rand_PSO_100_WM]
+    [124_DBC+R_PSO_100_WM]
+    [124_DBC_PSO_100_MC]
+    [124_Rand_PSO_100_MC]
+    [124_DBC+R_PSO_100_MC]
+    [1234_DBC_CV_75_WM]
+    [1234_Rand_CV_75_WM]
+    [1234_DBC+R_CV_75_WM]
+    [1234_DBC_CV_50_WM]
+    [1234_Rand_CV_50_WM]
+    [1234_DBC+R_CV_50_WM]
+    [1234_DBC_CV_75_MC]
+    [1234_Rand_CV_75_MC]
+    [1234_DBC+R_CV_75_MC]
+    [1234_DBC_CV_50_MC]
+    [1234_Rand_CV_50_MC]
+    [1234_DBC+R_CV_50_MC]
     \bottomrule
     \end{tabular}
     }
