--- a/results/latex/blood.tex
+++ b/results/latex/blood.tex
@@ -1,49 +1,51 @@
 \begin{table}[ht]
     \centering
+    \caption{Ablation study results for the blood dataset. Columns Clust. Sel.(1), Clf. Self.(2), Feats.\%(3) and Fusion(4) denote, respectively, the clustering evaluation metric, method for base classifier selection, percentage of features and the ensemble fusion strategy. It presents 5 different classification metrics and the average number of clusters. Numbers in parentheses indicate one standard deviation and apply to the last significant digit of each value.}
+    \label{tab:ablation_blood}
     \resizebox{\textwidth}{!}{
-    \begin{tabular}{llllllllll}
+    \begin{tabular}{lccccllllll}
     \toprule
-    & \textbf{Clusters(1)} & \textbf{Clf(2)} & \textbf{\%(3)} & \textbf{Fusion(4)} & \textbf{Accuracy} & \textbf{Recall} & \textbf{Precision} & \textbf{F1-Score} & \textbf{AUC} \\ \midrule
-    0 & - & - & 100 & Voting & 0.78 $\pm$ 0.02 & 0.7 $\pm$ 0.3 & 0.12 $\pm$ 0.07 & 0.2 $\pm$ 0.1 & 0.65 $\pm$ 0.06 \\
-    1 & DBC & - & 100 & Voting & 0.77 $\pm$ 0.02 & 0.6 $\pm$ 0.3 & 0.11 $\pm$ 0.06 & 0.17 $\pm$ 0.09 & 0.6 $\pm$ 0.09 \\
-    1 & Rand & - & 100 & Voting & 0.73 $\pm$ 0.05 & 0.45 $\pm$ 0.07 & 0.6 $\pm$ 0.1 & 0.49 $\pm$ 0.07 & 0.71 $\pm$ 0.04 \\
-    1 & DBC+R & - & 100 & Voting & 0.76 $\pm$ 0.03 & 0.6 $\pm$ 0.3 & 0.1 $\pm$ 0.1 & 0.2 $\pm$ 0.1 & 0.62 $\pm$ 0.09 \\
-    2 & - & Crossval & 100 & Voting & 0.77 $\pm$ 0.01 & 0.4 $\pm$ 0.5 & 0.04 $\pm$ 0.04 & 0.07 $\pm$ 0.08 & 0.55 $\pm$ 0.05 \\
-    2 & - & PSO & 100 & Voting & 0.79 $\pm$ 0.03 & 0.7 $\pm$ 0.2 & 0.24 $\pm$ 0.06 & 0.35 $\pm$ 0.08 & 0.68 $\pm$ 0.07 \\
-    3 & - & - & 75 & Voting & 0.77 $\pm$ 0.02 & 0.6 $\pm$ 0.3 & 0.08 $\pm$ 0.04 & 0.15 $\pm$ 0.07 & 0.64 $\pm$ 0.05 \\
-    3 & - & - & 50 & Voting & 0.76 $\pm$ 0.01 & 0.4 $\pm$ 0.3 & 0.06 $\pm$ 0.04 & 0.1 $\pm$ 0.08 & 0.62 $\pm$ 0.04 \\
-    4 & - & - & 100 & Weighted & 0.77 $\pm$ 0.04 & 0.5 $\pm$ 0.1 & 0.36 $\pm$ 0.05 & 0.43 $\pm$ 0.06 & 0.68 $\pm$ 0.06 \\
-    4 & - & - & 100 & Meta & 0.77 $\pm$ 0.03 & 0.6 $\pm$ 0.3 & 0.15 $\pm$ 0.1 & 0.2 $\pm$ 0.1 & 0.67 $\pm$ 0.1 \\
-    123 & DBC & Crossval & 75 & Voting & 0.77 $\pm$ 0.01 & 0.4 $\pm$ 0.5 & 0.04 $\pm$ 0.05 & 0.07 $\pm$ 0.09 & 0.55 $\pm$ 0.04 \\
-    123 & Rand & Crossval & 75 & Voting & 0.77 $\pm$ 0.02 & 0.3 $\pm$ 0.3 & 0.2 $\pm$ 0.2 & 0.2 $\pm$ 0.2 & 0.68 $\pm$ 0.08 \\
-    123 & DBC+R & Crossval & 75 & Voting & 0.77 $\pm$ 0.01 & 0.5 $\pm$ 0.5 & 0.05 $\pm$ 0.06 & 0.08 $\pm$ 0.1 & 0.55 $\pm$ 0.05 \\
-    123 & DBC & Crossval & 50 & Voting & 0.77 $\pm$ 0.01 & 0.3 $\pm$ 0.5 & 0.02 $\pm$ 0.04 & 0.04 $\pm$ 0.07 & 0.53 $\pm$ 0.04 \\
-    123 & Rand & Crossval & 50 & Voting & 0.75 $\pm$ 0.04 & 0.3 $\pm$ 0.4 & 0.2 $\pm$ 0.2 & 0.2 $\pm$ 0.2 & 0.67 $\pm$ 0.05 \\
-    123 & DBC+R & Crossval & 50 & Voting & 0.77 $\pm$ 0.01 & 0.4 $\pm$ 0.4 & 0.03 $\pm$ 0.04 & 0.05 $\pm$ 0.07 & 0.56 $\pm$ 0.09 \\
-    124 & DBC & Crossval & 100 & Weighted & 0.76 $\pm$ 0.02 & 0.4 $\pm$ 0.4 & 0.1 $\pm$ 0.1 & 0.1 $\pm$ 0.2 & 0.56 $\pm$ 0.05 \\
-    124 & Rand & Crossval & 100 & Weighted & 0.77 $\pm$ 0.04 & 0.5 $\pm$ 0.2 & 0.3 $\pm$ 0.2 & 0.4 $\pm$ 0.2 & 0.66 $\pm$ 0.09 \\
-    124 & DBC+R & Crossval & 100 & Weighted & 0.76 $\pm$ 0.02 & 0.4 $\pm$ 0.4 & 0.1 $\pm$ 0.08 & 0.1 $\pm$ 0.1 & 0.58 $\pm$ 0.08 \\
-    124 & DBC & Crossval & 100 & Meta & 0.77 $\pm$ 0.01 & 0.6 $\pm$ 0.3 & 0.08 $\pm$ 0.06 & 0.13 $\pm$ 0.08 & 0.6 $\pm$ 0.1 \\
-    124 & Rand & Crossval & 100 & Meta & 0.78 $\pm$ 0.03 & 0.6 $\pm$ 0.3 & 0.2 $\pm$ 0.1 & 0.3 $\pm$ 0.2 & 0.66 $\pm$ 0.06 \\
-    124 & DBC+R & Crossval & 100 & Meta & 0.77 $\pm$ 0.02 & 0.5 $\pm$ 0.3 & 0.12 $\pm$ 0.08 & 0.2 $\pm$ 0.1 & 0.68 $\pm$ 0.07 \\
-    124 & DBC & PSO & 100 & Weighted & 0.78 $\pm$ 0.05 & 0.6 $\pm$ 0.2 & 0.4 $\pm$ 0.1 & 0.4 $\pm$ 0.1 & 0.67 $\pm$ 0.08 \\
-    124 & Rand & PSO & 100 & Weighted & 0.78 $\pm$ 0.04 & 0.6 $\pm$ 0.1 & 0.4 $\pm$ 0.1 & 0.5 $\pm$ 0.1 & 0.72 $\pm$ 0.07 \\
-    124 & DBC+R & PSO & 100 & Weighted & 0.78 $\pm$ 0.05 & 0.6 $\pm$ 0.1 & 0.4 $\pm$ 0.1 & 0.4 $\pm$ 0.1 & 0.69 $\pm$ 0.07 \\
-    124 & DBC & PSO & 100 & Meta & 0.77 $\pm$ 0.04 & 0.5 $\pm$ 0.1 & 0.36 $\pm$ 0.1 & 0.43 $\pm$ 0.09 & 0.67 $\pm$ 0.07 \\
-    124 & Rand & PSO & 100 & Meta & 0.78 $\pm$ 0.03 & 0.6 $\pm$ 0.1 & 0.3 $\pm$ 0.1 & 0.4 $\pm$ 0.1 & 0.67 $\pm$ 0.07 \\
-    124 & DBC+R & PSO & 100 & Meta & 0.78 $\pm$ 0.04 & 0.6 $\pm$ 0.2 & 0.34 $\pm$ 0.1 & 0.42 $\pm$ 0.1 & 0.69 $\pm$ 0.06 \\
-    1234 & DBC & Crossval & 75 & Weighted & 0.77 $\pm$ 0.01 & 0.5 $\pm$ 0.4 & 0.1 $\pm$ 0.1 & 0.1 $\pm$ 0.1 & 0.56 $\pm$ 0.04 \\
-    1234 & Rand & Crossval & 75 & Weighted & 0.77 $\pm$ 0.04 & 0.5 $\pm$ 0.2 & 0.3 $\pm$ 0.2 & 0.3 $\pm$ 0.2 & 0.69 $\pm$ 0.09 \\
-    1234 & DBC+R & Crossval & 75 & Weighted & 0.76 $\pm$ 0.03 & 0.6 $\pm$ 0.5 & 0.07 $\pm$ 0.07 & 0.1 $\pm$ 0.1 & 0.56 $\pm$ 0.06 \\
-    1234 & DBC & Crossval & 50 & Weighted & 0.76 $\pm$ 0.02 & 0.6 $\pm$ 0.4 & 0.08 $\pm$ 0.07 & 0.14 $\pm$ 0.09 & 0.54 $\pm$ 0.04 \\
-    1234 & Rand & Crossval & 50 & Weighted & 0.76 $\pm$ 0.03 & 0.5 $\pm$ 0.1 & 0.2 $\pm$ 0.1 & 0.3 $\pm$ 0.1 & 0.66 $\pm$ 0.08 \\
-    1234 & DBC+R & Crossval & 50 & Weighted & 0.77 $\pm$ 0.02 & 0.5 $\pm$ 0.4 & 0.1 $\pm$ 0.1 & 0.1 $\pm$ 0.1 & 0.56 $\pm$ 0.07 \\
-    1234 & DBC & Crossval & 75 & Meta & 0.77 $\pm$ 0.02 & 0.5 $\pm$ 0.4 & 0.09 $\pm$ 0.1 & 0.1 $\pm$ 0.1 & 0.65 $\pm$ 0.07 \\
-    1234 & Rand & Crossval & 75 & Meta & 0.77 $\pm$ 0.02 & 0.5 $\pm$ 0.3 & 0.2 $\pm$ 0.1 & 0.2 $\pm$ 0.2 & 0.67 $\pm$ 0.07 \\
-    1234 & DBC+R & Crossval & 75 & Meta & 0.76 $\pm$ 0.01 & 0.5 $\pm$ 0.4 & 0.07 $\pm$ 0.07 & 0.12 $\pm$ 0.1 & 0.65 $\pm$ 0.05 \\
-    1234 & DBC & Crossval & 50 & Meta & 0.77 $\pm$ 0.01 & 0.5 $\pm$ 0.4 & 0.06 $\pm$ 0.04 & 0.1 $\pm$ 0.08 & 0.66 $\pm$ 0.07 \\
-    1234 & Rand & Crossval & 50 & Meta & 0.77 $\pm$ 0.02 & 0.5 $\pm$ 0.4 & 0.1 $\pm$ 0.1 & 0.2 $\pm$ 0.1 & 0.66 $\pm$ 0.08 \\
-    1234 & DBC+R & Crossval & 50 & Meta & 0.76 $\pm$ 0.01 & 0.4 $\pm$ 0.4 & 0.05 $\pm$ 0.05 & 0.08 $\pm$ 0.08 & 0.63 $\pm$ 0.06 \\
+    {}          & \HBreak{Clust.\\Sel.(1)} & \HBreak{Clf.\\Sel.(2)} & \HBreak{Feats.\\\%(3)} & \HBreak{Fusion\\(4)} & \HBreak{Num.\\Clust.} & \textbf{Acc.} & \textbf{Recall} & \textbf{Prec.} & \textbf{F1}        & \textbf{AUC} \\ \midrule
+    0 & - & - & 100 & MV & 2 & 0.78(2) & 0.7(2) & 0.12(6) & 0.2(1) & 0.65(5) \\
+    1 & DBC & - & 100 & MV & 3(2) & 0.77(2) & 0.6(3) & 0.11(5) & 0.17(9) & 0.60(9) \\
+    1 & Rand & - & 100 & MV & 5.3(9) & 0.73(4) & 0.45(7) & 0.6(1) & 0.49(6) & 0.71(3) \\
+    1 & DBC+R & - & 100 & MV & 3(2) & 0.76(2) & 0.6(2) & 0.1(1) & 0.2(1) & 0.62(9) \\
+    2 & - & CV & 100 & MV & 2 & 0.77(1) & 0.4(4) & 0.04(4) & 0.07(7) & 0.55(4) \\
+    2 & - & PSO & 100 & MV & 2 & 0.79(2) & 0.7(1) & 0.24(5) & 0.35(7) & 0.68(6) \\
+    3 & - & - & 75 & MV & 2 & 0.77(1) & 0.6(3) & 0.08(3) & 0.15(6) & 0.64(5) \\
+    3 & - & - & 50 & MV & 2 & 0.76(1) & 0.4(3) & 0.06(4) & 0.10(7) & 0.62(4) \\
+    4 & - & - & 100 & WM & 2 & 0.77(3) & 0.5(1) & 0.36(4) & 0.43(6) & 0.68(5) \\
+    4 & - & - & 100 & MC & 2 & 0.77(2) & 0.6(3) & 0.15(9) & 0.2(1) & 0.67(9) \\
+    123 & DBC & CV & 75 & MV & 3(2) & 0.77(1) & 0.4(4) & 0.04(5) & 0.07(9) & 0.55(4) \\
+    123 & Rand & CV & 75 & MV & 5.3(9) & 0.77(1) & 0.3(3) & 0.2(2) & 0.2(2) & 0.68(8) \\
+    123 & DBC+R & CV & 75 & MV & 3(2) & 0.77(1) & 0.5(5) & 0.05(5) & 0.08(9) & 0.55(4) \\
+    123 & DBC & CV & 50 & MV & 3(2) & 0.77(1) & 0.3(4) & 0.02(3) & 0.04(6) & 0.53(3) \\
+    123 & Rand & CV & 50 & MV & 5.3(9) & 0.75(3) & 0.3(3) & 0.2(2) & 0.2(1) & 0.67(4) \\
+    123 & DBC+R & CV & 50 & MV & 3(2) & 0.77(1) & 0.4(4) & 0.03(3) & 0.05(7) & 0.56(9) \\
+    124 & DBC & CV & 100 & WM & 3(2) & 0.76(1) & 0.4(3) & 0.1(1) & 0.1(1) & 0.56(4) \\
+    124 & Rand & CV & 100 & WM & 5.3(9) & 0.77(3) & 0.5(2) & 0.3(1) & 0.4(1) & 0.66(8) \\
+    124 & DBC+R & CV & 100 & WM & 3(2) & 0.76(2) & 0.4(3) & 0.10(7) & 0.1(1) & 0.58(7) \\
+    124 & DBC & CV & 100 & MC & 3(2) & 0.77(1) & 0.6(3) & 0.08(6) & 0.13(8) & 0.6(1) \\
+    124 & Rand & CV & 100 & MC & 5.3(9) & 0.78(3) & 0.6(2) & 0.2(1) & 0.3(1) & 0.66(5) \\
+    124 & DBC+R & CV & 100 & MC & 3(2) & 0.77(1) & 0.5(2) & 0.12(8) & 0.2(1) & 0.68(6) \\
+    124 & DBC & PSO & 100 & WM & 3(2) & 0.78(4) & 0.6(1) & 0.4(1) & 0.4(1) & 0.67(7) \\
+    124 & Rand & PSO & 100 & WM & 5.3(9) & 0.78(3) & 0.6(1) & 0.4(1) & 0.5(1) & 0.72(6) \\
+    124 & DBC+R & PSO & 100 & WM & 3(2) & 0.78(4) & 0.6(1) & 0.4(1) & 0.4(1) & 0.69(7) \\
+    124 & DBC & PSO & 100 & MC & 3(2) & 0.77(3) & 0.5(1) & 0.36(9) & 0.43(9) & 0.67(6) \\
+    124 & Rand & PSO & 100 & MC & 5.3(9) & 0.78(3) & 0.6(1) & 0.3(1) & 0.4(1) & 0.67(6) \\
+    124 & DBC+R & PSO & 100 & MC & 3(2) & 0.78(3) & 0.6(1) & 0.34(9) & 0.42(9) & 0.69(5) \\
+    1234 & DBC & CV & 75 & WM & 3(2) & 0.77(1) & 0.5(4) & 0.1(1) & 0.1(1) & 0.56(4) \\
+    1234 & Rand & CV & 75 & WM & 5.3(9) & 0.77(4) & 0.5(2) & 0.3(1) & 0.3(1) & 0.69(8) \\
+    1234 & DBC+R & CV & 75 & WM & 3(2) & 0.76(2) & 0.6(4) & 0.07(6) & 0.1(1) & 0.56(5) \\
+    1234 & DBC & CV & 50 & WM & 3(2) & 0.76(1) & 0.6(3) & 0.08(6) & 0.14(9) & 0.54(3) \\
+    1234 & Rand & CV & 50 & WM & 5.3(9) & 0.76(3) & 0.5(1) & 0.2(1) & 0.3(1) & 0.66(7) \\
+    1234 & DBC+R & CV & 50 & WM & 3(2) & 0.77(1) & 0.5(4) & 0.1(1) & 0.1(1) & 0.56(6) \\
+    1234 & DBC & CV & 75 & MC & 3(2) & 0.77(1) & 0.5(3) & 0.09(9) & 0.1(1) & 0.65(6) \\
+    1234 & Rand & CV & 75 & MC & 5.3(9) & 0.77(1) & 0.5(2) & 0.2(1) & 0.2(1) & 0.67(7) \\
+    1234 & DBC+R & CV & 75 & MC & 3(2) & 0.76(1) & 0.5(3) & 0.07(6) & 0.12(9) & 0.65(5) \\
+    1234 & DBC & CV & 50 & MC & 3(2) & 0.77(1) & 0.5(3) & 0.06(4) & 0.10(7) & 0.66(7) \\
+    1234 & Rand & CV & 50 & MC & 5.3(9) & 0.77(2) & 0.5(3) & 0.1(1) & 0.2(1) & 0.66(8) \\
+    1234 & DBC+R & CV & 50 & MC & 3(2) & 0.76(1) & 0.4(3) & 0.05(4) & 0.08(8) & 0.63(5) \\
     \bottomrule
     \end{tabular}
     }
