--- a/results/latex/elipses.tex
+++ b/results/latex/elipses.tex
@@ -1,49 +1,51 @@
 \begin{table}[ht]
     \centering
+    \caption{Ablation study results for the elipses dataset. Columns Clust. Sel.(1), Clf. Self.(2), Feats.\%(3) and Fusion(4) denote, respectively, the clustering evaluation metric, method for base classifier selection, percentage of features and the ensemble fusion strategy. It presents 5 different classification metrics and the average number of clusters. Numbers in parentheses indicate one standard deviation and apply to the last significant digit of each value.}
+    \label{tab:ablation_elipses}
     \resizebox{\textwidth}{!}{
-    \begin{tabular}{llllllllll}
+    \begin{tabular}{lccccllllll}
     \toprule
-    & \textbf{Clusters(1)} & \textbf{Clf(2)} & \textbf{\%(3)} & \textbf{Fusion(4)} & \textbf{Accuracy} & \textbf{Recall} & \textbf{Precision} & \textbf{F1-Score} & \textbf{AUC} \\ \midrule
-    0 & - & - & 100 & Voting & 0.23 $\pm$ 0.05 & 0.23 $\pm$ 0.05 & 0.25 $\pm$ 0.06 & 0.23 $\pm$ 0.05 & 0.41 $\pm$ 0.05 \\
-    1 & DBC & - & 100 & Voting & 0.45 $\pm$ 0.07 & 0.45 $\pm$ 0.07 & 0.47 $\pm$ 0.08 & 0.45 $\pm$ 0.07 & 0.64 $\pm$ 0.05 \\
-    1 & Rand & - & 100 & Voting & 0.42 $\pm$ 0.05 & 0.42 $\pm$ 0.05 & 0.47 $\pm$ 0.08 & 0.42 $\pm$ 0.06 & 0.63 $\pm$ 0.05 \\
-    1 & DBC+R & - & 100 & Voting & 0.43 $\pm$ 0.06 & 0.43 $\pm$ 0.06 & 0.47 $\pm$ 0.08 & 0.43 $\pm$ 0.06 & 0.64 $\pm$ 0.05 \\
-    2 & - & Crossval & 100 & Voting & 0.55 $\pm$ 0.05 & 0.55 $\pm$ 0.05 & 0.6 $\pm$ 0.05 & 0.55 $\pm$ 0.04 & 0.77 $\pm$ 0.05 \\
-    2 & - & PSO & 100 & Voting & 0.68 $\pm$ 0.05 & 0.68 $\pm$ 0.05 & 0.75 $\pm$ 0.06 & 0.68 $\pm$ 0.05 & 0.86 $\pm$ 0.03 \\
-    3 & - & - & 75 & Voting & 0.23 $\pm$ 0.05 & 0.23 $\pm$ 0.05 & 0.25 $\pm$ 0.06 & 0.23 $\pm$ 0.05 & 0.42 $\pm$ 0.05 \\
-    3 & - & - & 50 & Voting & 0.26 $\pm$ 0.05 & 0.26 $\pm$ 0.05 & 0.28 $\pm$ 0.06 & 0.27 $\pm$ 0.05 & 0.45 $\pm$ 0.04 \\
-    4 & - & - & 100 & Weighted & 0.69 $\pm$ 0.04 & 0.69 $\pm$ 0.04 & 0.7 $\pm$ 0.05 & 0.69 $\pm$ 0.04 & 0.77 $\pm$ 0.04 \\
-    4 & - & - & 100 & Meta & 0.42 $\pm$ 0.06 & 0.42 $\pm$ 0.06 & 0.49 $\pm$ 0.07 & 0.44 $\pm$ 0.06 & 0.65 $\pm$ 0.05 \\
-    123 & DBC & Crossval & 75 & Voting & 0.63 $\pm$ 0.06 & 0.63 $\pm$ 0.06 & 0.71 $\pm$ 0.05 & 0.65 $\pm$ 0.05 & 0.8 $\pm$ 0.03 \\
-    123 & Rand & Crossval & 75 & Voting & 0.66 $\pm$ 0.06 & 0.66 $\pm$ 0.06 & 0.71 $\pm$ 0.05 & 0.67 $\pm$ 0.05 & 0.81 $\pm$ 0.03 \\
-    123 & DBC+R & Crossval & 75 & Voting & 0.63 $\pm$ 0.05 & 0.63 $\pm$ 0.05 & 0.71 $\pm$ 0.05 & 0.65 $\pm$ 0.04 & 0.81 $\pm$ 0.02 \\
-    123 & DBC & Crossval & 50 & Voting & 0.64 $\pm$ 0.07 & 0.64 $\pm$ 0.07 & 0.71 $\pm$ 0.08 & 0.65 $\pm$ 0.07 & 0.8 $\pm$ 0.05 \\
-    123 & Rand & Crossval & 50 & Voting & 0.62 $\pm$ 0.06 & 0.62 $\pm$ 0.06 & 0.69 $\pm$ 0.07 & 0.63 $\pm$ 0.06 & 0.8 $\pm$ 0.04 \\
-    123 & DBC+R & Crossval & 50 & Voting & 0.65 $\pm$ 0.05 & 0.65 $\pm$ 0.05 & 0.72 $\pm$ 0.05 & 0.66 $\pm$ 0.04 & 0.81 $\pm$ 0.02 \\
-    124 & DBC & Crossval & 100 & Weighted & 0.69 $\pm$ 0.03 & 0.69 $\pm$ 0.03 & 0.72 $\pm$ 0.02 & 0.7 $\pm$ 0.03 & 0.78 $\pm$ 0.03 \\
-    124 & Rand & Crossval & 100 & Weighted & 0.68 $\pm$ 0.04 & 0.68 $\pm$ 0.04 & 0.72 $\pm$ 0.03 & 0.69 $\pm$ 0.03 & 0.8 $\pm$ 0.03 \\
-    124 & DBC+R & Crossval & 100 & Weighted & 0.68 $\pm$ 0.03 & 0.68 $\pm$ 0.03 & 0.71 $\pm$ 0.03 & 0.69 $\pm$ 0.03 & 0.79 $\pm$ 0.04 \\
-    124 & DBC & Crossval & 100 & Meta & 0.7 $\pm$ 0.04 & 0.7 $\pm$ 0.04 & 0.72 $\pm$ 0.04 & 0.7 $\pm$ 0.04 & 0.89 $\pm$ 0.02 \\
-    124 & Rand & Crossval & 100 & Meta & 0.68 $\pm$ 0.04 & 0.68 $\pm$ 0.04 & 0.7 $\pm$ 0.04 & 0.68 $\pm$ 0.04 & 0.87 $\pm$ 0.03 \\
-    124 & DBC+R & Crossval & 100 & Meta & 0.68 $\pm$ 0.04 & 0.68 $\pm$ 0.04 & 0.7 $\pm$ 0.04 & 0.69 $\pm$ 0.04 & 0.88 $\pm$ 0.02 \\
-    124 & DBC & PSO & 100 & Weighted & 0.71 $\pm$ 0.05 & 0.71 $\pm$ 0.05 & 0.72 $\pm$ 0.05 & 0.71 $\pm$ 0.05 & 0.86 $\pm$ 0.02 \\
-    124 & Rand & PSO & 100 & Weighted & 0.72 $\pm$ 0.03 & 0.72 $\pm$ 0.03 & 0.74 $\pm$ 0.03 & 0.72 $\pm$ 0.03 & 0.86 $\pm$ 0.01 \\
-    124 & DBC+R & PSO & 100 & Weighted & 0.71 $\pm$ 0.05 & 0.71 $\pm$ 0.05 & 0.72 $\pm$ 0.05 & 0.71 $\pm$ 0.05 & 0.86 $\pm$ 0.02 \\
-    124 & DBC & PSO & 100 & Meta & 0.69 $\pm$ 0.04 & 0.69 $\pm$ 0.04 & 0.72 $\pm$ 0.05 & 0.69 $\pm$ 0.04 & 0.85 $\pm$ 0.03 \\
-    124 & Rand & PSO & 100 & Meta & 0.69 $\pm$ 0.04 & 0.69 $\pm$ 0.04 & 0.71 $\pm$ 0.04 & 0.69 $\pm$ 0.04 & 0.89 $\pm$ 0.02 \\
-    124 & DBC+R & PSO & 100 & Meta & 0.7 $\pm$ 0.05 & 0.7 $\pm$ 0.05 & 0.72 $\pm$ 0.04 & 0.7 $\pm$ 0.05 & 0.89 $\pm$ 0.02 \\
-    1234 & DBC & Crossval & 75 & Weighted & 0.69 $\pm$ 0.03 & 0.69 $\pm$ 0.03 & 0.72 $\pm$ 0.03 & 0.7 $\pm$ 0.03 & 0.8 $\pm$ 0.05 \\
-    1234 & Rand & Crossval & 75 & Weighted & 0.69 $\pm$ 0.03 & 0.69 $\pm$ 0.03 & 0.72 $\pm$ 0.03 & 0.7 $\pm$ 0.03 & 0.81 $\pm$ 0.02 \\
-    1234 & DBC+R & Crossval & 75 & Weighted & 0.7 $\pm$ 0.02 & 0.7 $\pm$ 0.02 & 0.73 $\pm$ 0.03 & 0.7 $\pm$ 0.02 & 0.81 $\pm$ 0.01 \\
-    1234 & DBC & Crossval & 50 & Weighted & 0.69 $\pm$ 0.04 & 0.69 $\pm$ 0.04 & 0.71 $\pm$ 0.03 & 0.69 $\pm$ 0.04 & 0.8 $\pm$ 0.03 \\
-    1234 & Rand & Crossval & 50 & Weighted & 0.68 $\pm$ 0.03 & 0.68 $\pm$ 0.03 & 0.71 $\pm$ 0.03 & 0.69 $\pm$ 0.03 & 0.81 $\pm$ 0.03 \\
-    1234 & DBC+R & Crossval & 50 & Weighted & 0.68 $\pm$ 0.03 & 0.68 $\pm$ 0.03 & 0.71 $\pm$ 0.03 & 0.69 $\pm$ 0.03 & 0.8 $\pm$ 0.05 \\
-    1234 & DBC & Crossval & 75 & Meta & 0.64 $\pm$ 0.08 & 0.64 $\pm$ 0.08 & 0.68 $\pm$ 0.06 & 0.65 $\pm$ 0.07 & 0.85 $\pm$ 0.07 \\
-    1234 & Rand & Crossval & 75 & Meta & 0.69 $\pm$ 0.05 & 0.69 $\pm$ 0.05 & 0.72 $\pm$ 0.03 & 0.69 $\pm$ 0.04 & 0.88 $\pm$ 0.04 \\
-    1234 & DBC+R & Crossval & 75 & Meta & 0.67 $\pm$ 0.07 & 0.67 $\pm$ 0.07 & 0.69 $\pm$ 0.07 & 0.67 $\pm$ 0.07 & 0.87 $\pm$ 0.06 \\
-    1234 & DBC & Crossval & 50 & Meta & 0.69 $\pm$ 0.05 & 0.69 $\pm$ 0.05 & 0.72 $\pm$ 0.04 & 0.7 $\pm$ 0.04 & 0.88 $\pm$ 0.04 \\
-    1234 & Rand & Crossval & 50 & Meta & 0.69 $\pm$ 0.04 & 0.69 $\pm$ 0.04 & 0.72 $\pm$ 0.03 & 0.7 $\pm$ 0.04 & 0.88 $\pm$ 0.04 \\
-    1234 & DBC+R & Crossval & 50 & Meta & 0.69 $\pm$ 0.04 & 0.69 $\pm$ 0.04 & 0.72 $\pm$ 0.03 & 0.7 $\pm$ 0.04 & 0.88 $\pm$ 0.04 \\
+    {}          & \HBreak{Clust.\\Sel.(1)} & \HBreak{Clf.\\Sel.(2)} & \HBreak{Feats.\\\%(3)} & \HBreak{Fusion\\(4)} & \HBreak{Num.\\Clust.} & \textbf{Acc.} & \textbf{Recall} & \textbf{Prec.} & \textbf{F1}        & \textbf{AUC} \\ \midrule
+    0 & - & - & 100 & MV & 3 & 0.23(4) & 0.23(4) & 0.25(6) & 0.23(5) & 0.41(5) \\
+    1 & DBC & - & 100 & MV & 2 & 0.45(6) & 0.45(6) & 0.47(7) & 0.45(7) & 0.64(5) \\
+    1 & Rand & - & 100 & MV & 2 & 0.42(5) & 0.42(5) & 0.47(7) & 0.42(5) & 0.63(4) \\
+    1 & DBC+R & - & 100 & MV & 2 & 0.43(5) & 0.43(5) & 0.47(7) & 0.43(6) & 0.64(5) \\
+    2 & - & CV & 100 & MV & 3 & 0.55(4) & 0.55(4) & 0.60(4) & 0.55(4) & 0.77(5) \\
+    2 & - & PSO & 100 & MV & 3 & 0.68(5) & 0.68(5) & 0.75(6) & 0.68(4) & 0.86(2) \\
+    3 & - & - & 75 & MV & 3 & 0.23(4) & 0.23(4) & 0.25(5) & 0.23(4) & 0.42(4) \\
+    3 & - & - & 50 & MV & 3 & 0.26(4) & 0.26(4) & 0.28(5) & 0.27(4) & 0.45(4) \\
+    4 & - & - & 100 & WM & 3 & 0.69(4) & 0.69(4) & 0.70(4) & 0.69(4) & 0.77(3) \\
+    4 & - & - & 100 & MC & 3 & 0.42(6) & 0.42(6) & 0.49(6) & 0.44(5) & 0.65(5) \\
+    123 & DBC & CV & 75 & MV & 2 & 0.63(6) & 0.63(6) & 0.71(5) & 0.65(5) & 0.80(2) \\
+    123 & Rand & CV & 75 & MV & 2 & 0.66(5) & 0.66(5) & 0.71(5) & 0.67(5) & 0.81(3) \\
+    123 & DBC+R & CV & 75 & MV & 2 & 0.63(5) & 0.63(5) & 0.71(4) & 0.65(4) & 0.81(1) \\
+    123 & DBC & CV & 50 & MV & 2 & 0.64(7) & 0.64(7) & 0.71(7) & 0.65(7) & 0.80(5) \\
+    123 & Rand & CV & 50 & MV & 2 & 0.62(5) & 0.62(5) & 0.69(7) & 0.63(6) & 0.80(3) \\
+    123 & DBC+R & CV & 50 & MV & 2 & 0.65(4) & 0.65(4) & 0.72(5) & 0.66(4) & 0.81(2) \\
+    124 & DBC & CV & 100 & WM & 2 & 0.69(3) & 0.69(3) & 0.72(1) & 0.70(2) & 0.78(3) \\
+    124 & Rand & CV & 100 & WM & 2 & 0.68(3) & 0.68(3) & 0.72(3) & 0.69(3) & 0.80(2) \\
+    124 & DBC+R & CV & 100 & WM & 2 & 0.68(3) & 0.68(3) & 0.71(2) & 0.69(2) & 0.79(4) \\
+    124 & DBC & CV & 100 & MC & 2 & 0.70(4) & 0.70(4) & 0.72(4) & 0.70(4) & 0.89(1) \\
+    124 & Rand & CV & 100 & MC & 2 & 0.68(4) & 0.68(4) & 0.70(3) & 0.68(4) & 0.87(3) \\
+    124 & DBC+R & CV & 100 & MC & 2 & 0.68(3) & 0.68(3) & 0.70(3) & 0.69(3) & 0.88(2) \\
+    124 & DBC & PSO & 100 & WM & 7(2) & 0.71(4) & 0.71(4) & 0.72(4) & 0.71(4) & 0.86(2) \\
+    124 & Rand & PSO & 100 & WM & 7(2) & 0.72(3) & 0.72(3) & 0.74(2) & 0.72(3) & 0.86(1) \\
+    124 & DBC+R & PSO & 100 & WM & 7(2) & 0.71(4) & 0.71(4) & 0.72(4) & 0.71(4) & 0.86(1) \\
+    124 & DBC & PSO & 100 & MC & 2 & 0.69(3) & 0.69(3) & 0.72(4) & 0.69(3) & 0.85(3) \\
+    124 & Rand & PSO & 100 & MC & 7(2) & 0.69(4) & 0.69(4) & 0.71(4) & 0.69(4) & 0.89(1) \\
+    124 & DBC+R & PSO & 100 & MC & 6(2) & 0.70(4) & 0.70(4) & 0.72(4) & 0.70(4) & 0.89(2) \\
+    1234 & DBC & CV & 75 & WM & 2 & 0.69(3) & 0.69(3) & 0.72(3) & 0.70(3) & 0.80(4) \\
+    1234 & Rand & CV & 75 & WM & 2 & 0.69(2) & 0.69(2) & 0.72(3) & 0.70(2) & 0.81(2) \\
+    1234 & DBC+R & CV & 75 & WM & 2 & 0.70(2) & 0.70(2) & 0.73(2) & 0.70(2) & 0.81(1) \\
+    1234 & DBC & CV & 50 & WM & 2 & 0.69(3) & 0.69(3) & 0.71(3) & 0.69(3) & 0.80(3) \\
+    1234 & Rand & CV & 50 & WM & 2 & 0.68(2) & 0.68(2) & 0.71(3) & 0.69(2) & 0.81(2) \\
+    1234 & DBC+R & CV & 50 & WM & 2 & 0.68(3) & 0.68(3) & 0.71(2) & 0.69(3) & 0.80(5) \\
+    1234 & DBC & CV & 75 & MC & 2 & 0.64(7) & 0.64(7) & 0.68(5) & 0.65(6) & 0.85(7) \\
+    1234 & Rand & CV & 75 & MC & 2 & 0.69(4) & 0.69(4) & 0.72(3) & 0.69(4) & 0.88(3) \\
+    1234 & DBC+R & CV & 75 & MC & 2 & 0.67(7) & 0.67(7) & 0.69(6) & 0.67(7) & 0.87(5) \\
+    1234 & DBC & CV & 50 & MC & 2 & 0.69(4) & 0.69(4) & 0.72(3) & 0.70(4) & 0.88(3) \\
+    1234 & Rand & CV & 50 & MC & 2 & 0.69(4) & 0.69(4) & 0.72(3) & 0.70(4) & 0.88(3) \\
+    1234 & DBC+R & CV & 50 & MC & 2 & 0.69(4) & 0.69(4) & 0.72(2) & 0.70(3) & 0.88(3) \\
     \bottomrule
     \end{tabular}
     }
