--- a/results/latex/german_credit.tex
+++ b/results/latex/german_credit.tex
@@ -1,49 +1,51 @@
 \begin{table}[ht]
     \centering
+    \caption{Ablation study results for the German credit dataset. Columns Clust. Sel.(1), Clf. Self.(2), Feats.\%(3) and Fusion(4) denote, respectively, the clustering evaluation metric, method for base classifier selection, percentage of features and the ensemble fusion strategy. It presents 5 different classification metrics and the average number of clusters. Numbers in parentheses indicate one standard deviation and apply to the last significant digit of each value.}
+    \label{tab:ablation_german_credit}
     \resizebox{\textwidth}{!}{
-    \begin{tabular}{llllllllll}
+    \begin{tabular}{lccccllllll}
     \toprule
-    & \textbf{Clusters(1)} & \textbf{Clf(2)} & \textbf{\%(3)} & \textbf{Fusion(4)} & \textbf{Accuracy} & \textbf{Recall} & \textbf{Precision} & \textbf{F1-Score} & \textbf{AUC} \\ \midrule
-    0 & - & - & 100 & Voting & 0.47 $\pm$ 0.04 & 0.3 $\pm$ 0.04 & 0.6 $\pm$ 0.1 & 0.39 $\pm$ 0.06 & 0.51 $\pm$ 0.05 \\
-    1 & DBC & - & 100 & Voting & 0.45 $\pm$ 0.03 & 0.29 $\pm$ 0.03 & 0.6 $\pm$ 0.1 & 0.38 $\pm$ 0.05 & 0.49 $\pm$ 0.04 \\
-    1 & Rand & - & 100 & Voting & 0.43 $\pm$ 0.04 & 0.29 $\pm$ 0.03 & 0.6 $\pm$ 0.2 & 0.39 $\pm$ 0.06 & 0.49 $\pm$ 0.04 \\
-    1 & DBC+R & - & 100 & Voting & 0.45 $\pm$ 0.03 & 0.29 $\pm$ 0.03 & 0.6 $\pm$ 0.1 & 0.38 $\pm$ 0.05 & 0.49 $\pm$ 0.04 \\
-    2 & - & Crossval & 100 & Voting & 0.74 $\pm$ 0.05 & 0.6 $\pm$ 0.1 & 0.4 $\pm$ 0.1 & 0.5 $\pm$ 0.1 & 0.69 $\pm$ 0.07 \\
-    2 & - & PSO & 100 & Voting & 0.74 $\pm$ 0.04 & 0.6 $\pm$ 0.1 & 0.32 $\pm$ 0.1 & 0.4 $\pm$ 0.1 & 0.7 $\pm$ 0.06 \\
-    3 & - & - & 75 & Voting & 0.46 $\pm$ 0.06 & 0.3 $\pm$ 0.04 & 0.6 $\pm$ 0.1 & 0.41 $\pm$ 0.06 & 0.51 $\pm$ 0.06 \\
-    3 & - & - & 50 & Voting & 0.45 $\pm$ 0.07 & 0.3 $\pm$ 0.04 & 0.6 $\pm$ 0.2 & 0.4 $\pm$ 0.07 & 0.51 $\pm$ 0.06 \\
-    4 & - & - & 100 & Weighted & 0.41 $\pm$ 0.04 & 0.31 $\pm$ 0.03 & 0.78 $\pm$ 0.09 & 0.44 $\pm$ 0.04 & 0.52 $\pm$ 0.06 \\
-    4 & - & - & 100 & Meta & 0.698 $\pm$ 0.006 & 0.0 $\pm$ 0.0 & 0.0 $\pm$ 0.0 & 0.0 $\pm$ 0.0 & 0.51 $\pm$ 0.05 \\
-    123 & DBC & Crossval & 75 & Voting & 0.75 $\pm$ 0.05 & 0.7 $\pm$ 0.2 & 0.4 $\pm$ 0.1 & 0.5 $\pm$ 0.1 & 0.7 $\pm$ 0.05 \\
-    123 & Rand & Crossval & 75 & Voting & 0.75 $\pm$ 0.04 & 0.6 $\pm$ 0.1 & 0.4 $\pm$ 0.2 & 0.5 $\pm$ 0.1 & 0.69 $\pm$ 0.06 \\
-    123 & DBC+R & Crossval & 75 & Voting & 0.75 $\pm$ 0.05 & 0.6 $\pm$ 0.1 & 0.4 $\pm$ 0.1 & 0.5 $\pm$ 0.1 & 0.7 $\pm$ 0.05 \\
-    123 & DBC & Crossval & 50 & Voting & 0.74 $\pm$ 0.03 & 0.6 $\pm$ 0.1 & 0.4 $\pm$ 0.1 & 0.4 $\pm$ 0.1 & 0.68 $\pm$ 0.06 \\
-    123 & Rand & Crossval & 50 & Voting & 0.74 $\pm$ 0.04 & 0.6 $\pm$ 0.1 & 0.4 $\pm$ 0.1 & 0.5 $\pm$ 0.1 & 0.68 $\pm$ 0.06 \\
-    123 & DBC+R & Crossval & 50 & Voting & 0.74 $\pm$ 0.04 & 0.6 $\pm$ 0.1 & 0.4 $\pm$ 0.1 & 0.47 $\pm$ 0.09 & 0.68 $\pm$ 0.05 \\
-    124 & DBC & Crossval & 100 & Weighted & 0.73 $\pm$ 0.03 & 0.59 $\pm$ 0.1 & 0.38 $\pm$ 0.07 & 0.46 $\pm$ 0.07 & 0.69 $\pm$ 0.04 \\
-    124 & Rand & Crossval & 100 & Weighted & 0.73 $\pm$ 0.04 & 0.58 $\pm$ 0.1 & 0.38 $\pm$ 0.08 & 0.46 $\pm$ 0.07 & 0.66 $\pm$ 0.06 \\
-    124 & DBC+R & Crossval & 100 & Weighted & 0.73 $\pm$ 0.03 & 0.58 $\pm$ 0.08 & 0.38 $\pm$ 0.08 & 0.45 $\pm$ 0.07 & 0.69 $\pm$ 0.04 \\
-    124 & DBC & Crossval & 100 & Meta & 0.74 $\pm$ 0.04 & 0.58 $\pm$ 0.09 & 0.5 $\pm$ 0.1 & 0.52 $\pm$ 0.1 & 0.71 $\pm$ 0.07 \\
-    124 & Rand & Crossval & 100 & Meta & 0.74 $\pm$ 0.05 & 0.6 $\pm$ 0.1 & 0.5 $\pm$ 0.1 & 0.5 $\pm$ 0.1 & 0.72 $\pm$ 0.07 \\
-    124 & DBC+R & Crossval & 100 & Meta & 0.74 $\pm$ 0.04 & 0.58 $\pm$ 0.09 & 0.5 $\pm$ 0.1 & 0.5 $\pm$ 0.1 & 0.72 $\pm$ 0.07 \\
-    124 & DBC & PSO & 100 & Weighted & 0.73 $\pm$ 0.04 & 0.58 $\pm$ 0.09 & 0.44 $\pm$ 0.08 & 0.49 $\pm$ 0.07 & 0.71 $\pm$ 0.06 \\
-    124 & Rand & PSO & 100 & Weighted & 0.72 $\pm$ 0.04 & 0.55 $\pm$ 0.08 & 0.46 $\pm$ 0.09 & 0.5 $\pm$ 0.07 & 0.67 $\pm$ 0.04 \\
-    124 & DBC+R & PSO & 100 & Weighted & 0.72 $\pm$ 0.04 & 0.55 $\pm$ 0.08 & 0.46 $\pm$ 0.08 & 0.5 $\pm$ 0.06 & 0.67 $\pm$ 0.04 \\
-    124 & DBC & PSO & 100 & Meta & 0.73 $\pm$ 0.05 & 0.6 $\pm$ 0.1 & 0.4 $\pm$ 0.09 & 0.46 $\pm$ 0.1 & 0.71 $\pm$ 0.07 \\
-    124 & Rand & PSO & 100 & Meta & 0.73 $\pm$ 0.03 & 0.56 $\pm$ 0.08 & 0.43 $\pm$ 0.09 & 0.48 $\pm$ 0.07 & 0.69 $\pm$ 0.06 \\
-    124 & DBC+R & PSO & 100 & Meta & 0.72 $\pm$ 0.04 & 0.5 $\pm$ 0.1 & 0.4 $\pm$ 0.1 & 0.47 $\pm$ 0.09 & 0.68 $\pm$ 0.07 \\
-    1234 & DBC & Crossval & 75 & Weighted & 0.73 $\pm$ 0.04 & 0.58 $\pm$ 0.09 & 0.41 $\pm$ 0.09 & 0.47 $\pm$ 0.08 & 0.7 $\pm$ 0.05 \\
-    1234 & Rand & Crossval & 75 & Weighted & 0.74 $\pm$ 0.04 & 0.6 $\pm$ 0.09 & 0.4 $\pm$ 0.1 & 0.5 $\pm$ 0.1 & 0.68 $\pm$ 0.06 \\
-    1234 & DBC+R & Crossval & 75 & Weighted & 0.73 $\pm$ 0.03 & 0.57 $\pm$ 0.08 & 0.4 $\pm$ 0.1 & 0.46 $\pm$ 0.09 & 0.69 $\pm$ 0.05 \\
-    1234 & DBC & Crossval & 50 & Weighted & 0.73 $\pm$ 0.03 & 0.6 $\pm$ 0.1 & 0.4 $\pm$ 0.05 & 0.47 $\pm$ 0.05 & 0.68 $\pm$ 0.04 \\
-    1234 & Rand & Crossval & 50 & Weighted & 0.74 $\pm$ 0.05 & 0.6 $\pm$ 0.1 & 0.42 $\pm$ 0.1 & 0.49 $\pm$ 0.1 & 0.68 $\pm$ 0.06 \\
-    1234 & DBC+R & Crossval & 50 & Weighted & 0.74 $\pm$ 0.04 & 0.6 $\pm$ 0.1 & 0.4 $\pm$ 0.05 & 0.48 $\pm$ 0.06 & 0.68 $\pm$ 0.05 \\
-    1234 & DBC & Crossval & 75 & Meta & 0.76 $\pm$ 0.04 & 0.63 $\pm$ 0.09 & 0.5 $\pm$ 0.1 & 0.54 $\pm$ 0.1 & 0.71 $\pm$ 0.08 \\
-    1234 & Rand & Crossval & 75 & Meta & 0.76 $\pm$ 0.04 & 0.63 $\pm$ 0.09 & 0.5 $\pm$ 0.1 & 0.54 $\pm$ 0.1 & 0.73 $\pm$ 0.06 \\
-    1234 & DBC+R & Crossval & 75 & Meta & 0.75 $\pm$ 0.04 & 0.62 $\pm$ 0.09 & 0.46 $\pm$ 0.1 & 0.52 $\pm$ 0.09 & 0.72 $\pm$ 0.07 \\
-    1234 & DBC & Crossval & 50 & Meta & 0.74 $\pm$ 0.04 & 0.6 $\pm$ 0.1 & 0.42 $\pm$ 0.1 & 0.49 $\pm$ 0.1 & 0.71 $\pm$ 0.05 \\
-    1234 & Rand & Crossval & 50 & Meta & 0.75 $\pm$ 0.05 & 0.6 $\pm$ 0.1 & 0.5 $\pm$ 0.1 & 0.53 $\pm$ 0.09 & 0.73 $\pm$ 0.05 \\
-    1234 & DBC+R & Crossval & 50 & Meta & 0.75 $\pm$ 0.04 & 0.61 $\pm$ 0.09 & 0.44 $\pm$ 0.1 & 0.5 $\pm$ 0.09 & 0.72 $\pm$ 0.04 \\
+    {}          & \HBreak{Clust.\\Sel.(1)} & \HBreak{Clf.\\Sel.(2)} & \HBreak{Feats.\\\%(3)} & \HBreak{Fusion\\(4)} & \HBreak{Num.\\Clust.} & \textbf{Acc.} & \textbf{Recall} & \textbf{Prec.} & \textbf{F1}        & \textbf{AUC} \\ \midrule
+    0 & - & - & 100 & MV & 2 & 0.47(4) & 0.30(3) & 0.6(1) & 0.39(5) & 0.51(5) \\
+    1 & DBC & - & 100 & MV & 2 & 0.45(2) & 0.29(3) & 0.6(1) & 0.38(5) & 0.49(4) \\
+    1 & Rand & - & 100 & MV & 6(1) & 0.5(1) & 0.3(1) & 0.4(2) & 0.3(1) & 0.53(7) \\
+    1 & DBC+R & - & 100 & MV & 2 & 0.45(2) & 0.29(3) & 0.6(1) & 0.38(5) & 0.49(4) \\
+    2 & - & CV & 100 & MV & 2 & 0.74(4) & 0.6(1) & 0.4(1) & 0.5(1) & 0.69(6) \\
+    2 & - & PSO & 100 & MV & 2 & 0.74(4) & 0.6(1) & 0.32(9) & 0.4(1) & 0.70(6) \\
+    3 & - & - & 75 & MV & 2 & 0.46(5) & 0.30(4) & 0.6(1) & 0.41(5) & 0.51(6) \\
+    3 & - & - & 50 & MV & 2 & 0.45(6) & 0.30(4) & 0.6(1) & 0.40(6) & 0.51(5) \\
+    4 & - & - & 100 & WM & 2 & 0.41(4) & 0.31(2) & 0.78(8) & 0.44(4) & 0.52(6) \\
+    4 & - & - & 100 & MC & 2 & 0.698(5) & 0.0 & 0.0 & 0.0 & 0.51(5) \\
+    123 & DBC & CV & 75 & MV & 2 & 0.75(5) & 0.7(1) & 0.4(1) & 0.5(1) & 0.70(4) \\
+    123 & Rand & CV & 75 & MV & 1.7(4) & 0.75(3) & 0.6(1) & 0.4(1) & 0.5(1) & 0.69(6) \\
+    123 & DBC+R & CV & 75 & MV & 2 & 0.75(4) & 0.6(1) & 0.4(1) & 0.5(1) & 0.70(5) \\
+    123 & DBC & CV & 50 & MV & 2 & 0.74(3) & 0.6(1) & 0.4(1) & 0.4(1) & 0.68(5) \\
+    123 & Rand & CV & 50 & MV & 1.7(4) & 0.74(4) & 0.6(1) & 0.4(1) & 0.5(1) & 0.68(6) \\
+    123 & DBC+R & CV & 50 & MV & 2 & 0.74(3) & 0.6(1) & 0.4(1) & 0.47(9) & 0.68(5) \\
+    124 & DBC & CV & 100 & WM & 2 & 0.73(3) & 0.59(9) & 0.38(7) & 0.46(7) & 0.69(4) \\
+    124 & Rand & CV & 100 & WM & 6(1) & 0.73(4) & 0.6(1) & 0.3(1) & 0.4(1) & 0.72(5) \\
+    124 & DBC+R & CV & 100 & WM & 2 & 0.73(2) & 0.58(7) & 0.38(8) & 0.45(7) & 0.69(4) \\
+    124 & DBC & CV & 100 & MC & 2 & 0.74(4) & 0.58(9) & 0.5(1) & 0.52(9) & 0.71(7) \\
+    124 & Rand & CV & 100 & MC & 1.7(4) & 0.74(5) & 0.6(1) & 0.5(1) & 0.5(1) & 0.72(7) \\
+    124 & DBC+R & CV & 100 & MC & 2 & 0.74(4) & 0.58(9) & 0.5(1) & 0.5(1) & 0.72(7) \\
+    124 & DBC & PSO & 100 & WM & 2.3(9) & 0.73(4) & 0.58(9) & 0.44(7) & 0.49(7) & 0.71(6) \\
+    124 & Rand & PSO & 100 & WM & 2 & 0.72(3) & 0.55(7) & 0.46(8) & 0.50(6) & 0.67(4) \\
+    124 & DBC+R & PSO & 100 & WM & 2 & 0.72(4) & 0.55(8) & 0.46(8) & 0.50(6) & 0.67(4) \\
+    124 & DBC & PSO & 100 & MC & 3.2(3) & 0.73(5) & 0.6(1) & 0.40(8) & 0.46(9) & 0.71(6) \\
+    124 & Rand & PSO & 100 & MC & 2 & 0.73(3) & 0.56(7) & 0.43(9) & 0.48(7) & 0.69(5) \\
+    124 & DBC+R & PSO & 100 & MC & 2 & 0.72(4) & 0.5(1) & 0.4(1) & 0.47(9) & 0.68(6) \\
+    1234 & DBC & CV & 75 & WM & 2 & 0.73(3) & 0.58(9) & 0.41(9) & 0.47(8) & 0.70(4) \\
+    1234 & Rand & CV & 75 & WM & 1.7(4) & 0.74(3) & 0.60(8) & 0.4(1) & 0.5(1) & 0.68(5) \\
+    1234 & DBC+R & CV & 75 & WM & 2 & 0.73(3) & 0.57(7) & 0.4(1) & 0.46(9) & 0.69(4) \\
+    1234 & DBC & CV & 50 & WM & 2 & 0.73(3) & 0.6(1) & 0.40(4) & 0.47(5) & 0.68(4) \\
+    1234 & Rand & CV & 50 & WM & 1.7(4) & 0.74(4) & 0.6(1) & 0.42(9) & 0.49(9) & 0.68(6) \\
+    1234 & DBC+R & CV & 50 & WM & 2 & 0.74(3) & 0.6(1) & 0.40(4) & 0.48(5) & 0.68(4) \\
+    1234 & DBC & CV & 75 & MC & 2 & 0.76(4) & 0.63(9) & 0.5(1) & 0.54(9) & 0.71(7) \\
+    1234 & Rand & CV & 75 & MC & 1.7(4) & 0.76(4) & 0.63(9) & 0.5(1) & 0.54(9) & 0.73(6) \\
+    1234 & DBC+R & CV & 75 & MC & 2 & 0.75(3) & 0.62(8) & 0.46(9) & 0.52(9) & 0.72(6) \\
+    1234 & DBC & CV & 50 & MC & 2 & 0.74(4) & 0.6(1) & 0.42(9) & 0.49(9) & 0.71(5) \\
+    1234 & Rand & CV & 50 & MC & 1.7(4) & 0.75(4) & 0.6(1) & 0.5(1) & 0.53(9) & 0.73(4) \\
+    1234 & DBC+R & CV & 50 & MC & 2 & 0.75(3) & 0.61(8) & 0.44(9) & 0.50(9) & 0.72(3) \\
     \bottomrule
     \end{tabular}
     }
