--- a/results/latex/heart.tex
+++ b/results/latex/heart.tex
@@ -1,49 +1,51 @@
 \begin{table}[ht]
     \centering
+    \caption{Ablation study results for the heart disease dataset. Columns Clust. Sel.(1), Clf. Self.(2), Feats.\%(3) and Fusion(4) denote, respectively, the clustering evaluation metric, method for base classifier selection, percentage of features and the ensemble fusion strategy. It presents 5 different classification metrics and the average number of clusters. Numbers in parentheses indicate one standard deviation and apply to the last significant digit of each value.}
+    \label{tab:ablation_heart}
     \resizebox{\textwidth}{!}{
-    \begin{tabular}{llllllllll}
+    \begin{tabular}{lccccllllll}
     \toprule
-    & \textbf{Clusters(1)} & \textbf{Clf(2)} & \textbf{\%(3)} & \textbf{Fusion(4)} & \textbf{Accuracy} & \textbf{Recall} & \textbf{Precision} & \textbf{F1-Score} & \textbf{AUC} \\ \midrule
-    0 & - & - & 100 & Voting & 0.6 $\pm$ 0.2 & 0.5 $\pm$ 0.2 & 0.6 $\pm$ 0.2 & 0.5 $\pm$ 0.2 & 0.6 $\pm$ 0.2 \\
-    1 & DBC & - & 100 & Voting & 0.7 $\pm$ 0.1 & 0.6 $\pm$ 0.2 & 0.8 $\pm$ 0.2 & 0.7 $\pm$ 0.2 & 0.7 $\pm$ 0.1 \\
-    1 & Rand & - & 100 & Voting & 0.4 $\pm$ 0.1 & 0.3 $\pm$ 0.1 & 0.4 $\pm$ 0.2 & 0.4 $\pm$ 0.2 & 0.5 $\pm$ 0.2 \\
-    1 & DBC+R & - & 100 & Voting & 0.4 $\pm$ 0.1 & 0.3 $\pm$ 0.1 & 0.4 $\pm$ 0.2 & 0.4 $\pm$ 0.2 & 0.5 $\pm$ 0.2 \\
-    2 & - & Crossval & 100 & Voting & 0.7 $\pm$ 0.2 & 0.8 $\pm$ 0.2 & 0.6 $\pm$ 0.2 & 0.7 $\pm$ 0.2 & 0.8 $\pm$ 0.1 \\
-    2 & - & PSO & 100 & Voting & 0.84 $\pm$ 0.07 & 0.9 $\pm$ 0.1 & 0.8 $\pm$ 0.1 & 0.8 $\pm$ 0.09 & 0.88 $\pm$ 0.07 \\
-    3 & - & - & 75 & Voting & 0.6 $\pm$ 0.2 & 0.5 $\pm$ 0.2 & 0.6 $\pm$ 0.2 & 0.5 $\pm$ 0.2 & 0.6 $\pm$ 0.2 \\
-    3 & - & - & 50 & Voting & 0.6 $\pm$ 0.2 & 0.6 $\pm$ 0.2 & 0.6 $\pm$ 0.3 & 0.6 $\pm$ 0.2 & 0.6 $\pm$ 0.2 \\
-    4 & - & - & 100 & Weighted & 0.6 $\pm$ 0.2 & 0.7 $\pm$ 0.2 & 0.5 $\pm$ 0.3 & 0.5 $\pm$ 0.2 & 0.6 $\pm$ 0.2 \\
-    4 & - & - & 100 & Meta & 0.77 $\pm$ 0.07 & 0.8 $\pm$ 0.1 & 0.7 $\pm$ 0.1 & 0.71 $\pm$ 0.1 & 0.84 $\pm$ 0.06 \\
-    123 & DBC & Crossval & 75 & Voting & 0.78 $\pm$ 0.08 & 0.8 $\pm$ 0.1 & 0.7 $\pm$ 0.2 & 0.7 $\pm$ 0.1 & 0.82 $\pm$ 0.09 \\
-    123 & Rand & Crossval & 75 & Voting & 0.6 $\pm$ 0.3 & 0.6 $\pm$ 0.3 & 0.6 $\pm$ 0.3 & 0.6 $\pm$ 0.3 & 0.7 $\pm$ 0.3 \\
-    123 & DBC+R & Crossval & 75 & Voting & 0.6 $\pm$ 0.3 & 0.6 $\pm$ 0.3 & 0.6 $\pm$ 0.3 & 0.6 $\pm$ 0.3 & 0.7 $\pm$ 0.3 \\
-    123 & DBC & Crossval & 50 & Voting & 0.8 $\pm$ 0.07 & 0.9 $\pm$ 0.1 & 0.7 $\pm$ 0.2 & 0.7 $\pm$ 0.1 & 0.8 $\pm$ 0.1 \\
-    123 & Rand & Crossval & 50 & Voting & 0.6 $\pm$ 0.2 & 0.6 $\pm$ 0.2 & 0.6 $\pm$ 0.2 & 0.6 $\pm$ 0.2 & 0.7 $\pm$ 0.2 \\
-    123 & DBC+R & Crossval & 50 & Voting & 0.6 $\pm$ 0.2 & 0.6 $\pm$ 0.2 & 0.6 $\pm$ 0.2 & 0.6 $\pm$ 0.2 & 0.7 $\pm$ 0.2 \\
-    124 & DBC & Crossval & 100 & Weighted & 0.81 $\pm$ 0.08 & 0.79 $\pm$ 0.09 & 0.8 $\pm$ 0.1 & 0.79 $\pm$ 0.09 & 0.84 $\pm$ 0.07 \\
-    124 & Rand & Crossval & 100 & Weighted & 0.8 $\pm$ 0.1 & 0.8 $\pm$ 0.1 & 0.7 $\pm$ 0.2 & 0.7 $\pm$ 0.2 & 0.8 $\pm$ 0.1 \\
-    124 & DBC+R & Crossval & 100 & Weighted & 0.8 $\pm$ 0.1 & 0.8 $\pm$ 0.1 & 0.8 $\pm$ 0.1 & 0.78 $\pm$ 0.09 & 0.8 $\pm$ 0.2 \\
-    124 & DBC & Crossval & 100 & Meta & 0.81 $\pm$ 0.05 & 0.83 $\pm$ 0.09 & 0.75 $\pm$ 0.09 & 0.78 $\pm$ 0.06 & 0.87 $\pm$ 0.08 \\
-    124 & Rand & Crossval & 100 & Meta & 0.81 $\pm$ 0.07 & 0.8 $\pm$ 0.1 & 0.7 $\pm$ 0.1 & 0.78 $\pm$ 0.08 & 0.86 $\pm$ 0.06 \\
-    124 & DBC+R & Crossval & 100 & Meta & 0.81 $\pm$ 0.05 & 0.83 $\pm$ 0.09 & 0.7 $\pm$ 0.1 & 0.77 $\pm$ 0.07 & 0.87 $\pm$ 0.05 \\
-    124 & DBC & PSO & 100 & Weighted & 0.82 $\pm$ 0.06 & 0.8 $\pm$ 0.08 & 0.8 $\pm$ 0.1 & 0.79 $\pm$ 0.07 & 0.85 $\pm$ 0.06 \\
-    124 & Rand & PSO & 100 & Weighted & 0.8 $\pm$ 0.08 & 0.8 $\pm$ 0.1 & 0.8 $\pm$ 0.1 & 0.8 $\pm$ 0.1 & 0.84 $\pm$ 0.1 \\
-    124 & DBC+R & PSO & 100 & Weighted & 0.8 $\pm$ 0.08 & 0.8 $\pm$ 0.1 & 0.8 $\pm$ 0.1 & 0.8 $\pm$ 0.1 & 0.84 $\pm$ 0.1 \\
-    124 & DBC & PSO & 100 & Meta & 0.82 $\pm$ 0.05 & 0.9 $\pm$ 0.1 & 0.7 $\pm$ 0.1 & 0.78 $\pm$ 0.06 & 0.9 $\pm$ 0.1 \\
-    124 & Rand & PSO & 100 & Meta & 0.81 $\pm$ 0.05 & 0.83 $\pm$ 0.09 & 0.7 $\pm$ 0.1 & 0.77 $\pm$ 0.07 & 0.85 $\pm$ 0.06 \\
-    124 & DBC+R & PSO & 100 & Meta & 0.81 $\pm$ 0.05 & 0.83 $\pm$ 0.09 & 0.7 $\pm$ 0.1 & 0.77 $\pm$ 0.07 & 0.85 $\pm$ 0.06 \\
-    1234 & DBC & Crossval & 75 & Weighted & 0.78 $\pm$ 0.09 & 0.8 $\pm$ 0.1 & 0.7 $\pm$ 0.2 & 0.7 $\pm$ 0.1 & 0.82 $\pm$ 0.1 \\
-    1234 & Rand & Crossval & 75 & Weighted & 0.7 $\pm$ 0.2 & 0.6 $\pm$ 0.2 & 0.8 $\pm$ 0.2 & 0.7 $\pm$ 0.2 & 0.7 $\pm$ 0.2 \\
-    1234 & DBC+R & Crossval & 75 & Weighted & 0.7 $\pm$ 0.2 & 0.7 $\pm$ 0.2 & 0.8 $\pm$ 0.1 & 0.7 $\pm$ 0.1 & 0.7 $\pm$ 0.2 \\
-    1234 & DBC & Crossval & 50 & Weighted & 0.8 $\pm$ 0.1 & 0.8 $\pm$ 0.1 & 0.7 $\pm$ 0.2 & 0.7 $\pm$ 0.2 & 0.85 $\pm$ 0.08 \\
-    1234 & Rand & Crossval & 50 & Weighted & 0.7 $\pm$ 0.2 & 0.7 $\pm$ 0.2 & 0.8 $\pm$ 0.2 & 0.7 $\pm$ 0.2 & 0.8 $\pm$ 0.2 \\
-    1234 & DBC+R & Crossval & 50 & Weighted & 0.7 $\pm$ 0.2 & 0.7 $\pm$ 0.2 & 0.8 $\pm$ 0.2 & 0.7 $\pm$ 0.1 & 0.7 $\pm$ 0.2 \\
-    1234 & DBC & Crossval & 75 & Meta & 0.84 $\pm$ 0.04 & 0.9 $\pm$ 0.09 & 0.8 $\pm$ 0.1 & 0.81 $\pm$ 0.06 & 0.85 $\pm$ 0.09 \\
-    1234 & Rand & Crossval & 75 & Meta & 0.79 $\pm$ 0.06 & 0.79 $\pm$ 0.07 & 0.7 $\pm$ 0.1 & 0.75 $\pm$ 0.08 & 0.83 $\pm$ 0.07 \\
-    1234 & DBC+R & Crossval & 75 & Meta & 0.78 $\pm$ 0.08 & 0.79 $\pm$ 0.1 & 0.7 $\pm$ 0.2 & 0.7 $\pm$ 0.1 & 0.84 $\pm$ 0.08 \\
-    1234 & DBC & Crossval & 50 & Meta & 0.81 $\pm$ 0.08 & 0.9 $\pm$ 0.1 & 0.7 $\pm$ 0.2 & 0.8 $\pm$ 0.1 & 0.85 $\pm$ 0.09 \\
-    1234 & Rand & Crossval & 50 & Meta & 0.76 $\pm$ 0.08 & 0.76 $\pm$ 0.1 & 0.7 $\pm$ 0.2 & 0.7 $\pm$ 0.1 & 0.8 $\pm$ 0.1 \\
-    1234 & DBC+R & Crossval & 50 & Meta & 0.76 $\pm$ 0.08 & 0.7 $\pm$ 0.1 & 0.7 $\pm$ 0.1 & 0.72 $\pm$ 0.09 & 0.81 $\pm$ 0.08 \\
+    {}          & \HBreak{Clust.\\Sel.(1)} & \HBreak{Clf.\\Sel.(2)} & \HBreak{Feats.\\\%(3)} & \HBreak{Fusion\\(4)} & \HBreak{Num.\\Clust.} & \textbf{Acc.} & \textbf{Recall} & \textbf{Prec.} & \textbf{F1}        & \textbf{AUC} \\ \midrule
+    0 & - & - & 100 & MV & 2 & 0.6(2) & 0.5(2) & 0.6(2) & 0.5(2) & 0.6(2) \\
+    1 & DBC & - & 100 & MV & 2 & 0.7(1) & 0.6(1) & 0.8(2) & 0.7(1) & 0.7(1) \\
+    1 & Rand & - & 100 & MV & 2 & 0.4(1) & 0.3(1) & 0.4(2) & 0.4(1) & 0.5(1) \\
+    1 & DBC+R & - & 100 & MV & 2 & 0.4(1) & 0.3(1) & 0.4(2) & 0.4(1) & 0.5(1) \\
+    2 & - & CV & 100 & MV & 2 & 0.7(1) & 0.8(2) & 0.6(1) & 0.7(1) & 0.8(1) \\
+    2 & - & PSO & 100 & MV & 2 & 0.84(6) & 0.9(1) & 0.8(1) & 0.80(8) & 0.88(7) \\
+    3 & - & - & 75 & MV & 2 & 0.6(2) & 0.5(2) & 0.6(2) & 0.5(2) & 0.6(2) \\
+    3 & - & - & 50 & MV & 2 & 0.6(2) & 0.6(2) & 0.6(2) & 0.6(2) & 0.6(2) \\
+    4 & - & - & 100 & WM & 2 & 0.6(1) & 0.7(2) & 0.5(3) & 0.5(2) & 0.6(2) \\
+    4 & - & - & 100 & MC & 2 & 0.77(7) & 0.8(1) & 0.7(1) & 0.71(9) & 0.84(6) \\
+    123 & DBC & CV & 75 & MV & 2 & 0.78(8) & 0.8(1) & 0.7(1) & 0.7(1) & 0.82(9) \\
+    123 & Rand & CV & 75 & MV & 2 & 0.6(2) & 0.6(2) & 0.6(2) & 0.6(2) & 0.7(2) \\
+    123 & DBC+R & CV & 75 & MV & 2 & 0.6(2) & 0.6(2) & 0.6(2) & 0.6(2) & 0.7(2) \\
+    123 & DBC & CV & 50 & MV & 2 & 0.80(7) & 0.9(1) & 0.7(1) & 0.7(1) & 0.8(1) \\
+    123 & Rand & CV & 50 & MV & 2 & 0.6(2) & 0.6(2) & 0.6(2) & 0.6(2) & 0.7(2) \\
+    123 & DBC+R & CV & 50 & MV & 2 & 0.6(2) & 0.6(2) & 0.6(2) & 0.6(2) & 0.7(2) \\
+    124 & DBC & CV & 100 & WM & 2 & 0.81(7) & 0.79(9) & 0.8(1) & 0.79(8) & 0.84(7) \\
+    124 & Rand & CV & 100 & WM & 2 & 0.8(1) & 0.8(1) & 0.7(2) & 0.7(1) & 0.8(1) \\
+    124 & DBC+R & CV & 100 & WM & 2 & 0.8(1) & 0.8(1) & 0.8(1) & 0.78(9) & 0.8(1) \\
+    124 & DBC & CV & 100 & MC & 2 & 0.81(5) & 0.83(9) & 0.75(9) & 0.78(6) & 0.87(8) \\
+    124 & Rand & CV & 100 & MC & 2 & 0.81(6) & 0.8(1) & 0.7(1) & 0.78(8) & 0.86(5) \\
+    124 & DBC+R & CV & 100 & MC & 2 & 0.81(5) & 0.83(9) & 0.7(1) & 0.77(6) & 0.87(5) \\
+    124 & DBC & PSO & 100 & WM & 2 & 0.82(6) & 0.80(7) & 0.8(1) & 0.79(7) & 0.85(6) \\
+    124 & Rand & PSO & 100 & WM & 2 & 0.80(8) & 0.8(1) & 0.8(1) & 0.8(1) & 0.84(9) \\
+    124 & DBC+R & PSO & 100 & WM & 2 & 0.80(8) & 0.8(1) & 0.8(1) & 0.8(1) & 0.84(9) \\
+    124 & DBC & PSO & 100 & MC & 2 & 0.82(4) & 0.9(1) & 0.7(1) & 0.78(6) & 0.9(1) \\
+    124 & Rand & PSO & 100 & MC & 2 & 0.81(5) & 0.83(8) & 0.7(1) & 0.77(6) & 0.85(6) \\
+    124 & DBC+R & PSO & 100 & MC & 2 & 0.81(5) & 0.83(8) & 0.7(1) & 0.77(6) & 0.85(6) \\
+    1234 & DBC & CV & 75 & WM & 2 & 0.78(8) & 0.8(1) & 0.7(1) & 0.7(1) & 0.82(9) \\
+    1234 & Rand & CV & 75 & WM & 2 & 0.7(1) & 0.6(1) & 0.8(2) & 0.7(1) & 0.7(2) \\
+    1234 & DBC+R & CV & 75 & WM & 2 & 0.7(1) & 0.7(1) & 0.8(1) & 0.7(1) & 0.7(1) \\
+    1234 & DBC & CV & 50 & WM & 2 & 0.80(9) & 0.8(1) & 0.7(2) & 0.7(1) & 0.85(8) \\
+    1234 & Rand & CV & 50 & WM & 2 & 0.7(1) & 0.7(1) & 0.8(1) & 0.7(1) & 0.8(2) \\
+    1234 & DBC+R & CV & 50 & WM & 2 & 0.7(1) & 0.7(1) & 0.8(1) & 0.7(1) & 0.7(2) \\
+    1234 & DBC & CV & 75 & MC & 2 & 0.84(4) & 0.90(9) & 0.8(1) & 0.81(5) & 0.85(8) \\
+    1234 & Rand & CV & 75 & MC & 2 & 0.79(5) & 0.79(6) & 0.7(1) & 0.75(8) & 0.83(7) \\
+    1234 & DBC+R & CV & 75 & MC & 2 & 0.78(8) & 0.79(9) & 0.7(1) & 0.7(1) & 0.84(7) \\
+    1234 & DBC & CV & 50 & MC & 2 & 0.81(8) & 0.9(1) & 0.7(1) & 0.8(1) & 0.85(8) \\
+    1234 & Rand & CV & 50 & MC & 2 & 0.76(8) & 0.76(9) & 0.7(1) & 0.7(1) & 0.80(9) \\
+    1234 & DBC+R & CV & 50 & MC & 2 & 0.76(8) & 0.7(1) & 0.7(1) & 0.72(8) & 0.81(8) \\
     \bottomrule
     \end{tabular}
     }
