--- a/results/latex/iris.tex
+++ b/results/latex/iris.tex
@@ -1,49 +1,51 @@
 \begin{table}[ht]
     \centering
+    \caption{Ablation study results for the iris dataset. Columns Clust. Sel.(1), Clf. Self.(2), Feats.\%(3) and Fusion(4) denote, respectively, the clustering evaluation metric, method for base classifier selection, percentage of features and the ensemble fusion strategy. It presents 5 different classification metrics and the average number of clusters. Numbers in parentheses indicate one standard deviation and apply to the last significant digit of each value.}
+    \label{tab:ablation_iris}
     \resizebox{\textwidth}{!}{
-    \begin{tabular}{llllllllll}
+    \begin{tabular}{lccccllllll}
     \toprule
-    & \textbf{Clusters(1)} & \textbf{Clf(2)} & \textbf{\%(3)} & \textbf{Fusion(4)} & \textbf{Accuracy} & \textbf{Recall} & \textbf{Precision} & \textbf{F1-Score} & \textbf{AUC} \\ \midrule
-    0 & - & - & 100 & Voting & 0.78 $\pm$ 0.08 & 0.78 $\pm$ 0.08 & 0.95 $\pm$ 0.03 & 0.82 $\pm$ 0.05 & 0.96 $\pm$ 0.05 \\
-    1 & DBC & - & 100 & Voting & 0.95 $\pm$ 0.06 & 0.95 $\pm$ 0.06 & 0.96 $\pm$ 0.05 & 0.95 $\pm$ 0.06 & 0.96 $\pm$ 0.04 \\
-    1 & Rand & - & 100 & Voting & 0.95 $\pm$ 0.06 & 0.95 $\pm$ 0.06 & 0.96 $\pm$ 0.05 & 0.95 $\pm$ 0.06 & 0.96 $\pm$ 0.04 \\
-    1 & DBC+R & - & 100 & Voting & 0.95 $\pm$ 0.06 & 0.95 $\pm$ 0.06 & 0.96 $\pm$ 0.05 & 0.95 $\pm$ 0.06 & 0.96 $\pm$ 0.04 \\
-    2 & - & Crossval & 100 & Voting & 0.74 $\pm$ 0.08 & 0.74 $\pm$ 0.08 & 0.96 $\pm$ 0.03 & 0.8 $\pm$ 0.04 & 0.98 $\pm$ 0.04 \\
-    2 & - & PSO & 100 & Voting & 0.93 $\pm$ 0.06 & 0.93 $\pm$ 0.06 & 0.96 $\pm$ 0.04 & 0.94 $\pm$ 0.06 & 0.96 $\pm$ 0.05 \\
-    3 & - & - & 75 & Voting & 0.78 $\pm$ 0.08 & 0.78 $\pm$ 0.08 & 0.95 $\pm$ 0.03 & 0.82 $\pm$ 0.05 & 0.96 $\pm$ 0.05 \\
-    3 & - & - & 50 & Voting & 0.79 $\pm$ 0.08 & 0.79 $\pm$ 0.08 & 0.94 $\pm$ 0.02 & 0.83 $\pm$ 0.05 & 0.96 $\pm$ 0.05 \\
-    4 & - & - & 100 & Weighted & 0.95 $\pm$ 0.08 & 0.95 $\pm$ 0.08 & 0.95 $\pm$ 0.08 & 0.95 $\pm$ 0.08 & 0.97 $\pm$ 0.05 \\
-    4 & - & - & 100 & Meta & 0.7 $\pm$ 0.2 & 0.7 $\pm$ 0.2 & 0.9 $\pm$ 0.1 & 0.7 $\pm$ 0.1 & 0.91 $\pm$ 0.1 \\
-    123 & DBC & Crossval & 75 & Voting & 0.95 $\pm$ 0.08 & 0.95 $\pm$ 0.08 & 0.95 $\pm$ 0.08 & 0.95 $\pm$ 0.08 & 0.96 $\pm$ 0.06 \\
-    123 & Rand & Crossval & 75 & Voting & 0.95 $\pm$ 0.08 & 0.95 $\pm$ 0.08 & 0.95 $\pm$ 0.08 & 0.95 $\pm$ 0.08 & 0.96 $\pm$ 0.06 \\
-    123 & DBC+R & Crossval & 75 & Voting & 0.95 $\pm$ 0.08 & 0.95 $\pm$ 0.08 & 0.95 $\pm$ 0.08 & 0.95 $\pm$ 0.08 & 0.96 $\pm$ 0.06 \\
-    123 & DBC & Crossval & 50 & Voting & 0.95 $\pm$ 0.08 & 0.95 $\pm$ 0.08 & 0.96 $\pm$ 0.08 & 0.95 $\pm$ 0.08 & 0.97 $\pm$ 0.06 \\
-    123 & Rand & Crossval & 50 & Voting & 0.95 $\pm$ 0.08 & 0.95 $\pm$ 0.08 & 0.96 $\pm$ 0.08 & 0.95 $\pm$ 0.08 & 0.97 $\pm$ 0.06 \\
-    123 & DBC+R & Crossval & 50 & Voting & 0.95 $\pm$ 0.08 & 0.95 $\pm$ 0.08 & 0.96 $\pm$ 0.08 & 0.95 $\pm$ 0.08 & 0.97 $\pm$ 0.06 \\
-    124 & DBC & Crossval & 100 & Weighted & 0.95 $\pm$ 0.08 & 0.95 $\pm$ 0.08 & 0.95 $\pm$ 0.08 & 0.95 $\pm$ 0.08 & 0.96 $\pm$ 0.06 \\
-    124 & Rand & Crossval & 100 & Weighted & 0.95 $\pm$ 0.08 & 0.95 $\pm$ 0.08 & 0.95 $\pm$ 0.08 & 0.95 $\pm$ 0.08 & 0.96 $\pm$ 0.06 \\
-    124 & DBC+R & Crossval & 100 & Weighted & 0.95 $\pm$ 0.08 & 0.95 $\pm$ 0.08 & 0.95 $\pm$ 0.08 & 0.95 $\pm$ 0.08 & 0.96 $\pm$ 0.06 \\
-    124 & DBC & Crossval & 100 & Meta & 0.67 $\pm$ 0.06 & 0.67 $\pm$ 0.06 & 0.91 $\pm$ 0.09 & 0.75 $\pm$ 0.05 & 0.84 $\pm$ 0.04 \\
-    124 & Rand & Crossval & 100 & Meta & 0.67 $\pm$ 0.06 & 0.67 $\pm$ 0.06 & 0.91 $\pm$ 0.09 & 0.75 $\pm$ 0.05 & 0.84 $\pm$ 0.04 \\
-    124 & DBC+R & Crossval & 100 & Meta & 0.67 $\pm$ 0.06 & 0.67 $\pm$ 0.06 & 0.91 $\pm$ 0.09 & 0.75 $\pm$ 0.05 & 0.84 $\pm$ 0.04 \\
-    124 & DBC & PSO & 100 & Weighted & 0.95 $\pm$ 0.08 & 0.95 $\pm$ 0.08 & 0.95 $\pm$ 0.08 & 0.95 $\pm$ 0.08 & 0.96 $\pm$ 0.06 \\
-    124 & Rand & PSO & 100 & Weighted & 0.95 $\pm$ 0.08 & 0.95 $\pm$ 0.08 & 0.95 $\pm$ 0.08 & 0.95 $\pm$ 0.08 & 0.96 $\pm$ 0.06 \\
-    124 & DBC+R & PSO & 100 & Weighted & 0.95 $\pm$ 0.08 & 0.95 $\pm$ 0.08 & 0.95 $\pm$ 0.08 & 0.95 $\pm$ 0.08 & 0.96 $\pm$ 0.06 \\
-    124 & DBC & PSO & 100 & Meta & 0.95 $\pm$ 0.08 & 0.95 $\pm$ 0.08 & 0.96 $\pm$ 0.08 & 0.95 $\pm$ 0.08 & 0.99 $\pm$ 0.02 \\
-    124 & Rand & PSO & 100 & Meta & 0.95 $\pm$ 0.08 & 0.95 $\pm$ 0.08 & 0.96 $\pm$ 0.08 & 0.95 $\pm$ 0.08 & 0.99 $\pm$ 0.02 \\
-    124 & DBC+R & PSO & 100 & Meta & 0.95 $\pm$ 0.08 & 0.95 $\pm$ 0.08 & 0.96 $\pm$ 0.08 & 0.95 $\pm$ 0.08 & 0.99 $\pm$ 0.02 \\
-    1234 & DBC & Crossval & 75 & Weighted & 0.95 $\pm$ 0.08 & 0.95 $\pm$ 0.08 & 0.95 $\pm$ 0.08 & 0.95 $\pm$ 0.08 & 0.96 $\pm$ 0.06 \\
-    1234 & Rand & Crossval & 75 & Weighted & 0.95 $\pm$ 0.08 & 0.95 $\pm$ 0.08 & 0.95 $\pm$ 0.08 & 0.95 $\pm$ 0.08 & 0.96 $\pm$ 0.06 \\
-    1234 & DBC+R & Crossval & 75 & Weighted & 0.95 $\pm$ 0.08 & 0.95 $\pm$ 0.08 & 0.95 $\pm$ 0.08 & 0.95 $\pm$ 0.08 & 0.96 $\pm$ 0.06 \\
-    1234 & DBC & Crossval & 50 & Weighted & 0.95 $\pm$ 0.08 & 0.95 $\pm$ 0.08 & 0.96 $\pm$ 0.08 & 0.95 $\pm$ 0.08 & 0.97 $\pm$ 0.06 \\
-    1234 & Rand & Crossval & 50 & Weighted & 0.95 $\pm$ 0.08 & 0.95 $\pm$ 0.08 & 0.96 $\pm$ 0.08 & 0.95 $\pm$ 0.08 & 0.97 $\pm$ 0.06 \\
-    1234 & DBC+R & Crossval & 50 & Weighted & 0.95 $\pm$ 0.08 & 0.95 $\pm$ 0.08 & 0.96 $\pm$ 0.08 & 0.95 $\pm$ 0.08 & 0.97 $\pm$ 0.06 \\
-    1234 & DBC & Crossval & 75 & Meta & 0.8 $\pm$ 0.2 & 0.8 $\pm$ 0.2 & 0.93 $\pm$ 0.09 & 0.9 $\pm$ 0.1 & 0.9 $\pm$ 0.1 \\
-    1234 & Rand & Crossval & 75 & Meta & 0.8 $\pm$ 0.2 & 0.8 $\pm$ 0.2 & 0.93 $\pm$ 0.09 & 0.9 $\pm$ 0.1 & 0.9 $\pm$ 0.1 \\
-    1234 & DBC+R & Crossval & 75 & Meta & 0.8 $\pm$ 0.2 & 0.8 $\pm$ 0.2 & 0.93 $\pm$ 0.09 & 0.9 $\pm$ 0.1 & 0.9 $\pm$ 0.1 \\
-    1234 & DBC & Crossval & 50 & Meta & 0.9 $\pm$ 0.1 & 0.9 $\pm$ 0.1 & 0.96 $\pm$ 0.07 & 0.9 $\pm$ 0.1 & 0.95 $\pm$ 0.08 \\
-    1234 & Rand & Crossval & 50 & Meta & 0.9 $\pm$ 0.1 & 0.9 $\pm$ 0.1 & 0.96 $\pm$ 0.07 & 0.9 $\pm$ 0.1 & 0.95 $\pm$ 0.08 \\
-    1234 & DBC+R & Crossval & 50 & Meta & 0.9 $\pm$ 0.1 & 0.9 $\pm$ 0.1 & 0.96 $\pm$ 0.07 & 0.9 $\pm$ 0.1 & 0.95 $\pm$ 0.08 \\
+    {}          & \HBreak{Clust.\\Sel.(1)} & \HBreak{Clf.\\Sel.(2)} & \HBreak{Feats.\\\%(3)} & \HBreak{Fusion\\(4)} & \HBreak{Num.\\Clust.} & \textbf{Acc.} & \textbf{Recall} & \textbf{Prec.} & \textbf{F1}        & \textbf{AUC} \\ \midrule
+    0 & - & - & 100 & MV & 3 & 0.78(8) & 0.78(8) & 0.95(2) & 0.82(5) & 0.96(4) \\
+    1 & DBC & - & 100 & MV & 2 & 0.95(5) & 0.95(5) & 0.96(5) & 0.95(5) & 0.96(4) \\
+    1 & Rand & - & 100 & MV & 2 & 0.95(5) & 0.95(5) & 0.96(5) & 0.95(5) & 0.96(4) \\
+    1 & DBC+R & - & 100 & MV & 2 & 0.95(5) & 0.95(5) & 0.96(5) & 0.95(5) & 0.96(4) \\
+    2 & - & CV & 100 & MV & 3 & 0.74(7) & 0.74(7) & 0.96(3) & 0.80(3) & 0.98(3) \\
+    2 & - & PSO & 100 & MV & 3 & 0.93(5) & 0.93(5) & 0.96(3) & 0.94(5) & 0.96(4) \\
+    3 & - & - & 75 & MV & 3 & 0.78(8) & 0.78(8) & 0.95(2) & 0.82(5) & 0.96(4) \\
+    3 & - & - & 50 & MV & 3 & 0.79(7) & 0.79(7) & 0.94(2) & 0.83(4) & 0.96(4) \\
+    4 & - & - & 100 & WM & 3 & 0.95(8) & 0.95(8) & 0.95(7) & 0.95(8) & 0.97(5) \\
+    4 & - & - & 100 & MC & 3 & 0.7(1) & 0.7(1) & 0.9(1) & 0.7(1) & 0.91(9) \\
+    123 & DBC & CV & 75 & MV & 2 & 0.95(8) & 0.95(8) & 0.95(7) & 0.95(8) & 0.96(6) \\
+    123 & Rand & CV & 75 & MV & 2 & 0.95(8) & 0.95(8) & 0.95(7) & 0.95(8) & 0.96(6) \\
+    123 & DBC+R & CV & 75 & MV & 2 & 0.95(8) & 0.95(8) & 0.95(7) & 0.95(8) & 0.96(6) \\
+    123 & DBC & CV & 50 & MV & 2 & 0.95(7) & 0.95(7) & 0.96(7) & 0.95(7) & 0.97(5) \\
+    123 & Rand & CV & 50 & MV & 2 & 0.95(7) & 0.95(7) & 0.96(7) & 0.95(7) & 0.97(5) \\
+    123 & DBC+R & CV & 50 & MV & 2 & 0.95(7) & 0.95(7) & 0.96(7) & 0.95(7) & 0.97(5) \\
+    124 & DBC & CV & 100 & WM & 2 & 0.95(8) & 0.95(8) & 0.95(7) & 0.95(8) & 0.96(6) \\
+    124 & Rand & CV & 100 & WM & 2 & 0.95(8) & 0.95(8) & 0.95(7) & 0.95(8) & 0.96(6) \\
+    124 & DBC+R & CV & 100 & WM & 2 & 0.95(8) & 0.95(8) & 0.95(7) & 0.95(8) & 0.96(6) \\
+    124 & DBC & CV & 100 & MC & 2 & 0.67(5) & 0.67(5) & 0.91(9) & 0.75(4) & 0.84(4) \\
+    124 & Rand & CV & 100 & MC & 2 & 0.67(5) & 0.67(5) & 0.91(9) & 0.75(4) & 0.84(4) \\
+    124 & DBC+R & CV & 100 & MC & 2 & 0.67(5) & 0.67(5) & 0.91(9) & 0.75(4) & 0.84(4) \\
+    124 & DBC & PSO & 100 & WM & 2 & 0.95(8) & 0.95(8) & 0.95(7) & 0.95(8) & 0.96(6) \\
+    124 & Rand & PSO & 100 & WM & 2 & 0.95(8) & 0.95(8) & 0.95(7) & 0.95(8) & 0.96(6) \\
+    124 & DBC+R & PSO & 100 & WM & 2 & 0.95(8) & 0.95(8) & 0.95(7) & 0.95(8) & 0.96(6) \\
+    124 & DBC & PSO & 100 & MC & 2 & 0.95(7) & 0.95(7) & 0.96(7) & 0.95(7) & 0.99(2) \\
+    124 & Rand & PSO & 100 & MC & 2 & 0.95(7) & 0.95(7) & 0.96(7) & 0.95(7) & 0.99(2) \\
+    124 & DBC+R & PSO & 100 & MC & 2 & 0.95(7) & 0.95(7) & 0.96(7) & 0.95(7) & 0.99(2) \\
+    1234 & DBC & CV & 75 & WM & 2 & 0.95(8) & 0.95(8) & 0.95(7) & 0.95(8) & 0.96(6) \\
+    1234 & Rand & CV & 75 & WM & 2 & 0.95(8) & 0.95(8) & 0.95(7) & 0.95(8) & 0.96(6) \\
+    1234 & DBC+R & CV & 75 & WM & 2 & 0.95(8) & 0.95(8) & 0.95(7) & 0.95(8) & 0.96(6) \\
+    1234 & DBC & CV & 50 & WM & 2 & 0.95(7) & 0.95(7) & 0.96(7) & 0.95(7) & 0.97(5) \\
+    1234 & Rand & CV & 50 & WM & 2 & 0.95(7) & 0.95(7) & 0.96(7) & 0.95(7) & 0.97(5) \\
+    1234 & DBC+R & CV & 50 & WM & 2 & 0.95(7) & 0.95(7) & 0.96(7) & 0.95(7) & 0.97(5) \\
+    1234 & DBC & CV & 75 & MC & 2 & 0.8(1) & 0.8(1) & 0.93(9) & 0.9(1) & 0.9(1) \\
+    1234 & Rand & CV & 75 & MC & 2 & 0.8(1) & 0.8(1) & 0.93(9) & 0.9(1) & 0.9(1) \\
+    1234 & DBC+R & CV & 75 & MC & 2 & 0.8(1) & 0.8(1) & 0.93(9) & 0.9(1) & 0.9(1) \\
+    1234 & DBC & CV & 50 & MC & 2 & 0.9(1) & 0.9(1) & 0.96(7) & 0.9(1) & 0.95(7) \\
+    1234 & Rand & CV & 50 & MC & 2 & 0.9(1) & 0.9(1) & 0.96(7) & 0.9(1) & 0.95(7) \\
+    1234 & DBC+R & CV & 50 & MC & 2 & 0.9(1) & 0.9(1) & 0.96(7) & 0.9(1) & 0.95(7) \\
     \bottomrule
     \end{tabular}
     }
