--- a/results/latex/normal_2_class.tex
+++ b/results/latex/normal_2_class.tex
@@ -1,49 +1,51 @@
 \begin{table}[ht]
     \centering
+    \caption{Ablation study results for the 2-class normal distribution dataset. Columns Clust. Sel.(1), Clf. Self.(2), Feats.\%(3) and Fusion(4) denote, respectively, the clustering evaluation metric, method for base classifier selection, percentage of features and the ensemble fusion strategy. It presents 5 different classification metrics and the average number of clusters. Numbers in parentheses indicate one standard deviation and apply to the last significant digit of each value.}
+    \label{tab:ablation_normal_2_class}
     \resizebox{\textwidth}{!}{
-    \begin{tabular}{llllllllll}
+    \begin{tabular}{lccccllllll}
     \toprule
-    & \textbf{Clusters(1)} & \textbf{Clf(2)} & \textbf{\%(3)} & \textbf{Fusion(4)} & \textbf{Accuracy} & \textbf{Recall} & \textbf{Precision} & \textbf{F1-Score} & \textbf{AUC} \\ \midrule
-    0 & - & - & 100 & Voting & 0.68 $\pm$ 0.04 & 0.64 $\pm$ 0.03 & 0.81 $\pm$ 0.06 & 0.72 $\pm$ 0.03 & 0.71 $\pm$ 0.03 \\
-    1 & DBC & - & 100 & Voting & 0.68 $\pm$ 0.03 & 0.64 $\pm$ 0.03 & 0.82 $\pm$ 0.06 & 0.72 $\pm$ 0.03 & 0.72 $\pm$ 0.03 \\
-    1 & Rand & - & 100 & Voting & 0.67 $\pm$ 0.05 & 0.64 $\pm$ 0.05 & 0.79 $\pm$ 0.07 & 0.71 $\pm$ 0.04 & 0.71 $\pm$ 0.04 \\
-    1 & DBC+R & - & 100 & Voting & 0.68 $\pm$ 0.04 & 0.64 $\pm$ 0.03 & 0.83 $\pm$ 0.06 & 0.72 $\pm$ 0.03 & 0.72 $\pm$ 0.03 \\
-    2 & - & Crossval & 100 & Voting & 0.92 $\pm$ 0.02 & 0.91 $\pm$ 0.03 & 0.95 $\pm$ 0.03 & 0.93 $\pm$ 0.02 & 0.95 $\pm$ 0.02 \\
-    2 & - & PSO & 100 & Voting & 0.91 $\pm$ 0.02 & 0.89 $\pm$ 0.03 & 0.92 $\pm$ 0.03 & 0.91 $\pm$ 0.02 & 0.94 $\pm$ 0.01 \\
-    3 & - & - & 75 & Voting & 0.69 $\pm$ 0.04 & 0.66 $\pm$ 0.04 & 0.79 $\pm$ 0.05 & 0.72 $\pm$ 0.03 & 0.72 $\pm$ 0.03 \\
-    3 & - & - & 50 & Voting & 0.67 $\pm$ 0.03 & 0.67 $\pm$ 0.03 & 0.7 $\pm$ 0.1 & 0.67 $\pm$ 0.05 & 0.72 $\pm$ 0.03 \\
-    4 & - & - & 100 & Weighted & 0.67 $\pm$ 0.02 & 0.65 $\pm$ 0.02 & 0.73 $\pm$ 0.06 & 0.69 $\pm$ 0.02 & 0.7 $\pm$ 0.03 \\
-    4 & - & - & 100 & Meta & 0.7 $\pm$ 0.04 & 0.71 $\pm$ 0.05 & 0.68 $\pm$ 0.07 & 0.69 $\pm$ 0.05 & 0.76 $\pm$ 0.04 \\
-    123 & DBC & Crossval & 75 & Voting & 0.86 $\pm$ 0.04 & 0.87 $\pm$ 0.04 & 0.85 $\pm$ 0.07 & 0.85 $\pm$ 0.04 & 0.9 $\pm$ 0.04 \\
-    123 & Rand & Crossval & 75 & Voting & 0.87 $\pm$ 0.04 & 0.86 $\pm$ 0.05 & 0.88 $\pm$ 0.05 & 0.87 $\pm$ 0.04 & 0.89 $\pm$ 0.05 \\
-    123 & DBC+R & Crossval & 75 & Voting & 0.86 $\pm$ 0.04 & 0.87 $\pm$ 0.04 & 0.86 $\pm$ 0.06 & 0.86 $\pm$ 0.04 & 0.9 $\pm$ 0.04 \\
-    123 & DBC & Crossval & 50 & Voting & 0.81 $\pm$ 0.03 & 0.82 $\pm$ 0.05 & 0.81 $\pm$ 0.08 & 0.81 $\pm$ 0.04 & 0.85 $\pm$ 0.03 \\
-    123 & Rand & Crossval & 50 & Voting & 0.81 $\pm$ 0.03 & 0.82 $\pm$ 0.03 & 0.81 $\pm$ 0.07 & 0.81 $\pm$ 0.03 & 0.85 $\pm$ 0.04 \\
-    123 & DBC+R & Crossval & 50 & Voting & 0.82 $\pm$ 0.03 & 0.82 $\pm$ 0.05 & 0.82 $\pm$ 0.07 & 0.82 $\pm$ 0.03 & 0.86 $\pm$ 0.03 \\
-    124 & DBC & Crossval & 100 & Weighted & 0.93 $\pm$ 0.03 & 0.94 $\pm$ 0.02 & 0.92 $\pm$ 0.04 & 0.93 $\pm$ 0.03 & 0.95 $\pm$ 0.02 \\
-    124 & Rand & Crossval & 100 & Weighted & 0.92 $\pm$ 0.02 & 0.93 $\pm$ 0.02 & 0.92 $\pm$ 0.04 & 0.92 $\pm$ 0.02 & 0.95 $\pm$ 0.01 \\
-    124 & DBC+R & Crossval & 100 & Weighted & 0.93 $\pm$ 0.03 & 0.94 $\pm$ 0.02 & 0.92 $\pm$ 0.04 & 0.93 $\pm$ 0.03 & 0.95 $\pm$ 0.01 \\
-    124 & DBC & Crossval & 100 & Meta & 0.93 $\pm$ 0.02 & 0.92 $\pm$ 0.02 & 0.94 $\pm$ 0.03 & 0.93 $\pm$ 0.02 & 0.95 $\pm$ 0.02 \\
-    124 & Rand & Crossval & 100 & Meta & 0.92 $\pm$ 0.02 & 0.92 $\pm$ 0.03 & 0.93 $\pm$ 0.04 & 0.93 $\pm$ 0.02 & 0.95 $\pm$ 0.02 \\
-    124 & DBC+R & Crossval & 100 & Meta & 0.93 $\pm$ 0.02 & 0.92 $\pm$ 0.02 & 0.94 $\pm$ 0.03 & 0.93 $\pm$ 0.02 & 0.95 $\pm$ 0.01 \\
-    124 & DBC & PSO & 100 & Weighted & 0.92 $\pm$ 0.03 & 0.92 $\pm$ 0.04 & 0.92 $\pm$ 0.04 & 0.92 $\pm$ 0.03 & 0.94 $\pm$ 0.02 \\
-    124 & Rand & PSO & 100 & Weighted & 0.91 $\pm$ 0.03 & 0.9 $\pm$ 0.04 & 0.91 $\pm$ 0.04 & 0.91 $\pm$ 0.03 & 0.93 $\pm$ 0.02 \\
-    124 & DBC+R & PSO & 100 & Weighted & 0.92 $\pm$ 0.03 & 0.92 $\pm$ 0.03 & 0.93 $\pm$ 0.03 & 0.92 $\pm$ 0.03 & 0.94 $\pm$ 0.02 \\
-    124 & DBC & PSO & 100 & Meta & 0.91 $\pm$ 0.03 & 0.89 $\pm$ 0.02 & 0.93 $\pm$ 0.05 & 0.91 $\pm$ 0.03 & 0.95 $\pm$ 0.03 \\
-    124 & Rand & PSO & 100 & Meta & 0.91 $\pm$ 0.03 & 0.91 $\pm$ 0.04 & 0.91 $\pm$ 0.03 & 0.91 $\pm$ 0.03 & 0.95 $\pm$ 0.02 \\
-    124 & DBC+R & PSO & 100 & Meta & 0.9 $\pm$ 0.03 & 0.89 $\pm$ 0.03 & 0.9 $\pm$ 0.04 & 0.9 $\pm$ 0.03 & 0.94 $\pm$ 0.03 \\
-    1234 & DBC & Crossval & 75 & Weighted & 0.86 $\pm$ 0.05 & 0.85 $\pm$ 0.05 & 0.87 $\pm$ 0.05 & 0.86 $\pm$ 0.05 & 0.88 $\pm$ 0.04 \\
-    1234 & Rand & Crossval & 75 & Weighted & 0.86 $\pm$ 0.05 & 0.86 $\pm$ 0.04 & 0.87 $\pm$ 0.06 & 0.86 $\pm$ 0.05 & 0.89 $\pm$ 0.04 \\
-    1234 & DBC+R & Crossval & 75 & Weighted & 0.85 $\pm$ 0.05 & 0.85 $\pm$ 0.05 & 0.86 $\pm$ 0.06 & 0.85 $\pm$ 0.05 & 0.89 $\pm$ 0.04 \\
-    1234 & DBC & Crossval & 50 & Weighted & 0.78 $\pm$ 0.03 & 0.78 $\pm$ 0.03 & 0.79 $\pm$ 0.06 & 0.78 $\pm$ 0.03 & 0.83 $\pm$ 0.02 \\
-    1234 & Rand & Crossval & 50 & Weighted & 0.8 $\pm$ 0.04 & 0.79 $\pm$ 0.05 & 0.8 $\pm$ 0.05 & 0.8 $\pm$ 0.04 & 0.84 $\pm$ 0.04 \\
-    1234 & DBC+R & Crossval & 50 & Weighted & 0.79 $\pm$ 0.03 & 0.78 $\pm$ 0.03 & 0.8 $\pm$ 0.06 & 0.79 $\pm$ 0.03 & 0.83 $\pm$ 0.03 \\
-    1234 & DBC & Crossval & 75 & Meta & 0.87 $\pm$ 0.03 & 0.87 $\pm$ 0.04 & 0.88 $\pm$ 0.05 & 0.87 $\pm$ 0.03 & 0.91 $\pm$ 0.03 \\
-    1234 & Rand & Crossval & 75 & Meta & 0.87 $\pm$ 0.04 & 0.86 $\pm$ 0.04 & 0.88 $\pm$ 0.06 & 0.87 $\pm$ 0.04 & 0.91 $\pm$ 0.04 \\
-    1234 & DBC+R & Crossval & 75 & Meta & 0.87 $\pm$ 0.03 & 0.87 $\pm$ 0.04 & 0.87 $\pm$ 0.05 & 0.87 $\pm$ 0.04 & 0.92 $\pm$ 0.04 \\
-    1234 & DBC & Crossval & 50 & Meta & 0.82 $\pm$ 0.03 & 0.81 $\pm$ 0.04 & 0.83 $\pm$ 0.07 & 0.82 $\pm$ 0.03 & 0.88 $\pm$ 0.03 \\
-    1234 & Rand & Crossval & 50 & Meta & 0.81 $\pm$ 0.03 & 0.81 $\pm$ 0.03 & 0.82 $\pm$ 0.05 & 0.81 $\pm$ 0.03 & 0.87 $\pm$ 0.04 \\
-    1234 & DBC+R & Crossval & 50 & Meta & 0.82 $\pm$ 0.03 & 0.81 $\pm$ 0.04 & 0.84 $\pm$ 0.05 & 0.82 $\pm$ 0.03 & 0.88 $\pm$ 0.03 \\
+    {}          & \HBreak{Clust.\\Sel.(1)} & \HBreak{Clf.\\Sel.(2)} & \HBreak{Feats.\\\%(3)} & \HBreak{Fusion\\(4)} & \HBreak{Num.\\Clust.} & \textbf{Acc.} & \textbf{Recall} & \textbf{Prec.} & \textbf{F1}        & \textbf{AUC} \\ \midrule
+    0 & - & - & 100 & MV & 2 & 0.68(3) & 0.64(3) & 0.81(6) & 0.72(2) & 0.71(3) \\
+    1 & DBC & - & 100 & MV & 2 & 0.68(3) & 0.64(3) & 0.82(5) & 0.72(2) & 0.72(3) \\
+    1 & Rand & - & 100 & MV & 2 & 0.67(5) & 0.64(4) & 0.79(7) & 0.71(4) & 0.71(3) \\
+    1 & DBC+R & - & 100 & MV & 2 & 0.68(3) & 0.64(3) & 0.83(5) & 0.72(2) & 0.72(3) \\
+    2 & - & CV & 100 & MV & 2 & 0.92(1) & 0.91(2) & 0.95(2) & 0.93(1) & 0.95(1) \\
+    2 & - & PSO & 100 & MV & 2 & 0.91(2) & 0.89(3) & 0.92(2) & 0.91(1) & 0.94(1) \\
+    3 & - & - & 75 & MV & 2 & 0.69(3) & 0.66(4) & 0.79(4) & 0.72(2) & 0.72(3) \\
+    3 & - & - & 50 & MV & 2 & 0.67(2) & 0.67(3) & 0.7(1) & 0.67(4) & 0.72(3) \\
+    4 & - & - & 100 & WM & 2 & 0.67(1) & 0.65(2) & 0.73(6) & 0.69(2) & 0.70(2) \\
+    4 & - & - & 100 & MC & 2 & 0.70(4) & 0.71(5) & 0.68(7) & 0.69(4) & 0.76(3) \\
+    123 & DBC & CV & 75 & MV & 2 & 0.86(3) & 0.87(4) & 0.85(6) & 0.85(3) & 0.90(3) \\
+    123 & Rand & CV & 75 & MV & 2 & 0.87(3) & 0.86(4) & 0.88(5) & 0.87(3) & 0.89(4) \\
+    123 & DBC+R & CV & 75 & MV & 2 & 0.86(3) & 0.87(4) & 0.86(5) & 0.86(3) & 0.90(3) \\
+    123 & DBC & CV & 50 & MV & 2 & 0.81(3) & 0.82(4) & 0.81(7) & 0.81(3) & 0.85(2) \\
+    123 & Rand & CV & 50 & MV & 2 & 0.81(2) & 0.82(3) & 0.81(6) & 0.81(3) & 0.85(3) \\
+    123 & DBC+R & CV & 50 & MV & 2 & 0.82(3) & 0.82(5) & 0.82(6) & 0.82(3) & 0.86(2) \\
+    124 & DBC & CV & 100 & WM & 2 & 0.93(2) & 0.94(2) & 0.92(4) & 0.93(2) & 0.95(1) \\
+    124 & Rand & CV & 100 & WM & 2 & 0.92(1) & 0.93(2) & 0.92(3) & 0.92(2) & 0.95(1) \\
+    124 & DBC+R & CV & 100 & WM & 2 & 0.93(2) & 0.94(2) & 0.92(4) & 0.93(2) & 0.95(1) \\
+    124 & DBC & CV & 100 & MC & 2 & 0.93(1) & 0.92(1) & 0.94(3) & 0.93(2) & 0.95(1) \\
+    124 & Rand & CV & 100 & MC & 2 & 0.92(2) & 0.92(2) & 0.93(3) & 0.93(2) & 0.95(1) \\
+    124 & DBC+R & CV & 100 & MC & 2 & 0.93(2) & 0.92(2) & 0.94(3) & 0.93(2) & 0.95(1) \\
+    124 & DBC & PSO & 100 & WM & 2 & 0.92(2) & 0.92(3) & 0.92(3) & 0.92(2) & 0.94(2) \\
+    124 & Rand & PSO & 100 & WM & 2 & 0.91(3) & 0.90(3) & 0.91(4) & 0.91(3) & 0.93(2) \\
+    124 & DBC+R & PSO & 100 & WM & 2 & 0.92(2) & 0.92(3) & 0.93(3) & 0.92(2) & 0.94(2) \\
+    124 & DBC & PSO & 100 & MC & 2 & 0.91(2) & 0.89(2) & 0.93(4) & 0.91(2) & 0.95(2) \\
+    124 & Rand & PSO & 100 & MC & 2 & 0.91(2) & 0.91(4) & 0.91(3) & 0.91(2) & 0.95(2) \\
+    124 & DBC+R & PSO & 100 & MC & 2 & 0.90(2) & 0.89(2) & 0.90(4) & 0.90(2) & 0.94(3) \\
+    1234 & DBC & CV & 75 & WM & 2 & 0.86(4) & 0.85(5) & 0.87(5) & 0.86(4) & 0.88(4) \\
+    1234 & Rand & CV & 75 & WM & 2 & 0.86(4) & 0.86(4) & 0.87(6) & 0.86(4) & 0.89(4) \\
+    1234 & DBC+R & CV & 75 & WM & 2 & 0.85(4) & 0.85(5) & 0.86(5) & 0.85(4) & 0.89(4) \\
+    1234 & DBC & CV & 50 & WM & 2 & 0.78(2) & 0.78(2) & 0.79(5) & 0.78(3) & 0.83(1) \\
+    1234 & Rand & CV & 50 & WM & 2 & 0.80(4) & 0.79(5) & 0.80(4) & 0.80(4) & 0.84(3) \\
+    1234 & DBC+R & CV & 50 & WM & 2 & 0.79(3) & 0.78(2) & 0.80(5) & 0.79(3) & 0.83(2) \\
+    1234 & DBC & CV & 75 & MC & 2 & 0.87(3) & 0.87(3) & 0.88(5) & 0.87(3) & 0.91(3) \\
+    1234 & Rand & CV & 75 & MC & 2 & 0.87(4) & 0.86(3) & 0.88(6) & 0.87(4) & 0.91(4) \\
+    1234 & DBC+R & CV & 75 & MC & 2 & 0.87(3) & 0.87(3) & 0.87(5) & 0.87(3) & 0.92(3) \\
+    1234 & DBC & CV & 50 & MC & 2 & 0.82(2) & 0.81(3) & 0.83(6) & 0.82(3) & 0.88(2) \\
+    1234 & Rand & CV & 50 & MC & 2 & 0.81(3) & 0.81(3) & 0.82(5) & 0.81(3) & 0.87(4) \\
+    1234 & DBC+R & CV & 50 & MC & 2 & 0.82(2) & 0.81(3) & 0.84(5) & 0.82(2) & 0.88(2) \\
     \bottomrule
     \end{tabular}
     }
