--- a/results/latex/normal_3_class.tex
+++ b/results/latex/normal_3_class.tex
@@ -1,49 +1,51 @@
 \begin{table}[ht]
     \centering
+    \caption{Ablation study results for the 3-class normal distribution dataset. Columns Clust. Sel.(1), Clf. Self.(2), Feats.\%(3) and Fusion(4) denote, respectively, the clustering evaluation metric, method for base classifier selection, percentage of features and the ensemble fusion strategy. It presents 5 different classification metrics and the average number of clusters. Numbers in parentheses indicate one standard deviation and apply to the last significant digit of each value.}
+    \label{tab:ablation_normal_3_class}
     \resizebox{\textwidth}{!}{
-    \begin{tabular}{llllllllll}
+    \begin{tabular}{lccccllllll}
     \toprule
-    & \textbf{Clusters(1)} & \textbf{Clf(2)} & \textbf{\%(3)} & \textbf{Fusion(4)} & \textbf{Accuracy} & \textbf{Recall} & \textbf{Precision} & \textbf{F1-Score} & \textbf{AUC} \\ \midrule
-    0 & - & - & 100 & Voting & 0.6 $\pm$ 0.05 & 0.6 $\pm$ 0.05 & 0.73 $\pm$ 0.05 & 0.61 $\pm$ 0.04 & 0.85 $\pm$ 0.03 \\
-    1 & DBC & - & 100 & Voting & 0.53 $\pm$ 0.03 & 0.53 $\pm$ 0.03 & 0.74 $\pm$ 0.05 & 0.56 $\pm$ 0.03 & 0.79 $\pm$ 0.03 \\
-    1 & Rand & - & 100 & Voting & 0.54 $\pm$ 0.03 & 0.54 $\pm$ 0.03 & 0.74 $\pm$ 0.06 & 0.57 $\pm$ 0.03 & 0.79 $\pm$ 0.03 \\
-    1 & DBC+R & - & 100 & Voting & 0.54 $\pm$ 0.03 & 0.54 $\pm$ 0.03 & 0.74 $\pm$ 0.05 & 0.57 $\pm$ 0.03 & 0.79 $\pm$ 0.03 \\
-    2 & - & Crossval & 100 & Voting & 0.83 $\pm$ 0.04 & 0.83 $\pm$ 0.04 & 0.84 $\pm$ 0.03 & 0.83 $\pm$ 0.03 & 0.95 $\pm$ 0.02 \\
-    2 & - & PSO & 100 & Voting & 0.86 $\pm$ 0.03 & 0.86 $\pm$ 0.03 & 0.87 $\pm$ 0.02 & 0.86 $\pm$ 0.03 & 0.95 $\pm$ 0.01 \\
-    3 & - & - & 75 & Voting & 0.6 $\pm$ 0.05 & 0.6 $\pm$ 0.05 & 0.7 $\pm$ 0.05 & 0.61 $\pm$ 0.05 & 0.83 $\pm$ 0.03 \\
-    3 & - & - & 50 & Voting & 0.54 $\pm$ 0.04 & 0.54 $\pm$ 0.04 & 0.71 $\pm$ 0.07 & 0.57 $\pm$ 0.04 & 0.77 $\pm$ 0.05 \\
-    4 & - & - & 100 & Weighted & 0.74 $\pm$ 0.03 & 0.74 $\pm$ 0.03 & 0.75 $\pm$ 0.03 & 0.74 $\pm$ 0.03 & 0.85 $\pm$ 0.03 \\
-    4 & - & - & 100 & Meta & 0.79 $\pm$ 0.03 & 0.79 $\pm$ 0.03 & 0.8 $\pm$ 0.03 & 0.79 $\pm$ 0.03 & 0.92 $\pm$ 0.02 \\
-    123 & DBC & Crossval & 75 & Voting & 0.84 $\pm$ 0.02 & 0.84 $\pm$ 0.02 & 0.85 $\pm$ 0.02 & 0.84 $\pm$ 0.02 & 0.91 $\pm$ 0.02 \\
-    123 & Rand & Crossval & 75 & Voting & 0.84 $\pm$ 0.03 & 0.84 $\pm$ 0.03 & 0.84 $\pm$ 0.03 & 0.84 $\pm$ 0.03 & 0.91 $\pm$ 0.02 \\
-    123 & DBC+R & Crossval & 75 & Voting & 0.84 $\pm$ 0.03 & 0.84 $\pm$ 0.03 & 0.84 $\pm$ 0.03 & 0.84 $\pm$ 0.03 & 0.91 $\pm$ 0.02 \\
-    123 & DBC & Crossval & 50 & Voting & 0.67 $\pm$ 0.03 & 0.67 $\pm$ 0.03 & 0.7 $\pm$ 0.03 & 0.68 $\pm$ 0.03 & 0.8 $\pm$ 0.02 \\
-    123 & Rand & Crossval & 50 & Voting & 0.673 $\pm$ 0.007 & 0.673 $\pm$ 0.007 & 0.7 $\pm$ 0.02 & 0.678 $\pm$ 0.007 & 0.79 $\pm$ 0.01 \\
-    123 & DBC+R & Crossval & 50 & Voting & 0.66 $\pm$ 0.02 & 0.66 $\pm$ 0.02 & 0.69 $\pm$ 0.02 & 0.67 $\pm$ 0.02 & 0.79 $\pm$ 0.02 \\
-    124 & DBC & Crossval & 100 & Weighted & 0.89 $\pm$ 0.02 & 0.89 $\pm$ 0.02 & 0.89 $\pm$ 0.02 & 0.89 $\pm$ 0.02 & 0.94 $\pm$ 0.02 \\
-    124 & Rand & Crossval & 100 & Weighted & 0.89 $\pm$ 0.02 & 0.89 $\pm$ 0.02 & 0.9 $\pm$ 0.02 & 0.89 $\pm$ 0.02 & 0.94 $\pm$ 0.01 \\
-    124 & DBC+R & Crossval & 100 & Weighted & 0.89 $\pm$ 0.02 & 0.89 $\pm$ 0.02 & 0.9 $\pm$ 0.02 & 0.89 $\pm$ 0.02 & 0.94 $\pm$ 0.02 \\
-    124 & DBC & Crossval & 100 & Meta & 0.9 $\pm$ 0.02 & 0.9 $\pm$ 0.02 & 0.9 $\pm$ 0.02 & 0.9 $\pm$ 0.02 & 0.96 $\pm$ 0.02 \\
-    124 & Rand & Crossval & 100 & Meta & 0.89 $\pm$ 0.02 & 0.89 $\pm$ 0.02 & 0.9 $\pm$ 0.02 & 0.9 $\pm$ 0.02 & 0.96 $\pm$ 0.02 \\
-    124 & DBC+R & Crossval & 100 & Meta & 0.9 $\pm$ 0.02 & 0.9 $\pm$ 0.02 & 0.9 $\pm$ 0.02 & 0.9 $\pm$ 0.02 & 0.96 $\pm$ 0.02 \\
-    124 & DBC & PSO & 100 & Weighted & 0.88 $\pm$ 0.03 & 0.88 $\pm$ 0.03 & 0.89 $\pm$ 0.03 & 0.89 $\pm$ 0.03 & 0.94 $\pm$ 0.02 \\
-    124 & Rand & PSO & 100 & Weighted & 0.88 $\pm$ 0.03 & 0.88 $\pm$ 0.03 & 0.89 $\pm$ 0.03 & 0.89 $\pm$ 0.03 & 0.94 $\pm$ 0.02 \\
-    124 & DBC+R & PSO & 100 & Weighted & 0.88 $\pm$ 0.03 & 0.88 $\pm$ 0.03 & 0.89 $\pm$ 0.02 & 0.89 $\pm$ 0.03 & 0.94 $\pm$ 0.02 \\
-    124 & DBC & PSO & 100 & Meta & 0.89 $\pm$ 0.03 & 0.89 $\pm$ 0.03 & 0.89 $\pm$ 0.03 & 0.89 $\pm$ 0.03 & 0.96 $\pm$ 0.02 \\
-    124 & Rand & PSO & 100 & Meta & 0.88 $\pm$ 0.02 & 0.88 $\pm$ 0.02 & 0.89 $\pm$ 0.02 & 0.89 $\pm$ 0.02 & 0.96 $\pm$ 0.01 \\
-    124 & DBC+R & PSO & 100 & Meta & 0.88 $\pm$ 0.03 & 0.88 $\pm$ 0.03 & 0.89 $\pm$ 0.02 & 0.88 $\pm$ 0.02 & 0.96 $\pm$ 0.02 \\
-    1234 & DBC & Crossval & 75 & Weighted & 0.84 $\pm$ 0.03 & 0.84 $\pm$ 0.03 & 0.85 $\pm$ 0.03 & 0.84 $\pm$ 0.03 & 0.9 $\pm$ 0.02 \\
-    1234 & Rand & Crossval & 75 & Weighted & 0.84 $\pm$ 0.03 & 0.84 $\pm$ 0.03 & 0.84 $\pm$ 0.03 & 0.84 $\pm$ 0.03 & 0.9 $\pm$ 0.02 \\
-    1234 & DBC+R & Crossval & 75 & Weighted & 0.84 $\pm$ 0.03 & 0.84 $\pm$ 0.03 & 0.85 $\pm$ 0.03 & 0.84 $\pm$ 0.03 & 0.9 $\pm$ 0.02 \\
-    1234 & DBC & Crossval & 50 & Weighted & 0.67 $\pm$ 0.03 & 0.67 $\pm$ 0.03 & 0.68 $\pm$ 0.03 & 0.67 $\pm$ 0.03 & 0.79 $\pm$ 0.02 \\
-    1234 & Rand & Crossval & 50 & Weighted & 0.64 $\pm$ 0.03 & 0.64 $\pm$ 0.03 & 0.65 $\pm$ 0.04 & 0.65 $\pm$ 0.04 & 0.77 $\pm$ 0.02 \\
-    1234 & DBC+R & Crossval & 50 & Weighted & 0.66 $\pm$ 0.02 & 0.66 $\pm$ 0.02 & 0.67 $\pm$ 0.03 & 0.66 $\pm$ 0.02 & 0.78 $\pm$ 0.02 \\
-    1234 & DBC & Crossval & 75 & Meta & 0.86 $\pm$ 0.03 & 0.86 $\pm$ 0.03 & 0.86 $\pm$ 0.03 & 0.86 $\pm$ 0.03 & 0.94 $\pm$ 0.02 \\
-    1234 & Rand & Crossval & 75 & Meta & 0.85 $\pm$ 0.03 & 0.85 $\pm$ 0.03 & 0.85 $\pm$ 0.04 & 0.85 $\pm$ 0.03 & 0.94 $\pm$ 0.02 \\
-    1234 & DBC+R & Crossval & 75 & Meta & 0.85 $\pm$ 0.03 & 0.85 $\pm$ 0.03 & 0.86 $\pm$ 0.03 & 0.86 $\pm$ 0.03 & 0.94 $\pm$ 0.02 \\
-    1234 & DBC & Crossval & 50 & Meta & 0.71 $\pm$ 0.03 & 0.71 $\pm$ 0.03 & 0.71 $\pm$ 0.03 & 0.71 $\pm$ 0.03 & 0.87 $\pm$ 0.01 \\
-    1234 & Rand & Crossval & 50 & Meta & 0.7 $\pm$ 0.03 & 0.7 $\pm$ 0.03 & 0.71 $\pm$ 0.03 & 0.7 $\pm$ 0.03 & 0.87 $\pm$ 0.02 \\
-    1234 & DBC+R & Crossval & 50 & Meta & 0.71 $\pm$ 0.03 & 0.71 $\pm$ 0.03 & 0.71 $\pm$ 0.03 & 0.71 $\pm$ 0.03 & 0.87 $\pm$ 0.01 \\
+    {}          & \HBreak{Clust.\\Sel.(1)} & \HBreak{Clf.\\Sel.(2)} & \HBreak{Feats.\\\%(3)} & \HBreak{Fusion\\(4)} & \HBreak{Num.\\Clust.} & \textbf{Acc.} & \textbf{Recall} & \textbf{Prec.} & \textbf{F1}        & \textbf{AUC} \\ \midrule
+    0 & - & - & 100 & MV & 3 & 0.60(4) & 0.60(4) & 0.73(4) & 0.61(4) & 0.85(3) \\
+    1 & DBC & - & 100 & MV & 2 & 0.53(2) & 0.53(2) & 0.74(5) & 0.56(2) & 0.79(3) \\
+    1 & Rand & - & 100 & MV & 2 & 0.54(2) & 0.54(2) & 0.74(5) & 0.57(3) & 0.79(2) \\
+    1 & DBC+R & - & 100 & MV & 2 & 0.54(2) & 0.54(2) & 0.74(5) & 0.57(3) & 0.79(2) \\
+    2 & - & CV & 100 & MV & 3 & 0.83(3) & 0.83(3) & 0.84(3) & 0.83(3) & 0.95(1) \\
+    2 & - & PSO & 100 & MV & 3 & 0.86(2) & 0.86(2) & 0.87(2) & 0.86(2) & 0.95(1) \\
+    3 & - & - & 75 & MV & 3 & 0.60(5) & 0.60(5) & 0.70(4) & 0.61(4) & 0.83(3) \\
+    3 & - & - & 50 & MV & 3 & 0.54(3) & 0.54(3) & 0.71(7) & 0.57(4) & 0.77(4) \\
+    4 & - & - & 100 & WM & 3 & 0.74(3) & 0.74(3) & 0.75(3) & 0.74(3) & 0.85(2) \\
+    4 & - & - & 100 & MC & 3 & 0.79(2) & 0.79(2) & 0.80(2) & 0.79(2) & 0.92(1) \\
+    123 & DBC & CV & 75 & MV & 2 & 0.84(2) & 0.84(2) & 0.85(2) & 0.84(2) & 0.91(2) \\
+    123 & Rand & CV & 75 & MV & 2 & 0.84(2) & 0.84(2) & 0.84(3) & 0.84(2) & 0.91(2) \\
+    123 & DBC+R & CV & 75 & MV & 2 & 0.84(2) & 0.84(2) & 0.84(2) & 0.84(2) & 0.91(2) \\
+    123 & DBC & CV & 50 & MV & 2 & 0.67(3) & 0.67(3) & 0.70(2) & 0.68(3) & 0.80(2) \\
+    123 & Rand & CV & 50 & MV & 2 & 0.673(6) & 0.673(6) & 0.70(2) & 0.678(6) & 0.79(1) \\
+    123 & DBC+R & CV & 50 & MV & 2 & 0.66(2) & 0.66(2) & 0.69(2) & 0.67(2) & 0.79(1) \\
+    124 & DBC & CV & 100 & WM & 2 & 0.89(2) & 0.89(2) & 0.89(1) & 0.89(1) & 0.94(1) \\
+    124 & Rand & CV & 100 & WM & 2 & 0.89(2) & 0.89(2) & 0.90(2) & 0.89(2) & 0.94(1) \\
+    124 & DBC+R & CV & 100 & WM & 2 & 0.89(2) & 0.89(2) & 0.90(2) & 0.89(2) & 0.94(1) \\
+    124 & DBC & CV & 100 & MC & 2 & 0.90(2) & 0.90(2) & 0.90(2) & 0.90(2) & 0.96(1) \\
+    124 & Rand & CV & 100 & MC & 2 & 0.89(1) & 0.89(1) & 0.90(2) & 0.90(1) & 0.96(1) \\
+    124 & DBC+R & CV & 100 & MC & 2 & 0.90(2) & 0.90(2) & 0.90(2) & 0.90(2) & 0.96(1) \\
+    124 & DBC & PSO & 100 & WM & 2 & 0.88(3) & 0.88(3) & 0.89(3) & 0.89(3) & 0.94(2) \\
+    124 & Rand & PSO & 100 & WM & 2 & 0.88(3) & 0.88(3) & 0.89(2) & 0.89(3) & 0.94(2) \\
+    124 & DBC+R & PSO & 100 & WM & 2 & 0.88(2) & 0.88(2) & 0.89(2) & 0.89(2) & 0.94(2) \\
+    124 & DBC & PSO & 100 & MC & 2 & 0.89(2) & 0.89(2) & 0.89(2) & 0.89(2) & 0.96(1) \\
+    124 & Rand & PSO & 100 & MC & 2 & 0.88(2) & 0.88(2) & 0.89(1) & 0.89(2) & 0.96(1) \\
+    124 & DBC+R & PSO & 100 & MC & 2 & 0.88(2) & 0.88(2) & 0.89(2) & 0.88(2) & 0.96(1) \\
+    1234 & DBC & CV & 75 & WM & 2 & 0.84(3) & 0.84(3) & 0.85(3) & 0.84(3) & 0.90(2) \\
+    1234 & Rand & CV & 75 & WM & 2 & 0.84(3) & 0.84(3) & 0.84(3) & 0.84(3) & 0.90(2) \\
+    1234 & DBC+R & CV & 75 & WM & 2 & 0.84(3) & 0.84(3) & 0.85(3) & 0.84(3) & 0.90(2) \\
+    1234 & DBC & CV & 50 & WM & 2 & 0.67(3) & 0.67(3) & 0.68(3) & 0.67(3) & 0.79(2) \\
+    1234 & Rand & CV & 50 & WM & 2 & 0.64(3) & 0.64(3) & 0.65(3) & 0.65(3) & 0.77(2) \\
+    1234 & DBC+R & CV & 50 & WM & 2 & 0.66(2) & 0.66(2) & 0.67(2) & 0.66(2) & 0.78(1) \\
+    1234 & DBC & CV & 75 & MC & 2 & 0.86(3) & 0.86(3) & 0.86(3) & 0.86(3) & 0.94(1) \\
+    1234 & Rand & CV & 75 & MC & 2 & 0.85(3) & 0.85(3) & 0.85(3) & 0.85(3) & 0.94(1) \\
+    1234 & DBC+R & CV & 75 & MC & 2 & 0.85(3) & 0.85(3) & 0.86(3) & 0.86(3) & 0.94(1) \\
+    1234 & DBC & CV & 50 & MC & 2 & 0.71(2) & 0.71(2) & 0.71(2) & 0.71(2) & 0.87(1) \\
+    1234 & Rand & CV & 50 & MC & 2 & 0.70(3) & 0.70(3) & 0.71(3) & 0.70(3) & 0.87(1) \\
+    1234 & DBC+R & CV & 50 & MC & 2 & 0.71(2) & 0.71(2) & 0.71(2) & 0.71(2) & 0.87(1) \\
     \bottomrule
     \end{tabular}
     }
