--- a/results/latex/pima.tex
+++ b/results/latex/pima.tex
@@ -1,49 +1,51 @@
 \begin{table}[ht]
     \centering
+    \caption{Ablation study results for the Pima biabetes dataset. Columns Clust. Sel.(1), Clf. Self.(2), Feats.\%(3) and Fusion(4) denote, respectively, the clustering evaluation metric, method for base classifier selection, percentage of features and the ensemble fusion strategy. It presents 5 different classification metrics and the average number of clusters. Numbers in parentheses indicate one standard deviation and apply to the last significant digit of each value.}
+    \label{tab:ablation_pima}
     \resizebox{\textwidth}{!}{
-    \begin{tabular}{llllllllll}
+    \begin{tabular}{lccccllllll}
     \toprule
-    & \textbf{Clusters(1)} & \textbf{Clf(2)} & \textbf{\%(3)} & \textbf{Fusion(4)} & \textbf{Accuracy} & \textbf{Recall} & \textbf{Precision} & \textbf{F1-Score} & \textbf{AUC} \\ \midrule
-    0 & - & - & 100 & Voting & 0.72 $\pm$ 0.05 & 0.59 $\pm$ 0.06 & 0.71 $\pm$ 0.1 & 0.64 $\pm$ 0.06 & 0.76 $\pm$ 0.06 \\
-    1 & DBC & - & 100 & Voting & 0.72 $\pm$ 0.05 & 0.59 $\pm$ 0.06 & 0.7 $\pm$ 0.1 & 0.63 $\pm$ 0.07 & 0.77 $\pm$ 0.07 \\
-    1 & Rand & - & 100 & Voting & 0.72 $\pm$ 0.05 & 0.58 $\pm$ 0.06 & 0.7 $\pm$ 0.1 & 0.64 $\pm$ 0.07 & 0.77 $\pm$ 0.07 \\
-    1 & DBC+R & - & 100 & Voting & 0.72 $\pm$ 0.05 & 0.58 $\pm$ 0.06 & 0.7 $\pm$ 0.1 & 0.64 $\pm$ 0.07 & 0.77 $\pm$ 0.07 \\
-    2 & - & Crossval & 100 & Voting & 0.78 $\pm$ 0.05 & 0.71 $\pm$ 0.09 & 0.6 $\pm$ 0.1 & 0.66 $\pm$ 0.09 & 0.78 $\pm$ 0.05 \\
-    2 & - & PSO & 100 & Voting & 0.76 $\pm$ 0.04 & 0.7 $\pm$ 0.1 & 0.6 $\pm$ 0.1 & 0.6 $\pm$ 0.1 & 0.77 $\pm$ 0.05 \\
-    3 & - & - & 75 & Voting & 0.76 $\pm$ 0.06 & 0.7 $\pm$ 0.1 & 0.7 $\pm$ 0.1 & 0.66 $\pm$ 0.08 & 0.77 $\pm$ 0.07 \\
-    3 & - & - & 50 & Voting & 0.76 $\pm$ 0.06 & 0.7 $\pm$ 0.1 & 0.6 $\pm$ 0.1 & 0.65 $\pm$ 0.09 & 0.76 $\pm$ 0.08 \\
-    4 & - & - & 100 & Weighted & 0.75 $\pm$ 0.05 & 0.66 $\pm$ 0.09 & 0.6 $\pm$ 0.1 & 0.61 $\pm$ 0.09 & 0.76 $\pm$ 0.06 \\
-    4 & - & - & 100 & Meta & 0.76 $\pm$ 0.06 & 0.69 $\pm$ 0.09 & 0.5 $\pm$ 0.1 & 0.6 $\pm$ 0.1 & 0.77 $\pm$ 0.05 \\
-    123 & DBC & Crossval & 75 & Voting & 0.78 $\pm$ 0.05 & 0.73 $\pm$ 0.09 & 0.57 $\pm$ 0.1 & 0.64 $\pm$ 0.09 & 0.75 $\pm$ 0.06 \\
-    123 & Rand & Crossval & 75 & Voting & 0.78 $\pm$ 0.05 & 0.74 $\pm$ 0.1 & 0.58 $\pm$ 0.08 & 0.65 $\pm$ 0.08 & 0.76 $\pm$ 0.05 \\
-    123 & DBC+R & Crossval & 75 & Voting & 0.77 $\pm$ 0.05 & 0.7 $\pm$ 0.1 & 0.57 $\pm$ 0.1 & 0.63 $\pm$ 0.09 & 0.76 $\pm$ 0.06 \\
-    123 & DBC & Crossval & 50 & Voting & 0.76 $\pm$ 0.05 & 0.72 $\pm$ 0.1 & 0.53 $\pm$ 0.07 & 0.61 $\pm$ 0.07 & 0.75 $\pm$ 0.06 \\
-    123 & Rand & Crossval & 50 & Voting & 0.75 $\pm$ 0.04 & 0.69 $\pm$ 0.09 & 0.56 $\pm$ 0.07 & 0.61 $\pm$ 0.06 & 0.74 $\pm$ 0.06 \\
-    123 & DBC+R & Crossval & 50 & Voting & 0.76 $\pm$ 0.05 & 0.7 $\pm$ 0.09 & 0.56 $\pm$ 0.07 & 0.61 $\pm$ 0.06 & 0.74 $\pm$ 0.05 \\
-    124 & DBC & Crossval & 100 & Weighted & 0.75 $\pm$ 0.06 & 0.7 $\pm$ 0.1 & 0.5 $\pm$ 0.1 & 0.6 $\pm$ 0.1 & 0.74 $\pm$ 0.06 \\
-    124 & Rand & Crossval & 100 & Weighted & 0.75 $\pm$ 0.07 & 0.7 $\pm$ 0.1 & 0.5 $\pm$ 0.1 & 0.6 $\pm$ 0.1 & 0.76 $\pm$ 0.06 \\
-    124 & DBC+R & Crossval & 100 & Weighted & 0.76 $\pm$ 0.07 & 0.7 $\pm$ 0.1 & 0.5 $\pm$ 0.1 & 0.6 $\pm$ 0.1 & 0.76 $\pm$ 0.06 \\
-    124 & DBC & Crossval & 100 & Meta & 0.77 $\pm$ 0.04 & 0.74 $\pm$ 0.08 & 0.54 $\pm$ 0.08 & 0.62 $\pm$ 0.07 & 0.79 $\pm$ 0.05 \\
-    124 & Rand & Crossval & 100 & Meta & 0.77 $\pm$ 0.05 & 0.73 $\pm$ 0.09 & 0.5 $\pm$ 0.1 & 0.62 $\pm$ 0.1 & 0.79 $\pm$ 0.04 \\
-    124 & DBC+R & Crossval & 100 & Meta & 0.77 $\pm$ 0.05 & 0.73 $\pm$ 0.09 & 0.5 $\pm$ 0.1 & 0.61 $\pm$ 0.1 & 0.8 $\pm$ 0.04 \\
-    124 & DBC & PSO & 100 & Weighted & 0.75 $\pm$ 0.07 & 0.65 $\pm$ 0.1 & 0.6 $\pm$ 0.1 & 0.63 $\pm$ 0.1 & 0.78 $\pm$ 0.05 \\
-    124 & Rand & PSO & 100 & Weighted & 0.74 $\pm$ 0.06 & 0.63 $\pm$ 0.1 & 0.6 $\pm$ 0.1 & 0.62 $\pm$ 0.09 & 0.76 $\pm$ 0.05 \\
-    124 & DBC+R & PSO & 100 & Weighted & 0.75 $\pm$ 0.06 & 0.64 $\pm$ 0.09 & 0.6 $\pm$ 0.1 & 0.63 $\pm$ 0.09 & 0.77 $\pm$ 0.05 \\
-    124 & DBC & PSO & 100 & Meta & 0.76 $\pm$ 0.08 & 0.7 $\pm$ 0.1 & 0.57 $\pm$ 0.08 & 0.62 $\pm$ 0.1 & 0.77 $\pm$ 0.07 \\
-    124 & Rand & PSO & 100 & Meta & 0.76 $\pm$ 0.06 & 0.68 $\pm$ 0.09 & 0.6 $\pm$ 0.1 & 0.6 $\pm$ 0.1 & 0.79 $\pm$ 0.06 \\
-    124 & DBC+R & PSO & 100 & Meta & 0.76 $\pm$ 0.05 & 0.69 $\pm$ 0.09 & 0.6 $\pm$ 0.1 & 0.63 $\pm$ 0.1 & 0.8 $\pm$ 0.05 \\
-    1234 & DBC & Crossval & 75 & Weighted & 0.75 $\pm$ 0.06 & 0.7 $\pm$ 0.1 & 0.5 $\pm$ 0.1 & 0.6 $\pm$ 0.1 & 0.75 $\pm$ 0.06 \\
-    1234 & Rand & Crossval & 75 & Weighted & 0.74 $\pm$ 0.05 & 0.7 $\pm$ 0.1 & 0.51 $\pm$ 0.09 & 0.58 $\pm$ 0.09 & 0.75 $\pm$ 0.06 \\
-    1234 & DBC+R & Crossval & 75 & Weighted & 0.74 $\pm$ 0.05 & 0.7 $\pm$ 0.1 & 0.51 $\pm$ 0.1 & 0.58 $\pm$ 0.1 & 0.75 $\pm$ 0.06 \\
-    1234 & DBC & Crossval & 50 & Weighted & 0.75 $\pm$ 0.06 & 0.7 $\pm$ 0.1 & 0.5 $\pm$ 0.1 & 0.6 $\pm$ 0.1 & 0.74 $\pm$ 0.07 \\
-    1234 & Rand & Crossval & 50 & Weighted & 0.74 $\pm$ 0.05 & 0.68 $\pm$ 0.1 & 0.51 $\pm$ 0.1 & 0.58 $\pm$ 0.09 & 0.74 $\pm$ 0.05 \\
-    1234 & DBC+R & Crossval & 50 & Weighted & 0.75 $\pm$ 0.05 & 0.7 $\pm$ 0.1 & 0.5 $\pm$ 0.1 & 0.58 $\pm$ 0.08 & 0.73 $\pm$ 0.05 \\
-    1234 & DBC & Crossval & 75 & Meta & 0.77 $\pm$ 0.05 & 0.73 $\pm$ 0.1 & 0.5 $\pm$ 0.1 & 0.6 $\pm$ 0.1 & 0.79 $\pm$ 0.06 \\
-    1234 & Rand & Crossval & 75 & Meta & 0.76 $\pm$ 0.06 & 0.7 $\pm$ 0.1 & 0.5 $\pm$ 0.1 & 0.6 $\pm$ 0.1 & 0.79 $\pm$ 0.07 \\
-    1234 & DBC+R & Crossval & 75 & Meta & 0.76 $\pm$ 0.05 & 0.7 $\pm$ 0.1 & 0.5 $\pm$ 0.1 & 0.6 $\pm$ 0.1 & 0.79 $\pm$ 0.05 \\
-    1234 & DBC & Crossval & 50 & Meta & 0.77 $\pm$ 0.05 & 0.74 $\pm$ 0.09 & 0.53 $\pm$ 0.09 & 0.61 $\pm$ 0.08 & 0.78 $\pm$ 0.06 \\
-    1234 & Rand & Crossval & 50 & Meta & 0.77 $\pm$ 0.03 & 0.73 $\pm$ 0.06 & 0.53 $\pm$ 0.05 & 0.61 $\pm$ 0.05 & 0.77 $\pm$ 0.06 \\
-    1234 & DBC+R & Crossval & 50 & Meta & 0.76 $\pm$ 0.04 & 0.73 $\pm$ 0.08 & 0.52 $\pm$ 0.07 & 0.6 $\pm$ 0.06 & 0.78 $\pm$ 0.06 \\
+    {}          & \HBreak{Clust.\\Sel.(1)} & \HBreak{Clf.\\Sel.(2)} & \HBreak{Feats.\\\%(3)} & \HBreak{Fusion\\(4)} & \HBreak{Num.\\Clust.} & \textbf{Acc.} & \textbf{Recall} & \textbf{Prec.} & \textbf{F1}        & \textbf{AUC} \\ \midrule
+    0 & - & - & 100 & MV & 2 & 0.72(4) & 0.59(6) & 0.71(9) & 0.64(6) & 0.76(6) \\
+    1 & DBC & - & 100 & MV & 2 & 0.72(5) & 0.59(6) & 0.7(1) & 0.63(7) & 0.77(6) \\
+    1 & Rand & - & 100 & MV & 2 & 0.72(5) & 0.58(6) & 0.7(1) & 0.64(6) & 0.77(6) \\
+    1 & DBC+R & - & 100 & MV & 2 & 0.72(5) & 0.58(6) & 0.7(1) & 0.64(6) & 0.77(6) \\
+    2 & - & CV & 100 & MV & 2 & 0.78(5) & 0.71(9) & 0.6(1) & 0.66(8) & 0.78(5) \\
+    2 & - & PSO & 100 & MV & 2 & 0.76(4) & 0.7(1) & 0.6(1) & 0.6(1) & 0.77(4) \\
+    3 & - & - & 75 & MV & 2 & 0.76(6) & 0.7(1) & 0.7(1) & 0.66(8) & 0.77(7) \\
+    3 & - & - & 50 & MV & 2 & 0.76(5) & 0.7(1) & 0.6(1) & 0.65(8) & 0.76(7) \\
+    4 & - & - & 100 & WM & 2 & 0.75(5) & 0.66(8) & 0.6(1) & 0.61(9) & 0.76(6) \\
+    4 & - & - & 100 & MC & 2 & 0.76(5) & 0.69(9) & 0.5(1) & 0.6(1) & 0.77(4) \\
+    123 & DBC & CV & 75 & MV & 2 & 0.78(4) & 0.73(8) & 0.57(9) & 0.64(8) & 0.75(6) \\
+    123 & Rand & CV & 75 & MV & 2 & 0.78(4) & 0.74(9) & 0.58(8) & 0.65(7) & 0.76(5) \\
+    123 & DBC+R & CV & 75 & MV & 2 & 0.77(5) & 0.7(1) & 0.57(9) & 0.63(9) & 0.76(5) \\
+    123 & DBC & CV & 50 & MV & 2 & 0.76(4) & 0.72(9) & 0.53(6) & 0.61(7) & 0.75(6) \\
+    123 & Rand & CV & 50 & MV & 2 & 0.75(4) & 0.69(8) & 0.56(6) & 0.61(5) & 0.74(5) \\
+    123 & DBC+R & CV & 50 & MV & 2 & 0.76(4) & 0.70(9) & 0.56(6) & 0.61(6) & 0.74(5) \\
+    124 & DBC & CV & 100 & WM & 2 & 0.75(5) & 0.7(1) & 0.5(1) & 0.6(1) & 0.74(6) \\
+    124 & Rand & CV & 100 & WM & 2 & 0.75(7) & 0.7(1) & 0.5(1) & 0.6(1) & 0.76(6) \\
+    124 & DBC+R & CV & 100 & WM & 2 & 0.76(7) & 0.7(1) & 0.5(1) & 0.6(1) & 0.76(6) \\
+    124 & DBC & CV & 100 & MC & 2 & 0.77(4) & 0.74(8) & 0.54(7) & 0.62(7) & 0.79(4) \\
+    124 & Rand & CV & 100 & MC & 2 & 0.77(4) & 0.73(9) & 0.5(1) & 0.62(9) & 0.79(3) \\
+    124 & DBC+R & CV & 100 & MC & 2 & 0.77(4) & 0.73(9) & 0.5(1) & 0.61(9) & 0.80(4) \\
+    124 & DBC & PSO & 100 & WM & 2.3(4) & 0.75(6) & 0.65(9) & 0.6(1) & 0.63(9) & 0.78(5) \\
+    124 & Rand & PSO & 100 & WM & 2 & 0.74(6) & 0.63(9) & 0.6(1) & 0.62(8) & 0.76(5) \\
+    124 & DBC+R & PSO & 100 & WM & 2 & 0.75(5) & 0.64(9) & 0.6(1) & 0.63(8) & 0.77(5) \\
+    124 & DBC & PSO & 100 & MC & 2.8(3) & 0.76(7) & 0.7(1) & 0.57(8) & 0.62(9) & 0.77(7) \\
+    124 & Rand & PSO & 100 & MC & 2 & 0.76(5) & 0.68(9) & 0.6(1) & 0.6(1) & 0.79(6) \\
+    124 & DBC+R & PSO & 100 & MC & 2 & 0.76(5) & 0.69(8) & 0.6(1) & 0.63(9) & 0.80(5) \\
+    1234 & DBC & CV & 75 & WM & 2 & 0.75(6) & 0.7(1) & 0.5(1) & 0.6(1) & 0.75(5) \\
+    1234 & Rand & CV & 75 & WM & 2 & 0.74(5) & 0.7(1) & 0.51(9) & 0.58(9) & 0.75(5) \\
+    1234 & DBC+R & CV & 75 & WM & 2 & 0.74(5) & 0.7(1) & 0.51(9) & 0.58(9) & 0.75(5) \\
+    1234 & DBC & CV & 50 & WM & 2 & 0.75(5) & 0.7(1) & 0.5(1) & 0.6(1) & 0.74(6) \\
+    1234 & Rand & CV & 50 & WM & 2 & 0.74(4) & 0.68(9) & 0.51(9) & 0.58(9) & 0.74(4) \\
+    1234 & DBC+R & CV & 50 & WM & 2 & 0.75(4) & 0.70(9) & 0.5(1) & 0.58(8) & 0.73(4) \\
+    1234 & DBC & CV & 75 & MC & 2 & 0.77(5) & 0.73(9) & 0.5(1) & 0.6(1) & 0.79(6) \\
+    1234 & Rand & CV & 75 & MC & 2 & 0.76(5) & 0.7(1) & 0.5(1) & 0.6(1) & 0.79(7) \\
+    1234 & DBC+R & CV & 75 & MC & 2 & 0.76(5) & 0.7(1) & 0.5(1) & 0.6(1) & 0.79(4) \\
+    1234 & DBC & CV & 50 & MC & 2 & 0.77(4) & 0.74(8) & 0.53(8) & 0.61(8) & 0.78(5) \\
+    1234 & Rand & CV & 50 & MC & 2 & 0.77(2) & 0.73(5) & 0.53(5) & 0.61(4) & 0.77(6) \\
+    1234 & DBC+R & CV & 50 & MC & 2 & 0.76(3) & 0.73(7) & 0.52(6) & 0.60(6) & 0.78(5) \\
     \bottomrule
     \end{tabular}
     }
