--- a/results/latex/wdbc.tex
+++ b/results/latex/wdbc.tex
@@ -1,49 +1,51 @@
 \begin{table}[ht]
     \centering
+    \caption{Ablation study results for the breast cancer dataset. Columns Clust. Sel.(1), Clf. Self.(2), Feats.\%(3) and Fusion(4) denote, respectively, the clustering evaluation metric, method for base classifier selection, percentage of features and the ensemble fusion strategy. It presents 5 different classification metrics and the average number of clusters. Numbers in parentheses indicate one standard deviation and apply to the last significant digit of each value.}
+    \label{tab:ablation_wdbc}
     \resizebox{\textwidth}{!}{
-    \begin{tabular}{llllllllll}
+    \begin{tabular}{lccccllllll}
     \toprule
-    & \textbf{Clusters(1)} & \textbf{Clf(2)} & \textbf{\%(3)} & \textbf{Fusion(4)} & \textbf{Accuracy} & \textbf{Recall} & \textbf{Precision} & \textbf{F1-Score} & \textbf{AUC} \\ \midrule
-    0 & - & - & 100 & Voting & 0.78 $\pm$ 0.07 & 0.65 $\pm$ 0.09 & 0.94 $\pm$ 0.04 & 0.77 $\pm$ 0.06 & 0.93 $\pm$ 0.04 \\
-    1 & DBC & - & 100 & Voting & 0.6 $\pm$ 0.1 & 0.5 $\pm$ 0.1 & 0.99 $\pm$ 0.03 & 0.66 $\pm$ 0.09 & 0.95 $\pm$ 0.02 \\
-    1 & Rand & - & 100 & Voting & 0.84 $\pm$ 0.09 & 0.8 $\pm$ 0.1 & 0.89 $\pm$ 0.08 & 0.81 $\pm$ 0.09 & 0.93 $\pm$ 0.05 \\
-    1 & DBC+R & - & 100 & Voting & 0.8 $\pm$ 0.09 & 0.7 $\pm$ 0.1 & 0.93 $\pm$ 0.04 & 0.79 $\pm$ 0.08 & 0.92 $\pm$ 0.05 \\
-    2 & - & Crossval & 100 & Voting & 0.7 $\pm$ 0.2 & 0.7 $\pm$ 0.2 & 0.97 $\pm$ 0.04 & 0.8 $\pm$ 0.2 & 0.97 $\pm$ 0.03 \\
-    2 & - & PSO & 100 & Voting & 0.94 $\pm$ 0.03 & 0.92 $\pm$ 0.05 & 0.92 $\pm$ 0.06 & 0.92 $\pm$ 0.04 & 0.98 $\pm$ 0.02 \\
-    3 & - & - & 75 & Voting & 0.81 $\pm$ 0.07 & 0.69 $\pm$ 0.09 & 0.94 $\pm$ 0.04 & 0.79 $\pm$ 0.06 & 0.93 $\pm$ 0.04 \\
-    3 & - & - & 50 & Voting & 0.86 $\pm$ 0.05 & 0.75 $\pm$ 0.09 & 0.97 $\pm$ 0.04 & 0.84 $\pm$ 0.06 & 0.94 $\pm$ 0.03 \\
-    4 & - & - & 100 & Weighted & 0.92 $\pm$ 0.04 & 0.84 $\pm$ 0.06 & 0.97 $\pm$ 0.04 & 0.9 $\pm$ 0.04 & 0.94 $\pm$ 0.04 \\
-    4 & - & - & 100 & Meta & 0.91 $\pm$ 0.05 & 0.88 $\pm$ 0.08 & 0.88 $\pm$ 0.07 & 0.88 $\pm$ 0.06 & 0.92 $\pm$ 0.05 \\
-    123 & DBC & Crossval & 75 & Voting & 0.4 $\pm$ 0.2 & 0.4 $\pm$ 0.2 & 0.99 $\pm$ 0.03 & 0.6 $\pm$ 0.1 & 0.98 $\pm$ 0.02 \\
-    123 & Rand & Crossval & 75 & Voting & 0.87 $\pm$ 0.09 & 0.8 $\pm$ 0.1 & 0.93 $\pm$ 0.1 & 0.85 $\pm$ 0.1 & 0.96 $\pm$ 0.05 \\
-    123 & DBC+R & Crossval & 75 & Voting & 0.9 $\pm$ 0.1 & 0.8 $\pm$ 0.2 & 0.95 $\pm$ 0.04 & 0.9 $\pm$ 0.1 & 0.96 $\pm$ 0.04 \\
-    123 & DBC & Crossval & 50 & Voting & 0.4 $\pm$ 0.2 & 0.4 $\pm$ 0.2 & 0.99 $\pm$ 0.03 & 0.6 $\pm$ 0.1 & 0.98 $\pm$ 0.01 \\
-    123 & Rand & Crossval & 50 & Voting & 0.88 $\pm$ 0.06 & 0.8 $\pm$ 0.1 & 0.96 $\pm$ 0.04 & 0.86 $\pm$ 0.06 & 0.96 $\pm$ 0.04 \\
-    123 & DBC+R & Crossval & 50 & Voting & 0.86 $\pm$ 0.09 & 0.8 $\pm$ 0.2 & 0.95 $\pm$ 0.05 & 0.85 $\pm$ 0.09 & 0.96 $\pm$ 0.03 \\
-    124 & DBC & Crossval & 100 & Weighted & 0.97 $\pm$ 0.02 & 0.96 $\pm$ 0.03 & 0.95 $\pm$ 0.04 & 0.95 $\pm$ 0.03 & 0.98 $\pm$ 0.02 \\
-    124 & Rand & Crossval & 100 & Weighted & 0.95 $\pm$ 0.03 & 0.95 $\pm$ 0.07 & 0.93 $\pm$ 0.05 & 0.93 $\pm$ 0.03 & 0.97 $\pm$ 0.04 \\
-    124 & DBC+R & Crossval & 100 & Weighted & 0.96 $\pm$ 0.04 & 0.95 $\pm$ 0.07 & 0.95 $\pm$ 0.04 & 0.95 $\pm$ 0.04 & 0.97 $\pm$ 0.04 \\
-    124 & DBC & Crossval & 100 & Meta & 0.96 $\pm$ 0.02 & 0.94 $\pm$ 0.04 & 0.95 $\pm$ 0.06 & 0.94 $\pm$ 0.03 & 0.98 $\pm$ 0.02 \\
-    124 & Rand & Crossval & 100 & Meta & 0.96 $\pm$ 0.02 & 0.95 $\pm$ 0.05 & 0.95 $\pm$ 0.05 & 0.95 $\pm$ 0.03 & 0.97 $\pm$ 0.02 \\
-    124 & DBC+R & Crossval & 100 & Meta & 0.95 $\pm$ 0.05 & 0.93 $\pm$ 0.07 & 0.93 $\pm$ 0.07 & 0.93 $\pm$ 0.06 & 0.97 $\pm$ 0.02 \\
-    124 & DBC & PSO & 100 & Weighted & 0.97 $\pm$ 0.02 & 0.97 $\pm$ 0.04 & 0.94 $\pm$ 0.06 & 0.95 $\pm$ 0.03 & 0.98 $\pm$ 0.02 \\
-    124 & Rand & PSO & 100 & Weighted & 0.96 $\pm$ 0.03 & 0.98 $\pm$ 0.04 & 0.93 $\pm$ 0.06 & 0.95 $\pm$ 0.04 & 0.98 $\pm$ 0.03 \\
-    124 & DBC+R & PSO & 100 & Weighted & 0.96 $\pm$ 0.03 & 0.98 $\pm$ 0.04 & 0.91 $\pm$ 0.07 & 0.94 $\pm$ 0.04 & 0.98 $\pm$ 0.01 \\
-    124 & DBC & PSO & 100 & Meta & 0.97 $\pm$ 0.02 & 0.97 $\pm$ 0.03 & 0.95 $\pm$ 0.04 & 0.96 $\pm$ 0.03 & 0.99 $\pm$ 0.01 \\
-    124 & Rand & PSO & 100 & Meta & 0.96 $\pm$ 0.02 & 0.96 $\pm$ 0.03 & 0.94 $\pm$ 0.05 & 0.95 $\pm$ 0.03 & 0.995 $\pm$ 0.007 \\
-    124 & DBC+R & PSO & 100 & Meta & 0.96 $\pm$ 0.02 & 0.96 $\pm$ 0.02 & 0.94 $\pm$ 0.05 & 0.95 $\pm$ 0.03 & 0.993 $\pm$ 0.009 \\
-    1234 & DBC & Crossval & 75 & Weighted & 0.98 $\pm$ 0.02 & 0.98 $\pm$ 0.02 & 0.96 $\pm$ 0.03 & 0.97 $\pm$ 0.02 & 0.98 $\pm$ 0.01 \\
-    1234 & Rand & Crossval & 75 & Weighted & 0.94 $\pm$ 0.04 & 0.92 $\pm$ 0.09 & 0.95 $\pm$ 0.04 & 0.93 $\pm$ 0.04 & 0.96 $\pm$ 0.04 \\
-    1234 & DBC+R & Crossval & 75 & Weighted & 0.96 $\pm$ 0.03 & 0.94 $\pm$ 0.08 & 0.95 $\pm$ 0.04 & 0.94 $\pm$ 0.04 & 0.97 $\pm$ 0.04 \\
-    1234 & DBC & Crossval & 50 & Weighted & 0.97 $\pm$ 0.02 & 0.95 $\pm$ 0.03 & 0.97 $\pm$ 0.04 & 0.96 $\pm$ 0.02 & 0.98 $\pm$ 0.01 \\
-    1234 & Rand & Crossval & 50 & Weighted & 0.94 $\pm$ 0.03 & 0.91 $\pm$ 0.08 & 0.94 $\pm$ 0.06 & 0.92 $\pm$ 0.04 & 0.96 $\pm$ 0.03 \\
-    1234 & DBC+R & Crossval & 50 & Weighted & 0.95 $\pm$ 0.03 & 0.94 $\pm$ 0.08 & 0.93 $\pm$ 0.06 & 0.93 $\pm$ 0.04 & 0.97 $\pm$ 0.03 \\
-    1234 & DBC & Crossval & 75 & Meta & 0.97 $\pm$ 0.01 & 0.96 $\pm$ 0.04 & 0.97 $\pm$ 0.04 & 0.96 $\pm$ 0.02 & 0.99 $\pm$ 0.02 \\
-    1234 & Rand & Crossval & 75 & Meta & 0.96 $\pm$ 0.03 & 0.94 $\pm$ 0.05 & 0.95 $\pm$ 0.04 & 0.94 $\pm$ 0.03 & 0.98 $\pm$ 0.02 \\
-    1234 & DBC+R & Crossval & 75 & Meta & 0.96 $\pm$ 0.03 & 0.94 $\pm$ 0.05 & 0.95 $\pm$ 0.04 & 0.94 $\pm$ 0.03 & 0.98 $\pm$ 0.02 \\
-    1234 & DBC & Crossval & 50 & Meta & 0.96 $\pm$ 0.02 & 0.94 $\pm$ 0.04 & 0.96 $\pm$ 0.05 & 0.95 $\pm$ 0.02 & 0.97 $\pm$ 0.02 \\
-    1234 & Rand & Crossval & 50 & Meta & 0.94 $\pm$ 0.05 & 0.92 $\pm$ 0.07 & 0.92 $\pm$ 0.07 & 0.92 $\pm$ 0.06 & 0.97 $\pm$ 0.02 \\
-    1234 & DBC+R & Crossval & 50 & Meta & 0.96 $\pm$ 0.02 & 0.93 $\pm$ 0.04 & 0.95 $\pm$ 0.05 & 0.94 $\pm$ 0.03 & 0.97 $\pm$ 0.02 \\
+    {}          & \HBreak{Clust.\\Sel.(1)} & \HBreak{Clf.\\Sel.(2)} & \HBreak{Feats.\\\%(3)} & \HBreak{Fusion\\(4)} & \HBreak{Num.\\Clust.} & \textbf{Acc.} & \textbf{Recall} & \textbf{Prec.} & \textbf{F1}        & \textbf{AUC} \\ \midrule
+    0 & - & - & 100 & MV & 2 & 0.78(7) & 0.65(9) & 0.94(3) & 0.77(6) & 0.93(4) \\
+    1 & DBC & - & 100 & MV & 2 & 0.6(1) & 0.5(1) & 0.99(2) & 0.66(8) & 0.95(1) \\
+    1 & Rand & - & 100 & MV & 2 & 0.84(8) & 0.8(1) & 0.89(7) & 0.81(8) & 0.93(4) \\
+    1 & DBC+R & - & 100 & MV & 2 & 0.80(8) & 0.7(1) & 0.93(4) & 0.79(7) & 0.92(4) \\
+    2 & - & CV & 100 & MV & 2 & 0.7(2) & 0.7(2) & 0.97(3) & 0.8(1) & 0.97(3) \\
+    2 & - & PSO & 100 & MV & 2 & 0.94(2) & 0.92(5) & 0.92(5) & 0.92(3) & 0.98(1) \\
+    3 & - & - & 75 & MV & 2 & 0.81(6) & 0.69(8) & 0.94(3) & 0.79(5) & 0.93(4) \\
+    3 & - & - & 50 & MV & 2 & 0.86(5) & 0.75(9) & 0.97(3) & 0.84(5) & 0.94(2) \\
+    4 & - & - & 100 & WM & 2 & 0.92(3) & 0.84(5) & 0.97(4) & 0.90(4) & 0.94(4) \\
+    4 & - & - & 100 & MC & 2 & 0.91(5) & 0.88(7) & 0.88(6) & 0.88(6) & 0.92(5) \\
+    123 & DBC & CV & 75 & MV & 2 & 0.4(1) & 0.4(1) & 0.99(2) & 0.6(1) & 0.98(1) \\
+    123 & Rand & CV & 75 & MV & 2 & 0.87(8) & 0.8(1) & 0.93(9) & 0.85(9) & 0.96(4) \\
+    123 & DBC+R & CV & 75 & MV & 2 & 0.9(1) & 0.8(1) & 0.95(4) & 0.9(1) & 0.96(3) \\
+    123 & DBC & CV & 50 & MV & 2 & 0.4(1) & 0.4(1) & 0.99(2) & 0.6(1) & 0.98(1) \\
+    123 & Rand & CV & 50 & MV & 2 & 0.88(6) & 0.8(1) & 0.96(4) & 0.86(6) & 0.96(3) \\
+    123 & DBC+R & CV & 50 & MV & 2 & 0.86(9) & 0.8(1) & 0.95(4) & 0.85(8) & 0.96(3) \\
+    124 & DBC & CV & 100 & WM & 2 & 0.97(1) & 0.96(2) & 0.95(4) & 0.95(2) & 0.98(1) \\
+    124 & Rand & CV & 100 & WM & 2 & 0.95(2) & 0.95(6) & 0.93(4) & 0.93(3) & 0.97(3) \\
+    124 & DBC+R & CV & 100 & WM & 2 & 0.96(3) & 0.95(7) & 0.95(4) & 0.95(4) & 0.97(3) \\
+    124 & DBC & CV & 100 & MC & 2 & 0.96(2) & 0.94(3) & 0.95(5) & 0.94(3) & 0.98(2) \\
+    124 & Rand & CV & 100 & MC & 2 & 0.96(2) & 0.95(4) & 0.95(4) & 0.95(3) & 0.97(2) \\
+    124 & DBC+R & CV & 100 & MC & 2 & 0.95(4) & 0.93(6) & 0.93(7) & 0.93(6) & 0.97(2) \\
+    124 & DBC & PSO & 100 & WM & 2 & 0.97(1) & 0.97(3) & 0.94(5) & 0.95(2) & 0.98(1) \\
+    124 & Rand & PSO & 100 & WM & 2 & 0.96(2) & 0.98(3) & 0.93(6) & 0.95(3) & 0.98(2) \\
+    124 & DBC+R & PSO & 100 & WM & 2 & 0.96(2) & 0.98(3) & 0.91(6) & 0.94(3) & 0.98(1) \\
+    124 & DBC & PSO & 100 & MC & 2 & 0.97(1) & 0.97(3) & 0.95(4) & 0.96(2) & 0.99(1) \\
+    124 & Rand & PSO & 100 & MC & 2 & 0.96(2) & 0.96(2) & 0.94(5) & 0.95(2) & 0.995(7) \\
+    124 & DBC+R & PSO & 100 & MC & 2 & 0.96(1) & 0.96(2) & 0.94(5) & 0.95(2) & 0.993(9) \\
+    1234 & DBC & CV & 75 & WM & 2 & 0.98(1) & 0.98(2) & 0.96(3) & 0.97(2) & 0.98(1) \\
+    1234 & Rand & CV & 75 & WM & 2 & 0.94(3) & 0.92(9) & 0.95(3) & 0.93(4) & 0.96(4) \\
+    1234 & DBC+R & CV & 75 & WM & 2 & 0.96(3) & 0.94(8) & 0.95(4) & 0.94(4) & 0.97(4) \\
+    1234 & DBC & CV & 50 & WM & 2 & 0.97(1) & 0.95(2) & 0.97(3) & 0.96(2) & 0.98(1) \\
+    1234 & Rand & CV & 50 & WM & 2 & 0.94(3) & 0.91(8) & 0.94(6) & 0.92(3) & 0.96(3) \\
+    1234 & DBC+R & CV & 50 & WM & 2 & 0.95(3) & 0.94(7) & 0.93(6) & 0.93(3) & 0.97(3) \\
+    1234 & DBC & CV & 75 & MC & 2 & 0.97(1) & 0.96(3) & 0.97(3) & 0.96(1) & 0.99(1) \\
+    1234 & Rand & CV & 75 & MC & 2 & 0.96(2) & 0.94(5) & 0.95(4) & 0.94(3) & 0.98(1) \\
+    1234 & DBC+R & CV & 75 & MC & 2 & 0.96(2) & 0.94(5) & 0.95(4) & 0.94(3) & 0.98(2) \\
+    1234 & DBC & CV & 50 & MC & 2 & 0.96(1) & 0.94(3) & 0.96(4) & 0.95(2) & 0.97(1) \\
+    1234 & Rand & CV & 50 & MC & 2 & 0.94(4) & 0.92(7) & 0.92(7) & 0.92(5) & 0.97(2) \\
+    1234 & DBC+R & CV & 50 & MC & 2 & 0.96(2) & 0.93(3) & 0.95(4) & 0.94(3) & 0.97(2) \\
     \bottomrule
     \end{tabular}
     }
