--- a/results/latex/wine.tex
+++ b/results/latex/wine.tex
@@ -1,49 +1,51 @@
 \begin{table}[ht]
     \centering
+    \caption{Ablation study results for the wine dataset. Columns Clust. Sel.(1), Clf. Self.(2), Feats.\%(3) and Fusion(4) denote, respectively, the clustering evaluation metric, method for base classifier selection, percentage of features and the ensemble fusion strategy. It presents 5 different classification metrics and the average number of clusters. Numbers in parentheses indicate one standard deviation and apply to the last significant digit of each value.}
+    \label{tab:ablation_wine}
     \resizebox{\textwidth}{!}{
-    \begin{tabular}{llllllllll}
+    \begin{tabular}{lccccllllll}
     \toprule
-    & \textbf{Clusters(1)} & \textbf{Clf(2)} & \textbf{\%(3)} & \textbf{Fusion(4)} & \textbf{Accuracy} & \textbf{Recall} & \textbf{Precision} & \textbf{F1-Score} & \textbf{AUC} \\ \midrule
-    0 & - & - & 100 & Voting & 0.6 $\pm$ 0.1 & 0.6 $\pm$ 0.1 & 0.9 $\pm$ 0.1 & 0.6 $\pm$ 0.1 & 0.7 $\pm$ 0.1 \\
-    1 & DBC & - & 100 & Voting & 0.55 $\pm$ 0.05 & 0.55 $\pm$ 0.05 & 0.93 $\pm$ 0.02 & 0.65 $\pm$ 0.04 & 0.99 $\pm$ 0.01 \\
-    1 & Rand & - & 100 & Voting & 0.6 $\pm$ 0.09 & 0.6 $\pm$ 0.09 & 0.91 $\pm$ 0.04 & 0.67 $\pm$ 0.05 & 0.99 $\pm$ 0.02 \\
-    1 & DBC+R & - & 100 & Voting & 0.6 $\pm$ 0.08 & 0.6 $\pm$ 0.08 & 0.91 $\pm$ 0.04 & 0.66 $\pm$ 0.05 & 0.99 $\pm$ 0.02 \\
-    2 & - & Crossval & 100 & Voting & 0.6 $\pm$ 0.1 & 0.6 $\pm$ 0.1 & 0.8 $\pm$ 0.1 & 0.7 $\pm$ 0.1 & 0.8 $\pm$ 0.1 \\
-    2 & - & PSO & 100 & Voting & 0.87 $\pm$ 0.09 & 0.87 $\pm$ 0.09 & 0.94 $\pm$ 0.05 & 0.89 $\pm$ 0.07 & 0.95 $\pm$ 0.04 \\
-    3 & - & - & 75 & Voting & 0.6 $\pm$ 0.1 & 0.6 $\pm$ 0.1 & 0.8 $\pm$ 0.1 & 0.6 $\pm$ 0.1 & 0.7 $\pm$ 0.1 \\
-    3 & - & - & 50 & Voting & 0.64 $\pm$ 0.09 & 0.64 $\pm$ 0.09 & 0.9 $\pm$ 0.1 & 0.72 $\pm$ 0.1 & 0.77 $\pm$ 0.1 \\
-    4 & - & - & 100 & Weighted & 0.95 $\pm$ 0.06 & 0.95 $\pm$ 0.06 & 0.96 $\pm$ 0.05 & 0.95 $\pm$ 0.06 & 0.99 $\pm$ 0.02 \\
-    4 & - & - & 100 & Meta & 0.5 $\pm$ 0.08 & 0.5 $\pm$ 0.08 & 0.87 $\pm$ 0.09 & 0.59 $\pm$ 0.07 & 0.7 $\pm$ 0.1 \\
-    123 & DBC & Crossval & 75 & Voting & 0.61 $\pm$ 0.07 & 0.61 $\pm$ 0.07 & 0.94 $\pm$ 0.04 & 0.71 $\pm$ 0.06 & 0.99 $\pm$ 0.02 \\
-    123 & Rand & Crossval & 75 & Voting & 0.65 $\pm$ 0.06 & 0.65 $\pm$ 0.06 & 0.93 $\pm$ 0.06 & 0.72 $\pm$ 0.06 & 0.99 $\pm$ 0.02 \\
-    123 & DBC+R & Crossval & 75 & Voting & 0.65 $\pm$ 0.06 & 0.65 $\pm$ 0.06 & 0.94 $\pm$ 0.06 & 0.73 $\pm$ 0.06 & 0.99 $\pm$ 0.02 \\
-    123 & DBC & Crossval & 50 & Voting & 0.62 $\pm$ 0.06 & 0.62 $\pm$ 0.06 & 0.96 $\pm$ 0.04 & 0.72 $\pm$ 0.06 & 0.97 $\pm$ 0.03 \\
-    123 & Rand & Crossval & 50 & Voting & 0.65 $\pm$ 0.05 & 0.65 $\pm$ 0.05 & 0.95 $\pm$ 0.06 & 0.74 $\pm$ 0.06 & 0.98 $\pm$ 0.03 \\
-    123 & DBC+R & Crossval & 50 & Voting & 0.65 $\pm$ 0.04 & 0.65 $\pm$ 0.04 & 0.97 $\pm$ 0.05 & 0.75 $\pm$ 0.05 & 0.98 $\pm$ 0.03 \\
-    124 & DBC & Crossval & 100 & Weighted & 0.98 $\pm$ 0.04 & 0.98 $\pm$ 0.04 & 0.98 $\pm$ 0.04 & 0.98 $\pm$ 0.05 & 0.99 $\pm$ 0.03 \\
-    124 & Rand & Crossval & 100 & Weighted & 0.98 $\pm$ 0.04 & 0.98 $\pm$ 0.04 & 0.98 $\pm$ 0.04 & 0.98 $\pm$ 0.04 & 0.99 $\pm$ 0.03 \\
-    124 & DBC+R & Crossval & 100 & Weighted & 0.98 $\pm$ 0.04 & 0.98 $\pm$ 0.04 & 0.98 $\pm$ 0.04 & 0.98 $\pm$ 0.04 & 0.99 $\pm$ 0.03 \\
-    124 & DBC & Crossval & 100 & Meta & 0.98 $\pm$ 0.04 & 0.98 $\pm$ 0.04 & 0.98 $\pm$ 0.04 & 0.98 $\pm$ 0.05 & 1.0 $\pm$ 0.001 \\
-    124 & Rand & Crossval & 100 & Meta & 0.98 $\pm$ 0.04 & 0.98 $\pm$ 0.04 & 0.98 $\pm$ 0.04 & 0.98 $\pm$ 0.04 & 0.999 $\pm$ 0.002 \\
-    124 & DBC+R & Crossval & 100 & Meta & 0.98 $\pm$ 0.04 & 0.98 $\pm$ 0.04 & 0.98 $\pm$ 0.04 & 0.98 $\pm$ 0.04 & 0.999 $\pm$ 0.002 \\
-    124 & DBC & PSO & 100 & Weighted & 0.96 $\pm$ 0.04 & 0.96 $\pm$ 0.04 & 0.97 $\pm$ 0.03 & 0.96 $\pm$ 0.04 & 0.99 $\pm$ 0.02 \\
-    124 & Rand & PSO & 100 & Weighted & 0.95 $\pm$ 0.05 & 0.95 $\pm$ 0.05 & 0.96 $\pm$ 0.03 & 0.95 $\pm$ 0.05 & 0.98 $\pm$ 0.02 \\
-    124 & DBC+R & PSO & 100 & Weighted & 0.96 $\pm$ 0.03 & 0.96 $\pm$ 0.03 & 0.96 $\pm$ 0.03 & 0.96 $\pm$ 0.03 & 0.99 $\pm$ 0.02 \\
-    124 & DBC & PSO & 100 & Meta & 0.98 $\pm$ 0.03 & 0.98 $\pm$ 0.03 & 0.98 $\pm$ 0.02 & 0.98 $\pm$ 0.03 & 0.99 $\pm$ 0.02 \\
-    124 & Rand & PSO & 100 & Meta & 0.98 $\pm$ 0.03 & 0.98 $\pm$ 0.03 & 0.98 $\pm$ 0.02 & 0.98 $\pm$ 0.03 & 1.0 $\pm$ 0.01 \\
-    124 & DBC+R & PSO & 100 & Meta & 0.97 $\pm$ 0.03 & 0.97 $\pm$ 0.03 & 0.97 $\pm$ 0.02 & 0.97 $\pm$ 0.03 & 1.0 $\pm$ 0.01 \\
-    1234 & DBC & Crossval & 75 & Weighted & 0.98 $\pm$ 0.04 & 0.98 $\pm$ 0.04 & 0.98 $\pm$ 0.04 & 0.98 $\pm$ 0.05 & 0.99 $\pm$ 0.03 \\
-    1234 & Rand & Crossval & 75 & Weighted & 0.98 $\pm$ 0.04 & 0.98 $\pm$ 0.04 & 0.98 $\pm$ 0.04 & 0.98 $\pm$ 0.04 & 0.99 $\pm$ 0.03 \\
-    1234 & DBC+R & Crossval & 75 & Weighted & 0.98 $\pm$ 0.04 & 0.98 $\pm$ 0.04 & 0.98 $\pm$ 0.04 & 0.98 $\pm$ 0.04 & 0.99 $\pm$ 0.03 \\
-    1234 & DBC & Crossval & 50 & Weighted & 0.96 $\pm$ 0.06 & 0.96 $\pm$ 0.06 & 0.97 $\pm$ 0.04 & 0.96 $\pm$ 0.06 & 0.98 $\pm$ 0.03 \\
-    1234 & Rand & Crossval & 50 & Weighted & 0.97 $\pm$ 0.06 & 0.97 $\pm$ 0.06 & 0.98 $\pm$ 0.04 & 0.97 $\pm$ 0.06 & 0.99 $\pm$ 0.03 \\
-    1234 & DBC+R & Crossval & 50 & Weighted & 0.96 $\pm$ 0.06 & 0.96 $\pm$ 0.06 & 0.97 $\pm$ 0.04 & 0.96 $\pm$ 0.05 & 0.99 $\pm$ 0.03 \\
-    1234 & DBC & Crossval & 75 & Meta & 0.98 $\pm$ 0.04 & 0.98 $\pm$ 0.04 & 0.98 $\pm$ 0.04 & 0.98 $\pm$ 0.05 & 0.999 $\pm$ 0.004 \\
-    1234 & Rand & Crossval & 75 & Meta & 0.98 $\pm$ 0.04 & 0.98 $\pm$ 0.04 & 0.98 $\pm$ 0.04 & 0.98 $\pm$ 0.04 & 0.998 $\pm$ 0.004 \\
-    1234 & DBC+R & Crossval & 75 & Meta & 0.98 $\pm$ 0.04 & 0.98 $\pm$ 0.04 & 0.98 $\pm$ 0.04 & 0.98 $\pm$ 0.04 & 0.998 $\pm$ 0.004 \\
-    1234 & DBC & Crossval & 50 & Meta & 0.97 $\pm$ 0.05 & 0.97 $\pm$ 0.05 & 0.98 $\pm$ 0.04 & 0.97 $\pm$ 0.05 & 0.999 $\pm$ 0.004 \\
-    1234 & Rand & Crossval & 50 & Meta & 0.97 $\pm$ 0.06 & 0.97 $\pm$ 0.06 & 0.98 $\pm$ 0.04 & 0.97 $\pm$ 0.06 & 0.998 $\pm$ 0.005 \\
-    1234 & DBC+R & Crossval & 50 & Meta & 0.96 $\pm$ 0.06 & 0.96 $\pm$ 0.06 & 0.97 $\pm$ 0.04 & 0.96 $\pm$ 0.05 & 0.998 $\pm$ 0.005 \\
+    {}          & \HBreak{Clust.\\Sel.(1)} & \HBreak{Clf.\\Sel.(2)} & \HBreak{Feats.\\\%(3)} & \HBreak{Fusion\\(4)} & \HBreak{Num.\\Clust.} & \textbf{Acc.} & \textbf{Recall} & \textbf{Prec.} & \textbf{F1}        & \textbf{AUC} \\ \midrule
+    0 & - & - & 100 & MV & 3 & 0.6(1) & 0.6(1) & 0.9(1) & 0.6(1) & 0.7(1) \\
+    1 & DBC & - & 100 & MV & 2 & 0.55(5) & 0.55(5) & 0.93(1) & 0.65(4) & 0.99(1) \\
+    1 & Rand & - & 100 & MV & 2 & 0.60(9) & 0.60(9) & 0.91(3) & 0.67(5) & 0.99(1) \\
+    1 & DBC+R & - & 100 & MV & 2 & 0.60(8) & 0.60(8) & 0.91(3) & 0.66(5) & 0.99(1) \\
+    2 & - & CV & 100 & MV & 3 & 0.6(1) & 0.6(1) & 0.8(1) & 0.7(1) & 0.8(1) \\
+    2 & - & PSO & 100 & MV & 3 & 0.87(9) & 0.87(9) & 0.94(5) & 0.89(7) & 0.95(4) \\
+    3 & - & - & 75 & MV & 3 & 0.6(1) & 0.6(1) & 0.8(1) & 0.6(1) & 0.7(1) \\
+    3 & - & - & 50 & MV & 3 & 0.64(8) & 0.64(8) & 0.9(1) & 0.72(9) & 0.77(9) \\
+    4 & - & - & 100 & WM & 3 & 0.95(5) & 0.95(5) & 0.96(4) & 0.95(5) & 0.99(1) \\
+    4 & - & - & 100 & MC & 3 & 0.50(8) & 0.50(8) & 0.87(8) & 0.59(7) & 0.7(1) \\
+    123 & DBC & CV & 75 & MV & 2 & 0.61(7) & 0.61(7) & 0.94(4) & 0.71(6) & 0.99(1) \\
+    123 & Rand & CV & 75 & MV & 2 & 0.65(6) & 0.65(6) & 0.93(5) & 0.72(5) & 0.99(1) \\
+    123 & DBC+R & CV & 75 & MV & 2 & 0.65(6) & 0.65(6) & 0.94(5) & 0.73(5) & 0.99(1) \\
+    123 & DBC & CV & 50 & MV & 2 & 0.62(5) & 0.62(5) & 0.96(4) & 0.72(6) & 0.97(3) \\
+    123 & Rand & CV & 50 & MV & 2 & 0.65(5) & 0.65(5) & 0.95(5) & 0.74(5) & 0.98(3) \\
+    123 & DBC+R & CV & 50 & MV & 2 & 0.65(3) & 0.65(3) & 0.97(5) & 0.75(5) & 0.98(3) \\
+    124 & DBC & CV & 100 & WM & 2 & 0.98(4) & 0.98(4) & 0.98(3) & 0.98(4) & 0.99(2) \\
+    124 & Rand & CV & 100 & WM & 2 & 0.98(4) & 0.98(4) & 0.98(4) & 0.98(4) & 0.99(2) \\
+    124 & DBC+R & CV & 100 & WM & 2 & 0.98(4) & 0.98(4) & 0.98(4) & 0.98(4) & 0.99(2) \\
+    124 & DBC & CV & 100 & MC & 2 & 0.98(4) & 0.98(4) & 0.98(3) & 0.98(4) & 1.000(1) \\
+    124 & Rand & CV & 100 & MC & 2 & 0.98(4) & 0.98(4) & 0.98(4) & 0.98(4) & 0.999(1) \\
+    124 & DBC+R & CV & 100 & MC & 2 & 0.98(4) & 0.98(4) & 0.98(4) & 0.98(4) & 0.999(1) \\
+    124 & DBC & PSO & 100 & WM & 2 & 0.96(3) & 0.96(3) & 0.97(2) & 0.96(3) & 0.99(1) \\
+    124 & Rand & PSO & 100 & WM & 2 & 0.95(5) & 0.95(5) & 0.96(3) & 0.95(4) & 0.98(1) \\
+    124 & DBC+R & PSO & 100 & WM & 2 & 0.96(3) & 0.96(3) & 0.96(2) & 0.96(3) & 0.99(1) \\
+    124 & DBC & PSO & 100 & MC & 2 & 0.98(2) & 0.98(2) & 0.98(2) & 0.98(2) & 0.99(2) \\
+    124 & Rand & PSO & 100 & MC & 2 & 0.98(2) & 0.98(2) & 0.98(2) & 0.98(2) & 1.00(1) \\
+    124 & DBC+R & PSO & 100 & MC & 2 & 0.97(2) & 0.97(2) & 0.97(2) & 0.97(2) & 1.00(1) \\
+    1234 & DBC & CV & 75 & WM & 2 & 0.98(4) & 0.98(4) & 0.98(3) & 0.98(4) & 0.99(2) \\
+    1234 & Rand & CV & 75 & WM & 2 & 0.98(4) & 0.98(4) & 0.98(4) & 0.98(4) & 0.99(2) \\
+    1234 & DBC+R & CV & 75 & WM & 2 & 0.98(4) & 0.98(4) & 0.98(4) & 0.98(4) & 0.99(2) \\
+    1234 & DBC & CV & 50 & WM & 2 & 0.96(5) & 0.96(5) & 0.97(4) & 0.96(5) & 0.98(2) \\
+    1234 & Rand & CV & 50 & WM & 2 & 0.97(5) & 0.97(5) & 0.98(3) & 0.97(5) & 0.99(2) \\
+    1234 & DBC+R & CV & 50 & WM & 2 & 0.96(5) & 0.96(5) & 0.97(3) & 0.96(5) & 0.99(2) \\
+    1234 & DBC & CV & 75 & MC & 2 & 0.98(4) & 0.98(4) & 0.98(3) & 0.98(4) & 0.999(3) \\
+    1234 & Rand & CV & 75 & MC & 2 & 0.98(4) & 0.98(4) & 0.98(4) & 0.98(4) & 0.998(4) \\
+    1234 & DBC+R & CV & 75 & MC & 2 & 0.98(4) & 0.98(4) & 0.98(4) & 0.98(4) & 0.998(4) \\
+    1234 & DBC & CV & 50 & MC & 2 & 0.97(4) & 0.97(4) & 0.98(3) & 0.97(4) & 0.999(3) \\
+    1234 & Rand & CV & 50 & MC & 2 & 0.97(5) & 0.97(5) & 0.98(3) & 0.97(5) & 0.998(4) \\
+    1234 & DBC+R & CV & 50 & MC & 2 & 0.96(5) & 0.96(5) & 0.97(3) & 0.96(5) & 0.998(4) \\
     \bottomrule
     \end{tabular}
     }
