Little update to latex table.

--- a/results/latex/pima.tex
+++ b/results/latex/pima.tex
@@ -1,7 +1,8 @@
 \begin{table}[ht]
     \centering
-    \caption{Ablation study results for the Pima biabetes dataset. Columns Clust. Sel.(1), Clf. Self.(2), Feats.\%(3) and Fusion(4) denote, respectively, the clustering evaluation metric, method for base classifier selection, percentage of features and the ensemble fusion strategy. It presents 5 different classification metrics and the average number of clusters. Numbers in parentheses indicate one standard deviation and apply to the last significant digit of each value.}
+    \caption{Ablation results on the Pima biabetes dataset. Columns Clust. Sel. (1), Clf. Sel. (2), Feats.\% (3), and Fusion (4) denote the clustering metric, classifier-selection method, feature percentage, and fusion strategy, respectively. Performance metrics are reported as mean (std), where the value in parentheses indicates the standard deviation corresponding to the last reported digit. Bold numbers highlight the best result for each metric; in the case of ties, the value with the lower standard deviation is selected.}
     \label{tab:ablation_pima}
+    \rowcolors{1}{}{lightgray}
     \resizebox{\textwidth}{!}{
     \begin{tabular}{lccccllllll}
     \toprule
